--- a/configs/extracted/G29.96-0.02_alma1.cfg
+++ b/configs/extracted/G29.96-0.02_alma1.cfg
@@ -7,8 +7,8 @@ distance = 5.26 kpc
 # Paper III
 vlsr = 97.25 km/s
 radius = 0.067 arcsec
-sourcedata = /Volumes/Pegasus32 R8/dihca/source_data
-subcubes = /Volumes/Pegasus32 R8/dihca/results/${name}/c5c8/per_hot_core/
+sourcedata = ../source_data
+subcubes = ../results/${name}/c5c8/per_hot_core/
 
 [b6_c8_continuum]
 type = fits_file
@@ -23,7 +23,7 @@ chan_width = 488 kHz
 
 [b6_c5c8_spw0_1000_CH3OH_18_3_15_-17_4_14_A_vt_0]
 type = spectral_cube
-file = ../results/G29.96-0.02/c5c8/per_hot_core/line_cubes/hmc1_CH3OH_18_3_15_-17_4_14_A_vt_0_nchans40.fits
+file = ../results/G29.96-0.02/c5c8/per_hot_core/line_cubes/alma1_CH3OH_18_3_15_-17_4_14_A_vt_0_nchans40.fits
 rms = 1.7 mJy/beam
 molecules = CH3OH
 chan_width = 488 kHz
