--- a/configs/extracted/W33A_alma1b.cfg
+++ b/configs/extracted/W33A_alma1b.cfg
@@ -1,11 +1,11 @@
 [INFO]
 name = W33A
-alma = 1
-ra = 18h14m39.51004s
-dec = -17d52m00.1338s
+alma = 1b
+ra = 18h14m39.52226s
+dec = -17d52m00.4531s
 frame = icrs
 distance = 2.53 kpc
-vlsr = 37.94 km/s
+vlsr = 38.2 km/s
 radius = 0.0187 arcsec
 sourcedata = ../source_data
 subcubes = ../results/${name}/c5c8/per_hot_core/
