--- a/configs/extracted/pvmaps/G29.96-0.02_alma1_rotation.cfg
+++ b/configs/extracted/pvmaps/G29.96-0.02_alma1_rotation.cfg
@@ -1,6 +1,6 @@
 [DEFAULT]
-moldir = /Volumes/Pegasus32 R8/dihca/scripts/molecules
-pas = 65 80 155 170 deg
+moldir = ./molecules
+pas = 65 80 100 110 155 170 190 200 245 deg
 
 [CH3OH_spw0]
 molecule = CH3OH
@@ -8,7 +8,7 @@ qns = 18(3,15)-17(4,14)A,vt=0
 line_lists = CDMS
 restore_molecule = ${moldir}/ch3oh.json
 source_section = b6_c5c8_spw0_1000
-length = 1 arcsec
+length = 2 arcsec
 width = 0.05 arcsec
 freq_slab = 28 MHz
 
