--- a/configs/extracted/pvmaps/G333.12-0.56_alma1_rotation.cfg
+++ b/configs/extracted/pvmaps/G333.12-0.56_alma1_rotation.cfg
@@ -1,6 +1,6 @@
 [DEFAULT]
-moldir = /Volumes/Pegasus32 R8/dihca/scripts/molecules
-pas = 45 85 135 175 deg
+moldir = ./molecules
+pas = 135 175 225 265 deg
 
 [CH3OH_spw0]
 molecule = CH3OH
