--- a/configs/extracted/pvmaps/G333.23-0.06_alma3_rotation.cfg
+++ b/configs/extracted/pvmaps/G333.23-0.06_alma3_rotation.cfg
@@ -1,6 +1,6 @@
 [DEFAULT]
-moldir = /Volumes/Pegasus32 R8/dihca/scripts/molecules
-pas = 40 130 deg
+moldir = ./molecules
+pas = 190 200 210 220 280 290 300 310 deg
 
 [CH3CN_K2]
 molecule = CH3CN
