--- a/configs/extracted/pvmaps/G333.46-0.16_alma7_rotation.cfg
+++ b/configs/extracted/pvmaps/G333.46-0.16_alma7_rotation.cfg
@@ -1,6 +1,6 @@
 [DEFAULT]
-moldir = /Volumes/Pegasus32 R8/dihca/scripts/molecules
-pas =  40 70 130 160 deg
+moldir = ./molecules
+pas =  130 160 220 250 deg
 
 [CH3OH_spw0]
 molecule = CH3OH
