--- a/configs/extracted/pvmaps/G343.12-0.06_alma1_rotation.cfg
+++ b/configs/extracted/pvmaps/G343.12-0.06_alma1_rotation.cfg
@@ -1,6 +1,6 @@
 [DEFAULT]
-moldir = /Volumes/Pegasus32 R8/dihca/scripts/molecules
-pas = 45 50 60 135 140 150 deg
+moldir = ./molecules
+pas = 225 230 240 315 320 330 deg
 
 [CH3OH_spw0]
 molecule = CH3OH
