--- a/configs/extracted/pvmaps/G35.03+0.35_A_alma1_rotation.cfg
+++ b/configs/extracted/pvmaps/G35.03+0.35_A_alma1_rotation.cfg
@@ -1,6 +1,6 @@
 [DEFAULT]
-moldir = /Volumes/Pegasus32 R8/dihca/scripts/molecules
-pas = 40 75 130 165 deg
+moldir = ./molecules
+pas = 310 345 40 75 deg
 
 [CH3CN_K2]
 molecule = CH3CN
@@ -8,7 +8,7 @@ qns = 12(2)-11(2)
 line_lists = CDMS
 restore_molecule = ${moldir}/ch3cn.json
 source_section = b6_c5c8_spw3
-length = 1 arcsec
+length = 2 arcsec
 width = 0.05 arcsec
 freq_slab = 28 MHz
 
@@ -18,6 +18,6 @@ qns = 12(3)-11(3)
 line_lists = CDMS
 restore_molecule = ${moldir}/ch3cn.json
 source_section = b6_c5c8_spw3
-length = 1 arcsec
+length = 2 arcsec
 width = 0.05 arcsec
 freq_slab = 28 MHz
