--- a/configs/extracted/pvmaps/IRAS_18182-1433_alma3_rotation.cfg
+++ b/configs/extracted/pvmaps/IRAS_18182-1433_alma3_rotation.cfg
@@ -1,5 +1,5 @@
 [DEFAULT]
-moldir = /Volumes/Pegasus32 R8/dihca/scripts/molecules
+moldir = ./molecules
 pas = 10 25 40 100 115 130 deg
 
 [CH3OH_spw0]
