--- a/configs/extracted/pvmaps/W33A_alma1a_rotation.cfg
+++ b/configs/extracted/pvmaps/W33A_alma1a_rotation.cfg
@@ -1,6 +1,6 @@
 [DEFAULT]
 moldir = ./molecules
-pas = 30 35 120 125 deg
+pas = -30 -40 0 30 35 40 50 60 70 90 120 125 130 150 160 deg
 
 [CH3OH_spw0]
 molecule = CH3OH
