--- a/configs/extracted/summary.cfg
+++ b/configs/extracted/summary.cfg
@@ -1,25 +1,461 @@
 [DEFAULT]
-results = /Volumes/Pegasus32 R8/dihca/results
-basedir = ${results}/${name}/c5c8/per_hot_core/
-
-[G335.579-0.272_hmc2]
-name = G335.579-0.272
-hmc = 2
-distance = 3.25 kpc
-vlsr = -53.1 km/s
-pa = 202
-pvmap = ${basedir}/hmc2_pvmaps/${name}_hmc2_rotation.CH3OH_spw0.ra247.74430_dec-48.73089.PA${pa}.fits
-pvnoise = 1.5 mJy/beam
 pvnsigma = 3
 pvquadrant = 1
+basedir = ../results
+results = ${basedir}/${name}/c5c8/per_hot_core/alma${alma}_pvmaps
 
-[G335.78+0.17_hmc1]
+[G10.62-0.38_alma1a]
+name = G10.62-0.38
+alma = 1a
+distance = 4.95 kpc
+vlsr = 0.851 km/s
+paval = 0
+pvmap = ${results}/${name}_alma${alma}_rotation.CH3CN_K3.ra272.61920_dec-19.93041.PA${paval}.fits
+pvnoise = 1.6 mJy/beam
+xlim = -0.5 0.5 arcsec
+ylim = -10 8 km/s
+pvnsigma = 4
+nplot = 1
+
+[G10.62-0.38_alma1c]
+name = G10.62-0.38
+alma = 1c
+distance = 4.95 kpc
+vlsr = -1.35 km/s
+paval = 180
+pvmap = ${results}/${name}_alma${alma}_rotation.CH3CN_K3.ra272.61971_dec-19.93040.PA${paval}.fits
+pvnoise = 1.6 mJy/beam
+xlim = -0.5 0.5 arcsec
+pvnsigma = 6
+nplot = 1
+
+[G11.1-0.12_alma1]
+name = G11.1-0.12
+alma = 1
+distance = 3.0 kpc
+vlsr = -31.85 km/s
+paval = -65
+pvmap = ${results}/${name}_alma${alma}_rotation.CH3CN_K3.ra272.61770_dec-19.37509.PA${paval}.fits
+pvnoise = 1.3 mJy/beam
+nplot = 1
+
+[G11.92-0.61_alma1a]
+name = G11.92-0.61
+alma = 1a
+distance = 3.37 kpc
+vlsr = 35.1 km/s
+paval = 129
+pvmap = ${results}/${name}_alma${alma}_rotation.CH3CN_K3.ra273.49213_dec-18.90561.PA${paval}.fits
+pvnoise = 1.1 mJy/beam
+ylim = 20 50 km/s
+pvnsigma = 8
+nplot = 2
+
+[G11.92-0.61_alma1b]
+name = G11.92-0.61
+alma = 1b
+distance = 3.37 kpc
+vlsr = 37 km/s
+paval = -15
+pvmap = ${results}/${name}_alma${alma}_rotation.CH3CN_K3.ra273.49220_dec-18.90576.PA${paval}.fits
+pvnoise = 1.1 mJy/beam
+#nplot = 2
+
+[G11.92-0.61_alma3]
+name = G11.92-0.61
+alma = 3
+distance = 3.37 kpc
+vlsr = 35.7 km/s
+paval = 225
+pvmap = ${results}/${name}_alma3_rotation.CH3CN_K3.ra273.49223_dec-18.90452.PA${paval}.fits
+pvnoise = 1.1 mJy/beam
+pvnsigma = 4
+nplot = 2
+
+[G29.96-0.02_alma1]
+name = G29.96-0.02
+alma = 1
+distance = 5.26 kpc
+vlsr = 97.25 km/s
+paval = 155
+pvmap = ${results}/${name}_alma1_rotation.CH3OH_spw0.ra281.51574_dec-2.65622.PA${paval}.fits
+pvnoise = 1.4 mJy/beam
+pvnsigma = 5
+ylim = 85 110 km/s
+nplot = 2
+
+[G333.12-0.56_alma1]
+name = G333.12-0.56
+alma = 1
+distance = 3.3 kpc
+vlsr = -58.47 km/s
+paval = 135
+pvmap = ${results}/${name}_alma1_rotation.CH3OH_spw0.ra245.39740_dec-50.68239.PA${paval}.fits
+pvnoise = 1.8 mJy/beam
+nplot = 3
+
+[G333.12-0.56_alma2]
+name = G333.12-0.56
+alma = 2
+distance = 3.3 kpc
+vlsr = -54.1 km/s
+paval = 90
+pvmap = ${results}/${name}_alma2_rotation.CH3CN_K3.ra245.40106_dec-50.67979.PA${paval}.fits
+pvnoise = 1.7 mJy/beam
+#nplot = 3
+
+[G333.23-0.06_alma3]
+name = G333.23-0.06
+alma = 3
+distance = 5.2 kpc
+vlsr = -87.04 km/s
+paval = 220
+pvmap = ${results}/${name}_alma3_rotation.CH3CN_K3.ra244.96202_dec-50.25292.PA${paval}.fits
+pvnoise = 1.1 mJy/beam
+pvnsigma = 5
+nplot = 3
+
+[G333.46-0.16_alma1]
+name = G333.46-0.16
+alma = 1
+distance = 2.9 kpc
+vlsr = -43.55 km/s
+paval = 130
+pvmap = ${results}/${name}_alma1_rotation.CH3OH_spw0.ra245.33407_dec-50.16288.PA${paval}.fits
+pvnoise = 1.9 mJy/beam
+#nplot = 3
+
+[G333.46-0.16_alma7]
+name = G333.46-0.16
+alma = 7
+distance = 2.9 kpc
+vlsr = -43.2 km/s
+paval = 130
+pvmap = ${results}/${name}_alma7_rotation.CH3CN_K3.ra245.33405_dec-50.16358.PA${paval}.fits
+pvnoise = 1.7 mJy/beam
+nplot = 4
+
+[G335.579-0.272_alma1]
+name = G335.579-0.272
+alma = 1
+distance = 3.25 kpc
+vlsr = -46.9 km/s
+paval = 150
+pvmap = ${results}/${name}_alma1_rotation.CH3OH_spw0.ra247.74486_dec-48.73163.PA${paval}.fits
+pvnoise = 1.4 mJy/beam
+pvnsigma = 4
+nplot = 4
+
+[G335.579-0.272_alma3]
+name = G335.579-0.272
+alma = 3
+distance = 3.25 kpc
+vlsr = -53.1 km/s
+paval = 202
+pvmap = ${results}/${name}_alma3_rotation.CH3OH_spw0.ra247.74430_dec-48.73089.PA${paval}.fits
+pvnoise = 1.4 mJy/beam
+nplot = 4
+
+[G335.78+0.17_alma1]
 name = G335.78+0.17
-hmc = 1
+alma = 1
 distance = 3.2 kpc
 vlsr = -48.94 km/s
-pa = 34
-pvmap = ${basedir}/hmc1_pvmaps/${name}_hmc1_rotation.CH3OH_spw0.ra247.44723_dec-48.26452.PA${pa}.fits
+paval = 215
+pvmap = ${results}/${name}_alma1_rotation.CH3OH_spw0.ra247.44723_dec-48.26452.PA${paval}.fits
+pvnoise = 1.6 mJy/beam
+pvnsigma = 6
+nplot = 4
+
+[G335.78+0.17_alma2]
+name = G335.78+0.17
+alma = 2
+distance = 3.2 kpc
+vlsr = -50.51 km/s
+paval = 65
+pvmap = ${results}/${name}_alma2_rotation.CH3OH_spw0.ra247.44221_dec-48.26388.PA${paval}.fits
 pvnoise = 1.8 mJy/beam
+nplot = 5
+
+[G336.01-0.82_alma1]
+name = G336.01-0.82
+alma = 1
+distance = 3.1 kpc
+vlsr = -47.2 km/s
+paval = 125
+pvmap = ${results}/${name}_alma1_rotation.CH3OH_spw0.ra248.78858_dec-48.77991.PA${paval}.fits
+pvnoise = 1.7 mJy/beam
+pvnsigma = 4
+nplot = 5
+
+[G34.43+0.24_alma1]
+name = G34.43+0.24
+alma = 1
+distance = 3.03 kpc
+vlsr = 58.44 km/s
+paval = 280
+pvmap = ${results}/${name}_alma1_rotation.CH3OH_spw0.ra283.32503_dec1.42373.PA${paval}.fits
+pvnoise = 1.3 mJy/beam
+xlim = -0.5 0.5 arcsec
+pvnsigma = 6
+nplot = 5
+
+[G343.12-0.06_alma1]
+name = G343.12-0.06
+alma = 1
+distance = 2.9 kpc
+vlsr = -33.71 km/s
+paval = 230
+pvmap = ${results}/${name}_alma1_rotation.CH3OH_spw0.ra254.57170_dec-42.86873.PA${paval}.fits
+pvnoise = 1.1 mJy/beam
+pvnsigma = 6
+#nplot = 5
+
+[G35.03+0.35_A_alma1]
+name = G35.03+0.35_A
+alma = 1
+distance = 2.32 kpc
+vlsr = 45.94 km/s
+paval = 310
+pvmap = ${results}/${name}_alma1_rotation.CH3CN_K3.ra283.50271_dec2.02204.PA${paval}.fits
+pvnoise = 1.9 mJy/beam
 pvnsigma = 5
-pvquadrant = 2
+nplot = 6
+
+[G35.13-0.74_alma1]
+name = G35.13-0.74
+alma = 1
+distance = 2.2 kpc
+vlsr = 35.93 km/s
+paval = 45
+pvmap = ${results}/${name}_alma1_rotation.CH3CN_K3.ra284.52557_dec1.61873.PA${paval}.fits
+pvnoise = 2.5 mJy/beam
+pvnsigma = 5
+nplot = 6
+
+[G35.13-0.74_alma2]
+name = G35.13-0.74
+alma = 2
+distance = 2.2 kpc
+vlsr = 34.39 km/s
+paval = 75
+pvmap = ${results}/${name}_alma2_rotation.CH3CN_K3.ra284.52570_dec1.61893.PA${paval}.fits
+pvnoise = 2.5 mJy/beam
+pvnsigma = 6
+nplot = 6
+
+[G35.13-0.74_alma6]
+name = G35.13-0.74
+alma = 6
+distance = 2.2 kpc
+vlsr = 35.53 km/s
+paval = 95
+pvmap = ${results}/${name}_alma6_rotation.CH3CN_K3.ra284.52617_dec1.61867.PA${paval}.fits
+pvnoise = 2.5 mJy/beam
+pvnsigma = 5
+nplot = 6
+
+[G35.20-0.74_N_alma1]
+name = G35.20-0.74_N
+alma = 1
+distance = 2.19 kpc
+vlsr = 32.11 km/s
+paval = -10
+pvmap = ${results}/${name}_alma1_rotation.CH3OH_spw0.ra284.55397_dec1.67705.PA${paval}.fits
+pvnoise = 2.5 mJy/beam
+pvnsigma = 6
+nplot = 7
+
+[G35.20-0.74_N_alma2]
+name = G35.20-0.74_N
+alma = 2
+distance = 2.19 kpc
+vlsr = 30.0 km/s
+paval = -23
+pvmap = ${results}/${name}_alma2_rotation.CH3OH_spw0.ra284.55432_dec1.67665.PA${paval}.fits
+pvnoise = 2.5 mJy/beam
+pvnsigma = 3
+xlim = -0.35 0.5 arcsec
+nplot = 11
+
+[IRAS_165623959_alma1]
+name = IRAS_165623959
+alma = 1
+distance = 1.7 kpc
+vlsr = -16.86 km/s
+paval = 10
+pvmap = ${results}/${name}_alma1_rotation.CH3CN_K3.ra254.92344_dec-40.06212.PA${paval}.fits
+pvnoise = 1.4 mJy/beam
+pvnsigma = 6
+nplot = 7
+
+[IRAS_165623959_alma2]
+name = IRAS_165623959
+alma = 2
+distance = 1.7 kpc
+vlsr = -11.65 km/s
+paval = 225
+pvmap = ${results}/${name}_alma2_rotation.CH3CN_K3.ra254.92120_dec-40.06086.PA${paval}.fits
+pvnoise = 1.4 mJy/beam
+pvnsigma = 6
+#nplot = 7
+
+[IRAS_180891732_alma1]
+name = IRAS_180891732
+alma = 1
+distance = 2.34 kpc
+vlsr = 32.88 km/s
+paval = 245
+pvmap = ${results}/${name}_alma1_rotation.CH3CN_K3.ra272.96439_dec-17.52467.PA${paval}.fits
+pvnoise = 1.6 mJy/beam
+ylim = 20 46 km/s
+xlim = -0.7 0.7 arcsec
+pvnsigma = 7
+nplot = 8
+
+[IRAS_180891732_alma3]
+name = IRAS_180891732
+alma = 3
+distance = 2.34 kpc
+vlsr = 33.02 km/s
+paval = 315
+pvmap = ${results}/${name}_alma3_rotation.CH3CN_K3.ra272.96417_dec-17.52498.PA${paval}.fits
+pvnoise = 1.6 mJy/beam
+pvnsigma = 4
+nplot = 8
+
+[IRAS_18182-1433_alma1]
+name = IRAS_18182-1433
+alma = 1
+distance = 3.58 kpc
+vlsr = 62.78 km/s
+paval = 40
+pvmap = ${results}/${name}_alma1_rotation.CH3CN_K3.ra275.28771_dec-14.52994.PA${paval}.fits
+pvnoise = 1.4 mJy/beam
+pvnsigma = 3
+#nplot = 8
+
+[IRAS_18182-1433_alma2]
+name = IRAS_18182-1433
+alma = 2
+distance = 3.58 kpc
+vlsr = 60.64 km/s
+paval = 0
+pvmap = ${results}/${name}_alma2_rotation.CH3CN_K3.ra275.28741_dec-14.52989.PA${paval}.fits
+pvnoise = 1.4 mJy/beam
+pvnsigma = 5
+#nplot = 8
+
+[IRAS_18182-1433_alma3]
+name = IRAS_18182-1433
+alma = 3
+distance = 3.58 kpc
+vlsr = 61.12 km/s
+paval = 10
+pvmap = ${results}/${name}_alma3_rotation.CH3CN_K3.ra275.28802_dec-14.53017.PA${paval}.fits
+pvnoise = 1.4 mJy/beam
+pvnsigma = 4
+nplot = 9
+
+[IRAS_18182-1433_alma5]
+name = IRAS_18182-1433
+alma = 5
+distance = 3.58 kpc
+vlsr = 61.12 km/s
+paval = 40
+pvmap = ${results}/${name}_alma5_rotation.CH3CN_K3.ra275.28757_dec-14.52998.PA${paval}.fits
+pvnoise = 1.4 mJy/beam
+pvnsigma = 6
+#nplot = 9
+
+[NGC_6334_I_N_alma1]
+name = NGC_6334_I_N
+alma = 1
+distance = 1.35 kpc
+vlsr = -1.77 km/s
+paval = 310
+pvmap = ${results}/${name}_alma1_rotation.CH3OH_spw0.ra260.22996_dec-35.75110.PA${paval}.fits
+pvnoise = 1.5 mJy/beam
+nplot = 9
+
+[NGC_6334_I_N_alma2]
+name = NGC_6334_I_N
+alma = 2
+distance = 1.35 kpc
+vlsr = -3.9 km/s
+paval = -55
+pvmap = ${results}/${name}_alma2_rotation.CH3OH_spw0.ra260.22747_dec-35.75482.PA${paval}.fits
+pvnoise = 1.5 mJy/beam
+nplot = 9
+
+[NGC_6334_I_N_alma4]
+name = NGC_6334_I_N
+alma = 4
+distance = 1.35 kpc
+vlsr = -6.7 km/s
+paval = 130
+pvmap = ${results}/${name}_alma4_rotation.CH3CN_K3.ra260.22863_dec-35.75179.PA${paval}.fits
+pvnoise = 1.7 mJy/beam
+nplot = 10
+
+[NGC_6334_I_N_alma6]
+name = NGC_6334_I_N
+alma = 6
+distance = 1.35 kpc
+vlsr = -7.2 km/s
+paval = 130
+pvmap = ${results}/${name}_alma6_rotation.CH3CN_K3.ra260.22758_dec-35.75241.PA${paval}.fits
+pvnoise = 1.7 mJy/beam
+nplot = 10
+
+[NGC_6334_I_N_alma11]
+name = NGC_6334_I_N
+alma = 11
+distance = 1.35 kpc
+vlsr = -5 km/s
+paval = 160
+pvmap = ${results}/${name}_alma11_rotation.CH3CN_K3.ra260.22849_dec-35.75168.PA${paval}.fits
+pvnoise = 1.7 mJy/beam
+pvnsigma = 3
+#nplot = 10
+
+[W33A_alma1a]
+name = W33A
+alma = 1a
+distance = 2.53 kpc
+vlsr = 37.9 km/s
+paval = -30
+pvmap = ${results}/${name}_alma1a_rotation.CH3CN_K3.ra273.66463_dec-17.86670.PA${paval}.fits
+pvnoise = 1.3 mJy/beam
+nplot = 10
+xlim = -0.5 0.5 arcsec
+
+[W33A_alma1b]
+name = W33A
+alma = 1b
+distance = 2.53 kpc
+vlsr = 37.9 km/s
+paval = 90
+pvmap = ${results}/${name}_alma1b_rotation.CH3CN_K3.ra273.66468_dec-17.86679.PA${paval}.fits
+pvnoise = 1.3 mJy/beam
+pvnsigma = 6
+#nplot = 11
+
+#[]
+#name = 
+#alma = 
+#distance = 
+#vlsr = 
+#paval = 
+#pvmap = 
+#pvnoise = 
+
+#[]
+#name = 
+#alma = 
+#distance = 
+#vlsr = 
+#paval = 
+#pvmap = 
+#pvnoise = 
+
