--- a/configs/plots/papers/group_moments.4.cfg
+++ b/configs/plots/papers/group_moments.4.cfg
@@ -1,162 +1,186 @@
 [DEFAULT]
 ncols = 3
-nrows = 1
+nrows = 2
 sharex = false 
 sharey = false
-styles = maps inferno
+styles = maps vik
+name = Velocity
+unit = km/s
+stretch = linear
 vertical_cbar = false
 horizontal_cbar = true
 left = 1.3
 right = 0.15
 top = 0.6
 bottom = 0.5
-hspace = 0.25
+hspace = 0.1
+vspace = -0.2
 cbar_spacing = 0.1
+override_xlabel = true
+override_ylabel = true
+set_xlabel = false
+set_ylabel = false
 label_xpad = 0.45
 label_ypad = -0.7
 xticks_fmt = hh:mm:ss.ss
 yticks_fmt = dd:mm:ss.s
-contour_linewidth = 0.5
+compute_ticks = false
+ticks_color = k
+scale_color = k
+self_contours = false
+contour_linewidth = 2.0
+contour_colors = #7f7f7f
+contour_stretch = log
+negative_nsigma = 3
 # Units
 ignore_units = false
 labelpad = 5
 labelpad_cbar2 = 5
+# Recenter
+radius = 0.5 arcsec
 # Beam
 plot_beam = true
-beam_color = k
+beam_zorder = 4
+beam_color = #3bb802
+#Artists
+markers = ${center}
+markers_marker = ^
+markers_mec = #3bb802
+markers_fillstyle = none
+markers_ms = 10
+markers_mew = 4.0
+scale_size = 500 au
+arrows = ${center}
+arrows_color = #f93dff
+arrows_linewidth = 3
 # Non-standard
-basedir = /Volumes/Pegasus32 R8/dihca
+basedir = ../
 contdir = ${basedir}/source_data/continuum
 
-[NGC6334IN_hmc3_moment1]
+[NGC6334IN_alma4_moment1]
 loc = 0 0
 source = NGC_6334_I_N
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc3_moments
-image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width40.subcube.moment1.fits
-name = Velocity
-unit = km/s
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma4_moments
+image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
+shift_data = 6.7 km/s
+label = NGC 6334I(N) ALMA4 CH$$_3$$CN
+# Range
+vmin = -6 km/s
+vmax = 6 km/s
+# Recenter
+center = 17h20m54.87122s -35d45m06.4309s icrs
+radius = 0.4 arcsec
+# Artists
+scale = 17h20m54.842s -35d45m06.8s icrs
+scale_distance = 1.35 kpc
+arrows_pa = 130 deg
+
+[NGC6334IN_alma6_moment1]
+loc = 0 1
+source = NGC_6334_I_N
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma6_moments
+image = ${results}/CH3CN_12_3_-11_3__width40.subcube.moment1.fits
 shift_data = 7.2 km/s
 label = NGC 6334I(N) ALMA6 CH$$_3$$OH
-stretch = linear
-with_style = vik
-compute_ticks = false
-ticks_color = k
-scale_color = k
-# Contours
-self_contours = false
+# Range
 vmin = -8 km/s
 vmax = 8 km/s
 # Recenter
 center = 17h20m54.61962s -35d45m08.6715s icrs
 radius = 0.3 arcsec
 # Artists
-markers = ${center}
-markers_marker = x
-markers_mec = #1cef40
-markers_fillstyle = none
-markers_ms = 7
 scale = 17h20m54.598s -35d45m08.9s icrs
 scale_distance = 1.35 kpc
-scale_size = 500 au
-arrows = ${center}
 arrows_pa = 130 deg
-arrows_color = #667298
-arrows_linewidth = 3
 
-[NGC6334IN_hmc3_continuum]
-loc = 0 0
-contour = ${contdir}/NGC_6334_I_N.config8.cont_avg.selfcal_0.5_hogbom.image.fits
-contour_colors = #7f7f7f
-contour_stretch = log
-contour_linewidth = 1
-negative_nsigma = 3
-ignore_units = true
-
-[NGC6334IN_hmc5_moment1]
-loc = 0 1
+[NGC6334IN_alma11_moment1]
+loc = 0 2
 source = NGC_6334_I_N
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc5_moments
-image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width30.subcube.moment1.fits
-name = Velocity
-unit = km/s
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma11_moments
+image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
 shift_data = 5.0 km/s
 label = NGC 6334I(N) ALMA11 CH$$_3$$OH
-stretch = linear
-with_style = vik
-compute_ticks = false
-ticks_color = k
-scale_color = k
-# Contours
-self_contours = false
+# Range
 vmin = -8 km/s
 vmax = 8 km/s
 # Recenter
 center = 17h20m54.83871s -35d45m06.0527s icrs
 radius = 0.3 arcsec
 # Artists
-markers = ${center}
-markers_marker = x
-markers_mec = #1cef40
-markers_fillstyle = none
-markers_ms = 7
 scale = 17h20m54.818s -35d45m06.3s icrs
 scale_distance = 1.35 kpc
-scale_size = 500 au
-arrows = ${center}
-arrows_pa = 0 deg
-arrows_color = #667298
-arrows_linewidth = 3
+arrows_pa = 160 deg
 
-[NGC6334IN_hmc5_continuum]
-loc = 0 1
+[NGC6334IN_continuum]
+loc = 0 0, 0 1, 0 2
 contour = ${contdir}/NGC_6334_I_N.config8.cont_avg.selfcal_0.5_hogbom.image.fits
-contour_colors = #7f7f7f
-contour_stretch = log
-contour_linewidth = 1
-negative_nsigma = 3
 ignore_units = true
+beam_color = ${contour_colors}
+beam_zorder = 5
 
-[W33A_hmc1_moment1]
-loc = 0 2
+[W33A_alma1a_moment1]
+loc = 1 0
 source = W33A
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc1_moments
-image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width20.subcube.moment1.fits
-name = Velocity
-unit = km/s
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1a_moments
+image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
 shift_data = -37.9 km/s
-label = W33A ALMA1 CH$$_3$$OH
-stretch = linear
-with_style = vik
-compute_ticks = false
-ticks_color = k
-scale_color = k
-# Contours
-self_contours = false
+label = W33A ALMA1a CH$$_3$$OH
+# Range
 vmin = -6 km/s
 vmax = 6 km/s
 # Recenter
-center = 18h14m39.5097s -17d52m00.139s icrs
-radius = 0.5 arcsec
+center = 18h14m39.51004s -17d52m00.1338s icrs
 # Artists
-markers = ${center}
-markers_marker = x
-markers_mec = #1cef40
-markers_fillstyle = none
-markers_ms = 7
 scale = 18h14m39.48s -17d52m00.6s icrs
 scale_distance = 2.53 kpc
-scale_size = 500 au
-arrows = ${center}
-arrows_pa = 30 deg
-arrows_color = #667298
-arrows_linewidth = 3
+arrows_pa = -30 deg
 
-[W33A_hmc1_continuum]
-loc = 0 2
+[W33A_alma1b_moment1]
+loc = 1 1
+source = W33A
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1a_moments
+image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
+shift_data = -38.2 km/s
+label = W33A ALMA1b CH$$_3$$OH
+# Range
+vmin = -6 km/s
+vmax = 6 km/s
+# Recenter
+center = 18h14m39.52226s -17d52m00.4531s icrs
+radius = 0.3 arcsec
+# Artists
+scale = 18h14m39.505s -17d52m00.7s icrs
+scale_distance = 2.53 kpc
+arrows_pa = 90 deg
+
+[W33A_continuum]
+loc = 1 0, 1 1
 contour = ${contdir}/W33A.config8.cont_avg.selfcal_0.5_hogbom.image.fits
-contour_colors = #7f7f7f
-contour_stretch = log
-contour_linewidth = 1
-negative_nsigma = 3
 ignore_units = true
+beam_color = ${contour_colors}
+beam_zorder = 5
+
+[G35.20_alma2_moment1]
+loc = 1 2
+source = G35.20-0.74_N
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma2_moments
+image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width30.subcube.moment1.fits
+shift_data = -30.0 km/s
+label = G35.20-0.74 N ALMA2 CH$$_3$$OH
+# Range
+vmin = -3 km/s
+vmax = 3 km/s
+# Recenter
+center = 18h58m13.03690s +01d40m35.9257s icrs
+# Artists
+scale = 18h58m12.922s +01d40m37.0s icrs
+scale_distance = 2.19 kpc
+arrows_pa = -23 deg
+
+[G35.20_continuum]
+loc = 1 2
+contour = ${contdir}/G35.20-0.74_N.config8.cont_avg.selfcal_0.5_hogbom.image.fits
+ignore_units = true
+beam_color = ${contour_colors}
+beam_zorder = 5
 
