--- a/configs/plots/papers/group_pv_maps.4.cfg
+++ b/configs/plots/papers/group_pv_maps.4.cfg
@@ -1,7 +1,7 @@
 [DEFAULT]
 ncols = 2
 nrows = 4
-sharex = false 
+sharex = false
 sharey = false
 styles = maps inferno aspect_auto
 vertical_cbar = false
@@ -19,6 +19,9 @@ xunit = arcsec
 yunit = km/s
 xname = Offset
 yname = Velocity
+name = Intensity
+unit = mJy/beam
+stretch = linear
 nsigma = 3
 contour_linewidth = 0.5
 contour_stretch = log
@@ -26,221 +29,306 @@ xticks_fmt = {x:.1f}
 yticks_fmt = {x:.0f}
 inverty = true
 ticks_color = w
-# Artists
+label = ${source} ALMA${alma} PA=${paval}${deg}
 vlines = 0 arcsec
 vlines_linestyle = :
 vlines_color = #35ff2c
-# Vlsr
 hlines_linestyle = --
 hlines_color = #35ff2c
-# Contours
 self_contours = true
 vmin = 0. mJy/beam
-# Non-standard
-basedir = /Volumes/Pegasus32 R8/dihca
-contdir = ${basedir}/source_data/continuum
+basedir = ..
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma${alma}_pvmaps
 deg = $$^\circ$$
 
-[G335.579_hmc2_pvmap_rot]
+[G333.46_alma7_pvmap_rot]
 loc = 0 0
-source = G335.579-0.272
-paval = 202
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc2_pvmaps
-pvmap = ${results}/${source}_hmc2_rotation.CH3OH_spw0.ra247.74430_dec-48.73089.PA${paval}.fits
-name = Intensity
-unit = mJy/beam
-label = ${source} ALMA3 PA=${paval}${deg}
-stretch = linear
-#compute_ticks = false
-# Vlsr
-hlines = -53.1 km/s
-# Contours
-rms = 1.5 mJy/beam
-vmax = 16 mJy/beam
+source = G333.46-0.16
+alma = 7
+paval = 130
+pvmap = ${results}/${source}_alma7_rotation.CH3CN_K3.ra245.33405_dec-50.16358.PA${paval}.fits
+xlim = -0.4 0.4 arcsec
+hlines = -43.2 km/s
+rms = 1.7  mJy/beam
+vmax = 31 mJy/beam
 
-[G335.579_hmc2_pvmap_rot_edge]
+[G333.46-0.16_alma7_pvedge]
 loc = 0 0
-color = #46eff2
+structured_array = ../results/G333.46-0.16/c5c8/per_hot_core/alma7_pvmaps/G333.46-0.16_alma7_rotation.CH3CN_K3.ra245.33405_dec-50.16358.PA130.edge.dat
 marker = o
+color = #46eff2
 linestyle = none
 plot_keys = OFFSET, VRAD
-structured_array = /Volumes/Pegasus32 R8/dihca/results/G335.579-0.272/c5c8/per_hot_core/hmc2_pvmaps/G335.579-0.272_hmc2_rotation.CH3OH_spw0.ra247.74430_dec-48.73089.PA202.edge.dat
 
-[G335.579_hmc2_pvmap_rot_edge_kepfit]
+[G333.46-0.16_alma7_keplerian_fit]
 loc = 0 0
 function = piecewise_powerlaw
-xrange = -0.4950000000000396 0.4950000000000396 arcsec
-yunit = km / s
+xrange = -0.4900000000000392 0.4900000000000392 arcsec
+yunit = km/s
+sampling = 500
 linestyle = --
 color = #eb5252
-model_amplitude = -16.60530381698256
-model_x_0 = 0.03076923076923077
+model_mass = 11.573625272663154 solMass
+model_amplitude = -10.132761472616957
+model_x_0 = 0.034482758620689655
 model_alpha = 0.5
-model_cons = -48.44009310681318
-model_x_mid = 0.03360649691241415
-coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_cons} ${model_x_mid}
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_sd_mass = 0.6394808159203227 solMass
+model_vsys = -41.82786192628541
+model_offset0 = -0.017873012828318404
+model_sd_amplitude = 0.27993417884973937
+model_sd_x_0 = 0.0
+model_sd_alpha = 0.0
+model_sd_vsys = 0.0
+model_sd_offset0 = 0.0
+model_info = 1
 
-[G335.579_hmc2_pvmap_rot_edge_fit]
+[G333.46-0.16_alma7_unrestricted_fit]
 loc = 0 0
 function = piecewise_powerlaw
-xrange = -0.4950000000000396 0.4950000000000396 arcsec
+xrange = -0.4900000000000392 0.4900000000000392 arcsec
 yunit = km/s
+sampling = 500
 linestyle = -
 color = #adacac
-model_amplitude = -18.08615898447974
-model_x_0 = 0.03076923076923077
-model_alpha = 0.5589393164805655
-model_cons = -48.58472784150222
-model_x_mid = 0.03939858396674608
-coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_cons} ${model_x_mid}
+model_amplitude = -9.535800700375663
+model_x_0 = 0.034482758620689655
+model_alpha = 0.44712167917695933
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_vsys = -41.82786192628541
+model_offset0 = -0.017873012828318404
+model_sd_amplitude = 0.6159236885743851
+model_sd_x_0 = 0.0
+model_sd_alpha = 0.049745093681271314
+model_sd_vsys = 0.22118210744864703
+model_sd_offset0 = 0.00773072329864719
+model_info = 1
 
-[G335.579_hmc2_pvmap_out]
+[G333.46_alma7_pvmap_out]
 loc = 0 1
+source = G333.46-0.16
+alma = 7
+paval = 220
+pvmap = ${results}/${source}_alma7_rotation.CH3CN_K3.ra245.33405_dec-50.16358.PA${paval}.fits
+xlim = -0.4 0.4 arcsec
+hlines = -43.2 km/s
+rms = 1.7  mJy/beam
+vmax = 31 mJy/beam
+
+[G335.579_alma1_pvmap_rot]
+loc = 1 0
 source = G335.579-0.272
-paval = 292
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc2_pvmaps
-pvmap = ${results}/${source}_hmc2_rotation.CH3OH_spw0.ra247.74430_dec-48.73089.PA${paval}.fits
-name = Intensity
-unit = mJy/beam
-label = ${source} ALMA3 PA=${paval}${deg}
-stretch = linear
-#compute_ticks = false
-# Vlsr
-hlines = -53.1 km/s
-# Contours
-vmax = 16 mJy/beam
-rms = 1.5 mJy/beam
+alma = 1
+paval = 150
+pvmap = ${results}/${source}_alma1_rotation.CH3OH_spw0.ra247.74486_dec-48.73163.PA${paval}.fits
+hlines = -46.9 km/s
+rms = 1.4 mJy/beam
+vmax = 25 mJy/beam
 
-[G335.78_hmc1_pvmap_rot]
+[G335.579-0.272_alma1_pvedge]
 loc = 1 0
-source = G335.78+0.17
-paval = 34
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc1_pvmaps
-pvmap = ${results}/${source}_hmc1_rotation.CH3OH_spw0.ra247.44723_dec-48.26452.PA${paval}.fits
-name = Intensity
-unit = mJy/beam
-label = ${source} ALMA1 PA=${paval}${deg}
-stretch = linear
-#compute_ticks = false
-# Vlsr
-hlines = -48.94 km/s
-# Contours
-vmax = 40 mJy/beam
-
-[G335.78_hmc1_pvmap_rot_edge]
-loc = 1 0
-structured_array = /Volumes/Pegasus32 R8/dihca/results/G335.78+0.17/c5c8/per_hot_core/hmc1_pvmaps/G335.78+0.17_hmc1_rotation.CH3OH_spw0.ra247.44723_dec-48.26452.PA34.edge.dat
+structured_array = ../results/G335.579-0.272/c5c8/per_hot_core/alma1_pvmaps/G335.579-0.272_alma1_rotation.CH3OH_spw0.ra247.74486_dec-48.73163.PA150.edge.dat
 marker = o
 color = #46eff2
 linestyle = none
 plot_keys = OFFSET, VRAD
 
-[G335.78_hmc1_pvmap_rot_edge_kepfit]
+[G335.579-0.272_alma1_keplerian_fit]
 loc = 1 0
+function = piecewise_powerlaw
+xrange = -0.9900000000000792 0.9900000000000792 arcsec
+yunit = km/s
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 7.585244955167229 solMass
+model_amplitude = -8.20309830533521
+model_x_0 = 0.03076923076923077
+model_alpha = 0.5
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_sd_mass = 0.5128391112577377 solMass
+model_vsys = -46.489225046855466
+model_offset0 = -0.02275026754045532
+model_sd_amplitude = 0.27730611663385735
+model_sd_x_0 = 0.0
+model_sd_alpha = 0.0
+model_sd_vsys = 0.0
+model_sd_offset0 = 0.0
+model_info = 1
+
+[G335.579-0.272_alma1_unrestricted_fit]
+loc = 1 0
+function = piecewise_powerlaw
+xrange = -0.9900000000000792 0.9900000000000792 arcsec
+yunit = km/s
+sampling = 500
+linestyle = -
+color = #adacac
+model_amplitude = -9.40081047583402
+model_x_0 = 0.03076923076923077
+model_alpha = 0.6195567304406051
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_vsys = -46.489225046855466
+model_offset0 = -0.02275026754045532
+model_sd_amplitude = 0.7461354173140367
+model_sd_x_0 = 0.0
+model_sd_alpha = 0.05487492417770693
+model_sd_vsys = 0.15311844830490848
+model_sd_offset0 = 0.005297545008750506
+model_info = 1
+
+[G335.579_alma1_pvmap_out]
+loc = 1 1
+source = G335.579-0.272
+alma = 1
+paval = 240
+pvmap = ${results}/${source}_alma1_rotation.CH3OH_spw0.ra247.74486_dec-48.73163.PA${paval}.fits
+hlines = -46.9 km/s
+rms = 1.4 mJy/beam
+vmax = 25 mJy/beam
+
+[G335.579_alma3_pvmap_rot]
+loc = 2 0
+source = G335.579-0.272
+alma = 3
+paval = 202
+pvmap = ${results}/${source}_alma3_rotation.CH3OH_spw0.ra247.74430_dec-48.73089.PA${paval}.fits
+hlines = -53.1 km/s
+rms = 1.4 mJy/beam
+vmax = 16 mJy/beam
+
+[G335.579-0.272_alma3_pvedge]
+loc = 2 0
+structured_array = ../results/G335.579-0.272/c5c8/per_hot_core/alma3_pvmaps/G335.579-0.272_alma3_rotation.CH3OH_spw0.ra247.74430_dec-48.73089.PA202.edge.dat
+marker = o
+color = #46eff2
+linestyle = none
+plot_keys = OFFSET, VRAD
+
+[G335.579-0.272_alma3_keplerian_fit]
+loc = 2 0
+function = piecewise_powerlaw
+xrange = -0.4950000000000396 0.4950000000000396 arcsec
+yunit = km/s
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 31.105563629100157 solMass
+model_amplitude = -16.611626147433906
+model_x_0 = 0.03076923076923077
+model_alpha = 0.5
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_sd_mass = 1.0997411667153758 solMass
+model_vsys = -48.795327239958205
+model_offset0 = 0.045060647963865365
+model_sd_amplitude = 0.2936530798517328
+model_sd_x_0 = 0.0
+model_sd_alpha = 0.0
+model_sd_vsys = 0.0
+model_sd_offset0 = 0.0
+model_info = 1
+
+[G335.579-0.272_alma3_unrestricted_fit]
+loc = 2 0
+function = piecewise_powerlaw
+xrange = -0.4950000000000396 0.4950000000000396 arcsec
+yunit = km/s
+sampling = 500
+linestyle = -
+color = #adacac
+model_amplitude = -20.535897540705715
+model_x_0 = 0.03076923076923077
+model_alpha = 0.6416371428817473
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_vsys = -48.795327239958205
+model_offset0 = 0.045060647963865365
+model_sd_amplitude = 1.4756871559605222
+model_sd_x_0 = 0.0
+model_sd_alpha = 0.04536198036876393
+model_sd_vsys = 0.21869044923065067
+model_sd_offset0 = 0.0059462741457193494
+model_info = 1
+
+[G335.579_alma3_pvmap_out]
+loc = 2 1
+source = G335.579-0.272
+alma = 3
+paval = 292
+pvmap = ${results}/${source}_alma3_rotation.CH3OH_spw0.ra247.74430_dec-48.73089.PA${paval}.fits
+xlim = -0.35 0.35 arcsec
+hlines = -53.1 km/s
+rms = 1.4 mJy/beam
+vmax = 16 mJy/beam
+
+[G335.78_alma1_pvmap_rot]
+loc = 3 0
+source = G335.78+0.17
+alma = 1
+paval = 215
+pvmap = ${results}/${source}_alma1_rotation.CH3OH_spw0.ra247.44723_dec-48.26452.PA${paval}.fits
+hlines = -48.94 km/s
+rms = 1.6 mJy/beam
+vmax = 40 mJy/beam
+
+[G335.78+0.17_alma1_pvedge]
+loc = 3 0
+structured_array = ../results/G335.78+0.17/c5c8/per_hot_core/alma1_pvmaps/G335.78+0.17_alma1_rotation.CH3OH_spw0.ra247.44723_dec-48.26452.PA215.edge.dat
+marker = o
+color = #46eff2
+linestyle = none
+plot_keys = OFFSET, VRAD
+
+[G335.78+0.17_alma1_keplerian_fit]
+loc = 3 0
 function = piecewise_powerlaw
 xrange = -0.4900000000000392 0.4900000000000392 arcsec
 yunit = km/s
 sampling = 500
 linestyle = --
 color = #eb5252
-model_amplitude = 12.702071275576817
+model_mass = 16.774137265204512 solMass
+model_amplitude = -12.198690347479223
 model_x_0 = 0.03125
 model_alpha = 0.5
-model_cons = -50.1140464758649
-model_x_mid = 0.013240493106354017
-coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_cons} ${model_x_mid}
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_sd_mass = 1.8387141451417814 solMass
+model_vsys = -50.0253962164979
+model_offset0 = 0.01513677769483081
+model_sd_amplitude = 0.6685859349870145
+model_sd_x_0 = 0.0
+model_sd_alpha = 0.0
+model_sd_vsys = 0.0
+model_sd_offset0 = 0.0
+model_info = 1
 
-[G335.78_hmc1_pvmap_rot_edge_fit]
-loc = 1 0
+[G335.78+0.17_alma1_unrestricted_fit]
+loc = 3 0
 function = piecewise_powerlaw
 xrange = -0.4900000000000392 0.4900000000000392 arcsec
 yunit = km/s
 sampling = 500
 linestyle = -
 color = #adacac
-model_amplitude = 21.88451410938025
+model_amplitude = -33.42169131873962
 model_x_0 = 0.03125
-model_alpha = 0.8208726448044973
-model_cons = -50.599434244681895
-model_x_mid = -0.018216561601604737
-coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_cons} ${model_x_mid}
+model_alpha = 1.1077565644294396
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_vsys = -50.0253962164979
+model_offset0 = 0.01513677769483081
+model_sd_amplitude = 8.13470909368727
+model_sd_x_0 = 0.0
+model_sd_alpha = 0.13489514411634926
+model_sd_vsys = 0.29875333467784615
+model_sd_offset0 = 0.010609808048155131
+model_info = 1
 
-[G335.78_hmc1_pvmap_out]
-loc = 1 1
+[G335.78_alma1_pvmap_out]
+loc = 3 1
 source = G335.78+0.17
-paval = 125
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc1_pvmaps
-pvmap = ${results}/${source}_hmc1_rotation.CH3OH_spw0.ra247.44723_dec-48.26452.PA${paval}.fits
-name = Intensity
-unit = mJy/beam
-label = ${source} ALMA1 PA=${paval}${deg}
-stretch = linear
-#compute_ticks = false
-# Vlsr
+alma = 1
+paval = 305
+pvmap = ${results}/${source}_alma1_rotation.CH3OH_spw0.ra247.44723_dec-48.26452.PA${paval}.fits
 hlines = -48.94 km/s
-# Contours
+rms = 1.6 mJy/beam
 vmax = 40 mJy/beam
 
-[G335.78_hmc2_pvmap_rot]
-loc = 2 0
-source = G335.78+0.17
-paval = 65
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc2_pvmaps
-pvmap = ${results}/${source}_hmc2_rotation.CH3OH_spw0.ra247.44221_dec-48.26388.PA${paval}.fits
-name = Intensity
-unit = mJy/beam
-label = ${source} ALMA2 PA=${paval}${deg}
-stretch = linear
-#compute_ticks = false
-# Vlsr
-hlines = -50.51 km/s
-# Contours
-vmax = 32 mJy/beam
-
-[G335.78_hmc2_pvmap_out]
-loc = 2 1
-source = G335.78+0.17
-paval = 155
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc2_pvmaps
-pvmap = ${results}/${source}_hmc2_rotation.CH3OH_spw0.ra247.44221_dec-48.26388.PA${paval}.fits
-name = Intensity
-unit = mJy/beam
-label = ${source} ALMA2 PA=${paval}${deg}
-stretch = linear
-#compute_ticks = false
-# Vlsr
-hlines = -50.51 km/s
-# Contours
-vmax = 32 mJy/beam
-
-[G336_hmc1_pvmap_rot]
-loc = 3 0
-source = G336.01-0.82
-paval = 125
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc1_pvmaps
-pvmap = ${results}/${source}_hmc1_rotation.CH3OH_spw0.ra248.78858_dec-48.77991.PA${paval}.fits
-name = Intensity
-unit = mJy/beam
-label = ${source} ALMA1 PA=${paval}${deg}
-stretch = linear
-#compute_ticks = false
-# Vlsr
-hlines = -47.2 km/s
-# Contours
-vmax = 60 mJy/beam
-
-[G336_hmc1_pvmap_out]
-loc = 3 1
-source = G336.01-0.82
-paval = 35
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc1_pvmaps
-pvmap = ${results}/${source}_hmc1_rotation.CH3OH_spw0.ra248.78858_dec-48.77991.PA${paval}.fits
-name = Intensity
-unit = mJy/beam
-label = ${source} ALMA1 PA=${paval}${deg}
-stretch = linear
-#compute_ticks = false
-# Vlsr
-hlines = -47.2 km/s
-# Contours
-vmax = 60 mJy/beam
