--- a/configs/plots/papers/group_pv_maps.5.cfg
+++ b/configs/plots/papers/group_pv_maps.5.cfg
@@ -1,7 +1,7 @@
 [DEFAULT]
 ncols = 2
 nrows = 4
-sharex = false 
+sharex = false
 sharey = false
 styles = maps inferno aspect_auto
 vertical_cbar = false
@@ -19,6 +19,9 @@ xunit = arcsec
 yunit = km/s
 xname = Offset
 yname = Velocity
+name = Intensity
+unit = mJy/beam
+stretch = linear
 nsigma = 3
 contour_linewidth = 0.5
 contour_stretch = log
@@ -26,125 +29,257 @@ xticks_fmt = {x:.1f}
 yticks_fmt = {x:.0f}
 inverty = true
 ticks_color = w
-name = Intensity
-unit = mJy/beam
-stretch = linear
-# Artists
+label = ${source} ALMA${alma} PA=${paval}${deg}
 vlines = 0 arcsec
 vlines_linestyle = :
 vlines_color = #35ff2c
-# Vlsr
 hlines_linestyle = --
 hlines_color = #35ff2c
-# Contours
 self_contours = true
 vmin = 0. mJy/beam
-# Non-standard
-basedir = /Volumes/Pegasus32 R8/dihca
-contdir = ${basedir}/source_data/continuum
+basedir = ..
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma${alma}_pvmaps
 deg = $$^\circ$$
 
-[G34_hmc1_pvmap_rot]
+[G335.78_alma2_pvmap_rot]
 loc = 0 0
-source = G34.43+0.24
-paval = 100
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc1_pvmaps
-pvmap = ${results}/${source}_hmc1_rotation.CH3OH_spw0.ra283.32503_dec1.42373.PA${paval}.fits
-label = ${source} ALMA1 PA=${paval}${deg}
-#compute_ticks = false
-# Vlsr
-hlines = 58.44 km/s
-# Contours
-vmax = 35 mJy/beam
+source = G335.78+0.17
+alma = 2
+paval = 65
+pvmap = ${results}/${source}_alma2_rotation.CH3OH_spw0.ra247.44221_dec-48.26388.PA${paval}.fits
+hlines = -50.51 km/s
+rms = 1.8 mJy/beam
+vmax = 32 mJy/beam
 
-[G34_hmc1_pvmap_out]
+[G335.78+0.17_alma2_pvedge]
+loc = 0 0
+structured_array = ../results/G335.78+0.17/c5c8/per_hot_core/alma2_pvmaps/G335.78+0.17_alma2_rotation.CH3OH_spw0.ra247.44221_dec-48.26388.PA65.edge.dat
+marker = o
+color = #46eff2
+linestyle = none
+plot_keys = OFFSET, VRAD
+
+[G335.78+0.17_alma2_keplerian_fit]
+loc = 0 0
+function = piecewise_powerlaw
+xrange = -0.4900000000000392 0.4900000000000392 arcsec
+yunit = km/s
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 9.820392300695831 solMass
+model_amplitude = -9.333779340994685
+model_x_0 = 0.03125
+model_alpha = 0.5
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_sd_mass = 1.2125412586998687 solMass
+model_vsys = -51.57888912018678
+model_offset0 = 0.011090403516737058
+model_sd_amplitude = 0.5762291466581538
+model_sd_x_0 = 0.0
+model_sd_alpha = 0.0
+model_sd_vsys = 0.0
+model_sd_offset0 = 0.0
+model_info = 1
+
+[G335.78+0.17_alma2_unrestricted_fit]
+loc = 0 0
+function = piecewise_powerlaw
+xrange = -0.4900000000000392 0.4900000000000392 arcsec
+yunit = km/s
+sampling = 500
+linestyle = -
+color = #adacac
+model_amplitude = -11.560809188013495
+model_x_0 = 0.03125
+model_alpha = 0.6579468211373942
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_vsys = -51.57888912018678
+model_offset0 = 0.011090403516737058
+model_sd_amplitude = 2.5340947064717794
+model_sd_x_0 = 0.0
+model_sd_alpha = 0.15349592108247886
+model_sd_vsys = 0.46683368484608706
+model_sd_offset0 = 0.015232943094558174
+model_info = 1
+
+[G335.78_alma2_pvmap_out]
 loc = 0 1
+source = G335.78+0.17
+alma = 2
+paval = 155
+pvmap = ${results}/${source}_alma2_rotation.CH3OH_spw0.ra247.44221_dec-48.26388.PA${paval}.fits
+xlim = -0.3 0.4 arcsec
+hlines = -50.51 km/s
+rms = 1.8 mJy/beam
+vmax = 32 mJy/beam
+
+[G336_alma1_pvmap_rot]
+loc = 1 0
+source = G336.01-0.82
+alma = 1
+paval = 125
+pvmap = ${results}/${source}_alma1_rotation.CH3OH_spw0.ra248.78858_dec-48.77991.PA${paval}.fits
+hlines = -47.2 km/s
+rms = 1.7 mJy/beam
+vmax = 60 mJy/beam
+
+[G336.01-0.82_alma1_pvedge]
+loc = 1 0
+structured_array = ../results/G336.01-0.82/c5c8/per_hot_core/alma1_pvmaps/G336.01-0.82_alma1_rotation.CH3OH_spw0.ra248.78858_dec-48.77991.PA125.edge.dat
+marker = o
+color = #46eff2
+linestyle = none
+plot_keys = OFFSET, VRAD
+
+[G336.01-0.82_alma1_keplerian_fit]
+loc = 1 0
+function = piecewise_powerlaw
+xrange = -0.48950000000007116 0.48950000000007116 arcsec
+yunit = km/s
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 14.299712876295894 solMass
+model_amplitude = -11.263069647401139
+model_x_0 = 0.03225806451612903
+model_alpha = 0.5
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_sd_mass = 2.715399447880534 solMass
+model_vsys = -45.4206077372057
+model_offset0 = 0.004437441478521859
+model_sd_amplitude = 1.0693827689607174
+model_sd_x_0 = 0.0
+model_sd_alpha = 0.0
+model_sd_vsys = 0.0
+model_sd_offset0 = 0.0
+model_info = 1
+
+[G336.01-0.82_alma1_unrestricted_fit]
+loc = 1 0
+function = piecewise_powerlaw
+xrange = -0.48950000000007116 0.48950000000007116 arcsec
+yunit = km/s
+sampling = 500
+linestyle = -
+color = #adacac
+model_amplitude = -184.05211236432362
+model_x_0 = 0.03225806451612903
+model_alpha = 2.0942879803273646
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_vsys = -45.4206077372057
+model_offset0 = 0.004437441478521859
+model_sd_amplitude = 153.43490047071938
+model_sd_x_0 = 0.0
+model_sd_alpha = 0.4583633122619938
+model_sd_vsys = 0.5589777213771441
+model_sd_offset0 = 0.015442115748711394
+model_info = 1
+
+[G336_alma1_pvmap_out]
+loc = 1 1
+source = G336.01-0.82
+alma = 1
+paval = 215
+pvmap = ${results}/${source}_alma1_rotation.CH3OH_spw0.ra248.78858_dec-48.77991.PA${paval}.fits
+hlines = -47.2 km/s
+rms = 1.7 mJy/beam
+vmax = 60 mJy/beam
+
+[G34_alma1_pvmap_rot]
+loc = 2 0
 source = G34.43+0.24
-paval = 10
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc1_pvmaps
-pvmap = ${results}/${source}_hmc1_rotation.CH3OH_spw0.ra283.32503_dec1.42373.PA${paval}.fits
-label = ${source} ALMA1 PA=${paval}${deg}
-#compute_ticks = false
-# Vlsr
+alma = 1
+paval = 280
+pvmap = ${results}/${source}_alma1_rotation.CH3OH_spw0.ra283.32503_dec1.42373.PA${paval}.fits
 hlines = 58.44 km/s
-# Contours
+rms = 1.3 mJy/beam
 vmax = 35 mJy/beam
 
-[G343_hmc1_pvmap_rot]
-loc = 1 0
-source = G343.12-0.06
-paval = 50
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc1_pvmaps
-pvmap = ${results}/${source}_hmc1_rotation.CH3OH_spw0.ra254.57170_dec-42.86873.PA${paval}.fits
-label = ${source} ALMA1 PA=${paval}${deg}
-#compute_ticks = false
-# Vlsr
-hlines = -33.71 km/s
-# Contours
-vmax = 40 mJy/beam
-
-[G343_hmc1_pvmap_out]
-loc = 1 1
-source = G343.12-0.06
-paval = 140
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc1_pvmaps
-pvmap = ${results}/${source}_hmc1_rotation.CH3OH_spw0.ra254.57170_dec-42.86873.PA${paval}.fits
-label = ${source} ALMA1 PA=${paval}${deg}
-#compute_ticks = false
-# Vlsr
-hlines = -33.71 km/s
-# Contours
-vmax = 40 mJy/beam
-
-[G35.03_hmc1_pvmap_rot]
+[G34.43+0.24_alma1_pvedge]
 loc = 2 0
-source = G35.03+0.35_A
-paval = 130
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc1_pvmaps
-pvmap = ${results}/${source}_hmc1_rotation.CH3CN_K3.ra283.50271_dec2.02204.PA${paval}.fits
-label = G35.03+0.35 A ALMA1 PA=${paval}${deg}
-#compute_ticks = false
-# Vlsr
-hlines = 45.94 km/s
-# Contours
-vmax = 41 mJy/beam
+structured_array = ../results/G34.43+0.24/c5c8/per_hot_core/alma1_pvmaps/G34.43+0.24_alma1_rotation.CH3OH_spw0.ra283.32503_dec1.42373.PA280.edge.dat
+marker = o
+color = #46eff2
+linestyle = none
+plot_keys = OFFSET, VRAD
 
-[G35.03_hmc1_pvmap_out]
+[G34.43+0.24_alma1_keplerian_fit]
+loc = 2 0
+function = piecewise_powerlaw
+xrange = -0.9879999999999696 0.9879999999999696 arcsec
+yunit = km/s
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 21.63876177657711 solMass
+model_amplitude = -13.855088808011894
+model_x_0 = 0.033003300330033
+model_alpha = 0.5
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_sd_mass = 1.246948734340867 solMass
+model_vsys = 58.7369732510932
+model_offset0 = -0.020445275852170534
+model_sd_amplitude = 0.39920457629955036
+model_sd_x_0 = 0.0
+model_sd_alpha = 0.0
+model_sd_vsys = 0.0
+model_sd_offset0 = 0.0
+model_info = 1
+
+[G34.43+0.24_alma1_unrestricted_fit]
+loc = 2 0
+function = piecewise_powerlaw
+xrange = -0.9879999999999696 0.9879999999999696 arcsec
+yunit = km/s
+sampling = 500
+linestyle = -
+color = #adacac
+model_amplitude = -16.04068164908458
+model_x_0 = 0.033003300330033
+model_alpha = 0.5861942006631787
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_vsys = 58.7369732510932
+model_offset0 = -0.020445275852170534
+model_sd_amplitude = 2.5841183252645146
+model_sd_x_0 = 0.0
+model_sd_alpha = 0.07882011473721347
+model_sd_vsys = 0.24054125068717291
+model_sd_offset0 = 0.015888356226855384
+model_info = 1
+
+[G34_alma1_pvmap_out]
 loc = 2 1
-source = G35.03+0.35_A
-paval = 40
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc1_pvmaps
-pvmap = ${results}/${source}_hmc1_rotation.CH3CN_K3.ra283.50271_dec2.02204.PA${paval}.fits
-label = G35.03+0.35 A ALMA1 PA=${paval}${deg}
-#compute_ticks = false
-# Vlsr
-hlines = 45.94 km/s
-# Contours
-vmax = 41 mJy/beam
+source = G34.43+0.24
+alma = 1
+paval = 10
+pvmap = ${results}/${source}_alma1_rotation.CH3OH_spw0.ra283.32503_dec1.42373.PA${paval}.fits
+hlines = 58.44 km/s
+rms = 1.3 mJy/beam
+vmax = 35 mJy/beam
 
-[G35.13_hmc1_pvmap_rot]
+[G343_alma1_pvmap_rot]
 loc = 3 0
-source = G35.13-0.74
-paval = 45
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc1_pvmaps
-pvmap = ${results}/${source}_hmc1_rotation.CH3OH_spw0.ra284.52557_dec1.61873.PA${paval}.fits
-label = ${source} ALMA1 PA=${paval}${deg}
-#compute_ticks = false
-# Vlsr
-hlines = 35.93 km/s
-# Contours
-vmax = 56 mJy/beam
+source = G343.12-0.06
+alma = 1
+paval = 230
+pvmap = ${results}/${source}_alma1_rotation.CH3OH_spw0.ra254.57170_dec-42.86873.PA${paval}.fits
+hlines = -33.71 km/s
+rms = 1.1 mJy/beam
+vmax = 40 mJy/beam
+markers = 0.23 arcsec -31.3 km/s, -0.16 arcsec -40.1 km/s
+markers_physframe = data
+markers_marker = v, ^
+markers_mec = #46eff2
+markers_mfc = #46eff2
+markers_ms = 10
 
-[G35.13_hmc1_pvmap_out]
+[G343_alma1_pvmap_out]
 loc = 3 1
-source = G35.13-0.74
-paval = 135
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc1_pvmaps
-pvmap = ${results}/${source}_hmc1_rotation.CH3OH_spw0.ra284.52557_dec1.61873.PA${paval}.fits
-label = ${source} ALMA1 PA=${paval}${deg}
-#compute_ticks = false
-# Vlsr
-hlines = 35.93 km/s
-# Contours
-vmax = 56 mJy/beam
-
+source = G343.12-0.06
+alma = 1
+paval = 320
+pvmap = ${results}/${source}_alma1_rotation.CH3OH_spw0.ra254.57170_dec-42.86873.PA${paval}.fits
+hlines = -33.71 km/s
+rms = 1.1 mJy/beam
+vmax = 40 mJy/beam
