--- a/configs/plots/papers/group_pv_maps.6.cfg
+++ b/configs/plots/papers/group_pv_maps.6.cfg
@@ -1,7 +1,7 @@
 [DEFAULT]
 ncols = 2
 nrows = 4
-sharex = false 
+sharex = false
 sharey = false
 styles = maps inferno aspect_auto
 vertical_cbar = false
@@ -19,6 +19,9 @@ xunit = arcsec
 yunit = km/s
 xname = Offset
 yname = Velocity
+name = Intensity
+unit = mJy/beam
+stretch = linear
 nsigma = 3
 contour_linewidth = 0.5
 contour_stretch = log
@@ -26,125 +29,309 @@ xticks_fmt = {x:.1f}
 yticks_fmt = {x:.0f}
 inverty = true
 ticks_color = w
-name = Intensity
-unit = mJy/beam
-stretch = linear
-# Artists
+label = ${source} ALMA${alma} PA=${paval}${deg}
 vlines = 0 arcsec
 vlines_linestyle = :
 vlines_color = #35ff2c
-# Vlsr
 hlines_linestyle = --
 hlines_color = #35ff2c
-# Contours
 self_contours = true
 vmin = 0. mJy/beam
-# Non-standard
-basedir = /Volumes/Pegasus32 R8/dihca
-contdir = ${basedir}/source_data/continuum
+basedir = ..
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma${alma}_pvmaps
 deg = $$^\circ$$
 
-[G35.13_hmc2_pvmap_rot]
+[G35.03_alma1_pvmap_rot]
 loc = 0 0
-source = G35.13-0.74
-paval = 75
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc2_pvmaps
-pvmap = ${results}/${source}_hmc2_rotation.CH3OH_spw0.ra284.52570_dec1.61893.PA${paval}.fits
-label = ${source} ALMA2 PA=${paval}${deg}
-#compute_ticks = false
-# Vlsr
-hlines = 34.39 km/s
-# Contours
-vmax = 25 mJy/beam
+source = G35.03+0.35_A
+alma = 1
+paval = 310
+pvmap = ${results}/${source}_alma1_rotation.CH3CN_K3.ra283.50271_dec2.02204.PA${paval}.fits
+xlim = -0.55 0.55 arcsec
+hlines = 45.94 km/s
+rms = 1.9 mJy/beam
+vmax = 41 mJy/beam
 
-[G35.13_hmc2_pvmap_out]
+[G35.03+0.35_A_alma1_pvedge]
+loc = 0 0
+structured_array = ../results/G35.03+0.35_A/c5c8/per_hot_core/alma1_pvmaps/G35.03+0.35_A_alma1_rotation.CH3CN_K3.ra283.50271_dec2.02204.PA310.edge.dat
+marker = o
+color = #46eff2
+linestyle = none
+plot_keys = OFFSET, VRAD
+
+[G35.03+0.35_A_alma1_keplerian_fit]
+loc = 0 0
+function = piecewise_powerlaw
+xrange = -0.9879999999999696 0.9879999999999696 arcsec
+yunit = km/s
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 20.071282619834534 solMass
+model_amplitude = -13.343835335574317
+model_x_0 = 0.04310344827586207
+model_alpha = 0.5
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_sd_mass = 1.962186116047663 solMass
+model_vsys = 50.828525972344394
+model_offset0 = -0.020672155792278463
+model_sd_amplitude = 0.652252497416779
+model_sd_x_0 = 0.0
+model_sd_alpha = 0.0
+model_sd_vsys = 0.0
+model_sd_offset0 = 0.0
+model_info = 1
+
+[G35.03+0.35_A_alma1_unrestricted_fit]
+loc = 0 0
+function = piecewise_powerlaw
+xrange = -0.9879999999999696 0.9879999999999696 arcsec
+yunit = km/s
+sampling = 500
+linestyle = -
+color = #adacac
+model_amplitude = -18.413754787280524
+model_x_0 = 0.04310344827586207
+model_alpha = 0.7199416450495963
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_vsys = 50.828525972344394
+model_offset0 = -0.020672155792278463
+model_sd_amplitude = 10.126676069471518
+model_sd_x_0 = 0.0
+model_sd_alpha = 0.39073956762222867
+model_sd_vsys = 1.5252624460937119
+model_sd_offset0 = 0.051778547408177306
+model_info = 1
+
+[G35.03_alma1_pvmap_out]
 loc = 0 1
-source = G35.13-0.74
-paval = 165
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc2_pvmaps
-pvmap = ${results}/${source}_hmc2_rotation.CH3OH_spw0.ra284.52570_dec1.61893.PA${paval}.fits
-label = ${source} ALMA2 PA=${paval}${deg}
-#compute_ticks = false
-# Vlsr
-hlines = 34.39 km/s
-# Contours
-vmax = 25 mJy/beam
+source = G35.03+0.35_A
+alma = 1
+paval = 40
+pvmap = ${results}/${source}_alma1_rotation.CH3CN_K3.ra283.50271_dec2.02204.PA${paval}.fits
+xlim = -0.55 0.55 arcsec
+hlines = 45.94 km/s
+rms = 1.9 mJy/beam
+vmax = 41 mJy/beam
 
-[G35.13_hmc3_pvmap_rot]
+[G35.13_alma1_pvmap_rot]
 loc = 1 0
 source = G35.13-0.74
-paval = 95
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc3_pvmaps
-pvmap = ${results}/${source}_hmc3_rotation.CH3OH_spw0.ra284.52617_dec1.61867.PA${paval}.fits
-label = ${source} ALMA6 PA=${paval}${deg}
-#compute_ticks = false
-# Vlsr
-hlines = 35.53 km/s
-# Contours
-vmax = 25 mJy/beam
+alma = 1
+paval = 45
+pvmap = ${results}/${source}_alma1_rotation.CH3CN_K3.ra284.52557_dec1.61873.PA${paval}.fits
+hlines = 35.93 km/s
+rms = 2.5 mJy/beam
+vmax = 56 mJy/beam
 
-[G35.13_hmc3_pvmap_out]
+[G35.13-0.74_alma1_pvedge]
+loc = 1 0
+structured_array = ../results/G35.13-0.74/c5c8/per_hot_core/alma1_pvmaps/G35.13-0.74_alma1_rotation.CH3CN_K3.ra284.52557_dec1.61873.PA45.edge.dat
+marker = o
+color = #46eff2
+linestyle = none
+plot_keys = OFFSET, VRAD
+
+[G35.13-0.74_alma1_keplerian_fit]
+loc = 1 0
+function = piecewise_powerlaw
+xrange = -0.48749999999998506 0.48749999999998506 arcsec
+yunit = km/s
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 6.75143302495276 solMass
+model_amplitude = -7.739111306374149
+model_x_0 = 0.045454545454545456
+model_alpha = 0.5
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_sd_mass = 0.41999920417790904 solMass
+model_vsys = 35.78217340068655
+model_offset0 = -0.03836856486217351
+model_sd_amplitude = 0.24072079051277734
+model_sd_x_0 = 0.0
+model_sd_alpha = 0.0
+model_sd_vsys = 0.0
+model_sd_offset0 = 0.0
+model_info = 1
+
+[G35.13-0.74_alma1_unrestricted_fit]
+loc = 1 0
+function = piecewise_powerlaw
+xrange = -0.48749999999998506 0.48749999999998506 arcsec
+yunit = km/s
+sampling = 500
+linestyle = -
+color = #adacac
+model_amplitude = -7.469695960252546
+model_x_0 = 0.045454545454545456
+model_alpha = 0.46040172522710054
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_vsys = 35.78217340068655
+model_offset0 = -0.03836856486217351
+model_sd_amplitude = 0.4891100861481627
+model_sd_x_0 = 0.0
+model_sd_alpha = 0.057193319610883996
+model_sd_vsys = 0.20721411799671294
+model_sd_offset0 = 0.008457018059899641
+model_info = 1
+
+[G35.13_alma1_pvmap_out]
 loc = 1 1
 source = G35.13-0.74
-paval = 5
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc3_pvmaps
-pvmap = ${results}/${source}_hmc3_rotation.CH3OH_spw0.ra284.52617_dec1.61867.PA${paval}.fits
-label = ${source} ALMA6 PA=${paval}${deg}
-#compute_ticks = false
-# Vlsr
-hlines = 35.53 km/s
-# Contours
+alma = 1
+paval = 135
+pvmap = ${results}/${source}_alma1_rotation.CH3CN_K3.ra284.52557_dec1.61873.PA${paval}.fits
+hlines = 35.93 km/s
+rms = 2.5 mJy/beam
+vmax = 56 mJy/beam
+
+[G35.13_alma2_pvmap_rot]
+loc = 2 0
+source = G35.13-0.74
+alma = 2
+paval = 75
+pvmap = ${results}/${source}_alma2_rotation.CH3CN_K3.ra284.52570_dec1.61893.PA${paval}.fits
+xlim = -0.25 0.23 arcsec
+hlines = 34.39 km/s
+rms = 2.5 mJy/beam
 vmax = 25 mJy/beam
 
-[G35.20_hmc1_pvmap_rot]
+[G35.13-0.74_alma2_pvedge]
 loc = 2 0
-source = G35.20-0.74_N
-paval = 170
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc1_pvmaps
-pvmap = ${results}/${source}_hmc1_rotation.CH3OH_spw0.ra284.55397_dec1.67705.PA${paval}.fits
-label = G35.20-0.74 N ALMA1 PA=${paval}${deg}
-#compute_ticks = false
-# Vlsr
-hlines = 32.11 km/s
-# Contours
-vmax = 86 mJy/beam
+structured_array = ../results/G35.13-0.74/c5c8/per_hot_core/alma2_pvmaps/G35.13-0.74_alma2_rotation.CH3CN_K3.ra284.52570_dec1.61893.PA75.edge.dat
+marker = o
+color = #46eff2
+linestyle = none
+plot_keys = OFFSET, VRAD
 
-[G35.20_hmc1_pvmap_out]
+[G35.13-0.74_alma2_keplerian_fit]
+loc = 2 0
+function = piecewise_powerlaw
+xrange = -0.48749999999998506 0.48749999999998506 arcsec
+yunit = km/s
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 2.7193722611889983 solMass
+model_amplitude = -4.911650348614933
+model_x_0 = 0.045454545454545456
+model_alpha = 0.5
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_sd_mass = 0.3831007504040061 solMass
+model_vsys = 33.97228228788121
+model_offset0 = -0.013997387134479572
+model_sd_amplitude = 0.34597266456151854
+model_sd_x_0 = 0.0
+model_sd_alpha = 0.0
+model_sd_vsys = 0.0
+model_sd_offset0 = 0.0
+model_info = 1
+
+[G35.13-0.74_alma2_unrestricted_fit]
+loc = 2 0
+function = piecewise_powerlaw
+xrange = -0.48749999999998506 0.48749999999998506 arcsec
+yunit = km/s
+sampling = 500
+linestyle = -
+color = #adacac
+model_amplitude = -5.919528928445707
+model_x_0 = 0.045454545454545456
+model_alpha = 0.966285077348988
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_vsys = 33.97228228788121
+model_offset0 = -0.013997387134479572
+model_sd_amplitude = 1.3419120118732828
+model_sd_x_0 = 0.0
+model_sd_alpha = 0.3806739827909846
+model_sd_vsys = 0.6739530803973826
+model_sd_offset0 = 0.01498763700221359
+model_info = 1
+
+[G35.13_alma2_pvmap_out]
 loc = 2 1
-source = G35.20-0.74_N
-paval = 80
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc1_pvmaps
-pvmap = ${results}/${source}_hmc1_rotation.CH3OH_spw0.ra284.55397_dec1.67705.PA${paval}.fits
-label = G35.20-0.74 N ALMA1 PA=${paval}${deg}
-#compute_ticks = false
-# Vlsr
-hlines = 32.11 km/s
-# Contours
-vmax = 86 mJy/beam
+source = G35.13-0.74
+alma = 2
+paval = 165
+pvmap = ${results}/${source}_alma2_rotation.CH3CN_K3.ra284.52570_dec1.61893.PA${paval}.fits
+xlim = -0.23 0.23 arcsec
+hlines = 34.39 km/s
+rms = 2.5 mJy/beam
+vmax = 25 mJy/beam
 
-[G351_hmc1_pvmap_rot]
+[G35.13_alma6_pvmap_rot]
 loc = 3 0
-source = G351.77-0.54
-paval = 130
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc1_pvmaps
-pvmap = ${results}/${source}_hmc1_rotation.CH3OH_spw0.ra261.67722_dec-36.15483.PA${paval}.fits
-label = ${source} ALMA2 PA=${paval}${deg}
-#compute_ticks = false
-# Vlsr
-hlines = -3.83 km/s
-# Contours
-vmax = 45 mJy/beam
+source = G35.13-0.74
+alma = 6
+paval = 95
+pvmap = ${results}/${source}_alma6_rotation.CH3CN_K3.ra284.52617_dec1.61867.PA${paval}.fits
+xlim = -0.25 0.25 arcsec
+hlines = 35.53 km/s
+rms = 2.5 mJy/beam
+vmax = 25 mJy/beam
 
-[G351_hmc1_pvmap_out]
+[G35.13_alma6_pvmap_out]
 loc = 3 1
-source = G351.77-0.54
-paval = 40
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc1_pvmaps
-pvmap = ${results}/${source}_hmc1_rotation.CH3OH_spw0.ra261.67722_dec-36.15483.PA${paval}.fits
-label = ${source} ALMA2 PA=${paval}${deg}
-#compute_ticks = false
-# Vlsr
-hlines = -3.83 km/s
-# Contours
-vmax = 45 mJy/beam
+source = G35.13-0.74
+alma = 6
+paval = 185
+pvmap = ${results}/${source}_alma6_rotation.CH3CN_K3.ra284.52617_dec1.61867.PA${paval}.fits
+xlim = -0.25 0.25 arcsec
+hlines = 35.53 km/s
+rms = 2.5 mJy/beam
+vmax = 25 mJy/beam
+
+[G35.13-0.74_alma6_pvedge]
+loc = 3 0
+structured_array = ../results/G35.13-0.74/c5c8/per_hot_core/alma6_pvmaps/G35.13-0.74_alma6_rotation.CH3CN_K3.ra284.52617_dec1.61867.PA95.edge.dat
+marker = o
+color = #46eff2
+linestyle = none
+plot_keys = OFFSET, VRAD
+
+[G35.13-0.74_alma6_keplerian_fit]
+loc = 3 0
+function = piecewise_powerlaw
+xrange = -0.48749999999998506 0.48749999999998506 arcsec
+yunit = km/s
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 3.2398143545501514 solMass
+model_amplitude = -5.361090932905144
+model_x_0 = 0.045454545454545456
+model_alpha = 0.5
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_sd_mass = 0.49410070328574995 solMass
+model_vsys = 35.96755023815543
+model_offset0 = 0.045025938468959525
+model_sd_amplitude = 0.40880718930808796
+model_sd_x_0 = 0.0
+model_sd_alpha = 0.0
+model_sd_vsys = 0.0
+model_sd_offset0 = 0.0
+model_info = 1
+
+[G35.13-0.74_alma6_unrestricted_fit]
+loc = 3 0
+function = piecewise_powerlaw
+xrange = -0.48749999999998506 0.48749999999998506 arcsec
+yunit = km/s
+sampling = 500
+linestyle = -
+color = #adacac
+model_amplitude = -8.079344409190194
+model_x_0 = 0.045454545454545456
+model_alpha = 1.0247278180427397
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_vsys = 35.96755023815543
+model_offset0 = 0.045025938468959525
+model_sd_amplitude = 197.4735722976387
+model_sd_x_0 = 0.0
+model_sd_alpha = 30.405386233395056
+model_sd_vsys = 51.76952254526612
+model_sd_offset0 = 1.4462354273039282
+model_info = 1
 
