--- a/configs/plots/papers/group_pv_maps.7.cfg
+++ b/configs/plots/papers/group_pv_maps.7.cfg
@@ -1,7 +1,7 @@
 [DEFAULT]
 ncols = 2
 nrows = 4
-sharex = false 
+sharex = false
 sharey = false
 styles = maps inferno aspect_auto
 vertical_cbar = false
@@ -19,6 +19,9 @@ xunit = arcsec
 yunit = km/s
 xname = Offset
 yname = Velocity
+name = Intensity
+unit = mJy/beam
+stretch = linear
 nsigma = 3
 contour_linewidth = 0.5
 contour_stretch = log
@@ -26,125 +29,164 @@ xticks_fmt = {x:.1f}
 yticks_fmt = {x:.0f}
 inverty = true
 ticks_color = w
-name = Intensity
-unit = mJy/beam
-stretch = linear
-# Artists
+label = ${source} ALMA${alma} PA=${paval}${deg}
 vlines = 0 arcsec
 vlines_linestyle = :
 vlines_color = #35ff2c
-# Vlsr
 hlines_linestyle = --
 hlines_color = #35ff2c
-# Contours
 self_contours = true
 vmin = 0. mJy/beam
-# Non-standard
-basedir = /Volumes/Pegasus32 R8/dihca
-contdir = ${basedir}/source_data/continuum
+basedir = ..
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma${alma}_pvmaps
 deg = $$^\circ$$
 
-[I16562_hmc1_pvmap_rot]
+[G35.20_alma1_pvmap_rot]
 loc = 0 0
-source = IRAS_165623959
-paval = 30
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc1_pvmaps
-pvmap = ${results}/${source}_hmc1_rotation.CH3CN_K3.ra254.92344_dec-40.06212.PA${paval}.fits
-label = IRAS 16562-3959 ALMA1 PA=${paval}${deg}
-#compute_ticks = false
-# Vlsr
-hlines = -16.86 km/s
-# Contours
-vmax = 32 mJy/beam
+source = G35.20-0.74_N
+alma = 1
+paval = -10
+pvmap = ${results}/${source}_alma1_rotation.CH3OH_spw0.ra284.55397_dec1.67705.PA${paval}.fits
+xlim = -0.52 0.52 arcsec
+hlines = 32.11 km/s
+rms = 2.5 mJy/beam
+vmax = 86 mJy/beam
 
-[I16562_hmc1_pvmap_out]
+[G35.20-0.74_N_alma1_pvedge]
+loc = 0 0
+structured_array = ../results/G35.20-0.74_N/c5c8/per_hot_core/alma1_pvmaps/G35.20-0.74_N_alma1_rotation.CH3OH_spw0.ra284.55397_dec1.67705.PA-10.edge.dat
+marker = o
+color = #46eff2
+linestyle = none
+plot_keys = OFFSET, VRAD
+
+[G35.20-0.74_N_alma1_keplerian_fit]
+loc = 0 0
+function = piecewise_powerlaw
+xrange = -0.9879999999999696 0.9879999999999696 arcsec
+yunit = km/s
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 4.690400785298091 solMass
+model_amplitude = -6.450569932851174
+model_x_0 = 0.045662100456621
+model_alpha = 0.5
+model_cons = 31.439426041696777
+model_x_mid = -0.013398523400697835
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_cons} ${model_x_mid}
+model_sd_mass = 1.1409859498731734 solMass
+model_vsys = 32.078049620159284
+model_offset0 = 0.010738472822581564
+model_sd_amplitude = 0.6242694920428646
+model_sd_x_0 = 0.0
+model_sd_alpha = 0.0
+model_sd_vsys = 0.0
+model_sd_offset0 = 0.0
+model_info = 1
+
+[G35.20-0.74_N_alma1_unrestricted_fit]
+loc = 0 0
+function = piecewise_powerlaw
+xrange = -0.9879999999999696 0.9879999999999696 arcsec
+yunit = km/s
+sampling = 500
+linestyle = -
+color = #adacac
+model_amplitude = -10.10433339912845
+model_x_0 = 0.045662100456621
+model_alpha = 0.8797758199214607
+model_cons = 31.439426041696777
+model_x_mid = -0.013398523400697835
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_cons} ${model_x_mid}
+model_vsys = 32.078049620159284
+model_offset0 = 0.010738472822581564
+model_sd_amplitude = 3.5340477439237565
+model_sd_x_0 = 0.0
+model_sd_alpha = 0.18507297738554357
+model_sd_vsys = 0.3824613795865504
+model_sd_offset0 = 0.029737959955569472
+model_info = 1
+
+[G35.20_alma1_pvmap_out]
 loc = 0 1
+source = G35.20-0.74_N
+alma = 1
+paval = 80
+pvmap = ${results}/${source}_alma1_rotation.CH3OH_spw0.ra284.55397_dec1.67705.PA${paval}.fits
+xlim = -0.52 0.52 arcsec
+hlines = 32.11 km/s
+rms = 2.5 mJy/beam
+vmax = 86 mJy/beam
+
+[G351_alma2_pvmap_rot]
+loc = 1 0
+source = G351.77-0.54
+alma = 2
+paval = 130
+pvmap = ${results}/${source}_alma2_rotation.CH3OH_spw0.ra261.67722_dec-36.15483.PA${paval}.fits
+hlines = -3.83 km/s
+rms = 2.0 mJy/beam
+vmax = 45 mJy/beam
+
+[G351_alma2_pvmap_out]
+loc = 1 1
+source = G351.77-0.54
+alma = 2
+paval = 220
+pvmap = ${results}/${source}_alma2_rotation.CH3OH_spw0.ra261.67722_dec-36.15483.PA${paval}.fits
+hlines = -3.83 km/s
+rms = 2.0 mJy/beam
+vmax = 45 mJy/beam
+
+[I16562_alma1_pvmap_rot]
+loc = 2 0
 source = IRAS_165623959
-paval = 120
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc1_pvmaps
-pvmap = ${results}/${source}_hmc1_rotation.CH3CN_K3.ra254.92344_dec-40.06212.PA${paval}.fits
-label = IRAS 16562-3959 ALMA1 PA=${paval}${deg}
-#compute_ticks = false
-# Vlsr
+alma = 1
+paval = 10
+label = IRAS 16562-3959 ALMA${alma} PA=${paval}${deg}
+pvmap = ${results}/${source}_alma1_rotation.CH3CN_K3.ra254.92344_dec-40.06212.PA${paval}.fits
 hlines = -16.86 km/s
-# Contours
+rms = 1.4 mJy/beam
 vmax = 32 mJy/beam
 
-[I16562_hmc2_pvmap_rot]
-loc = 1 0
-source = IRAS_165623959
-paval = 45
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc2_pvmaps
-pvmap = ${results}/${source}_hmc2_rotation.CH3CN_K3.ra254.92120_dec-40.06086.PA${paval}.fits
-label = IRAS 16562-3959 ALMA2 PA=${paval}${deg}
-#compute_ticks = false
-# Vlsr
-hlines = -11.65 km/s
-# Contours
-vmax = 20 mJy/beam
-
-[I16562_hmc2_pvmap_out]
-loc = 1 1
-source = IRAS_165623959
-paval = 135
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc2_pvmaps
-pvmap = ${results}/${source}_hmc2_rotation.CH3CN_K3.ra254.92120_dec-40.06086.PA${paval}.fits
-label = IRAS 16562-3959 ALMA2 PA=${paval}${deg}
-#compute_ticks = false
-# Vlsr
-hlines = -11.65 km/s
-# Contours
-vmax = 20 mJy/beam
-
-[I18089_hmc1_pvmap_rot]
-loc = 2 0
-source = IRAS_180891732
-paval = 65
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc1_pvmaps
-pvmap = ${results}/${source}_hmc1_rotation.CH3CN_K3.ra272.96439_dec-17.52467.PA${paval}.fits
-label = IRAS 18089-1732 ALMA1 PA=${paval}${deg}
-#compute_ticks = false
-# Vlsr
-hlines = 32.88 km/s
-# Contours
-vmax = 52 mJy/beam
-
-[I18089_hmc1_pvmap_out]
+[I16562_alma1_pvmap_out]
 loc = 2 1
-source = IRAS_180891732
-paval = 155
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc1_pvmaps
-pvmap = ${results}/${source}_hmc1_rotation.CH3CN_K3.ra272.96439_dec-17.52467.PA${paval}.fits
-label = IRAS 18089-1732 ALMA1 PA=${paval}${deg}
-#compute_ticks = false
-# Vlsr
-hlines = 32.88 km/s
-# Contours
-vmax = 52 mJy/beam
+source = IRAS_165623959
+alma = 1
+paval = 100
+label = IRAS 16562-3959 ALMA${alma} PA=${paval}${deg}
+pvmap = ${results}/${source}_alma1_rotation.CH3CN_K3.ra254.92344_dec-40.06212.PA${paval}.fits
+hlines = -16.86 km/s
+rms = 1.4 mJy/beam
+vmax = 32 mJy/beam
 
-[I18089_hmc2_pvmap_rot]
+[I16562_alma2_pvmap_rot]
 loc = 3 0
-source = IRAS_180891732
-paval = 135
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc2_pvmaps
-pvmap = ${results}/${source}_hmc2_rotation.CH3CN_K3.ra272.96417_dec-17.52498.PA${paval}.fits
-label = IRAS 18089-1732 ALMA3 PA=${paval}${deg}
-#compute_ticks = false
-# Vlsr
-hlines = 33.02 km/s
-# Contours
-vmax = 35 mJy/beam
+source = IRAS_165623959
+alma = 2
+paval = 225
+label = IRAS 16562-3959 ALMA${alma} PA=${paval}${deg}
+pvmap = ${results}/${source}_alma2_rotation.CH3CN_K3.ra254.92120_dec-40.06086.PA${paval}.fits
+xlim = -0.25 0.25 arcsec
+hlines = -11.65 km/s
+rms = 1.4 mJy/beam
+vmax = 20 mJy/beam
+markers = 0.079 arcsec -9.3 km/s, -0.053 arcsec -14.6 km/s
+markers_physframe = data
+markers_marker = v, ^
+markers_mec = #46eff2
+markers_mfc = #46eff2
+markers_ms = 10
 
-[I18089_hmc2_pvmap_out]
+[I16562_alma2_pvmap_out]
 loc = 3 1
-source = IRAS_180891732
-paval = 45
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc2_pvmaps
-pvmap = ${results}/${source}_hmc2_rotation.CH3CN_K3.ra272.96417_dec-17.52498.PA${paval}.fits
-label = IRAS 18089-1732 ALMA3 PA=${paval}${deg}
-#compute_ticks = false
-# Vlsr
-hlines = 33.02 km/s
-# Contours
-vmax = 35 mJy/beam
-
+source = IRAS_165623959
+alma = 2
+paval = 315
+label = IRAS 16562-3959 ALMA${alma} PA=${paval}${deg}
+pvmap = ${results}/${source}_alma2_rotation.CH3CN_K3.ra254.92120_dec-40.06086.PA${paval}.fits
+xlim = -0.25 0.25 arcsec
+hlines = -11.65 km/s
+rms = 1.4 mJy/beam
+vmax = 20 mJy/beam
