--- a/configs/plots/papers/group_pv_maps.9.cfg
+++ b/configs/plots/papers/group_pv_maps.9.cfg
@@ -1,7 +1,7 @@
 [DEFAULT]
 ncols = 2
 nrows = 4
-sharex = false 
+sharex = false
 sharey = false
 styles = maps inferno aspect_auto
 vertical_cbar = false
@@ -19,6 +19,9 @@ xunit = arcsec
 yunit = km/s
 xname = Offset
 yname = Velocity
+name = Intensity
+unit = mJy/beam
+stretch = linear
 nsigma = 3
 contour_linewidth = 0.5
 contour_stretch = log
@@ -26,125 +29,271 @@ xticks_fmt = {x:.1f}
 yticks_fmt = {x:.0f}
 inverty = true
 ticks_color = w
-name = Intensity
-unit = mJy/beam
-stretch = linear
-# Artists
+label = ${source} ALMA${alma} PA=${paval}${deg}
 vlines = 0 arcsec
 vlines_linestyle = :
 vlines_color = #35ff2c
-# Vlsr
 hlines_linestyle = --
 hlines_color = #35ff2c
-# Contours
 self_contours = true
 vmin = 0. mJy/beam
-# Non-standard
-basedir = /Volumes/Pegasus32 R8/dihca
-contdir = ${basedir}/source_data/continuum
+basedir = ..
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma${alma}_pvmaps
 deg = $$^\circ$$
 
-[NGC6334IN_hmc2_pvmap_rot]
+[I18182_alma3_pvmap_rot]
 loc = 0 0
-source = NGC_6334_I_N
-paval = 130
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc2_pvmaps
-pvmap = ${results}/${source}_hmc2_rotation.CH3OH_spw0.ra260.22996_dec-35.75110.PA${paval}.fits
-label = NGC 6334I(N) ALMA1 PA=${paval}${deg}
-#compute_ticks = false
-# Vlsr
-hlines = -1.77 km/s
-# Contours
-vmax = 22 mJy/beam
+source = IRAS_18182-1433
+alma = 3
+paval = 10
+label = IRAS 18182-1433 ALMA${alma} PA=${paval}${deg}
+pvmap = ${results}/${source}_alma3_rotation.CH3CN_K3.ra275.28802_dec-14.53017.PA${paval}.fits
+hlines = 61.12 km/s
+rms = 1.4 mJy/beam
+vmax = 40 mJy/beam
 
-[NGC6334IN_hmc2_pvmap_out]
+[IRAS_18182-1433_alma3_pvedge]
+loc = 0 0
+structured_array = ../results/IRAS_18182-1433/c5c8/per_hot_core/alma3_pvmaps/IRAS_18182-1433_alma3_rotation.CH3CN_K3.ra275.28802_dec-14.53017.PA10.edge.dat
+marker = o
+color = #46eff2
+linestyle = none
+plot_keys = OFFSET, VRAD
+
+[IRAS_18182-1433_alma3_keplerian_fit]
+loc = 0 0
+function = piecewise_powerlaw
+xrange = -0.4900000000000392 0.4900000000000392 arcsec
+yunit = km/s
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 17.27677520629488 solMass
+model_amplitude = -12.380108539151216
+model_x_0 = 0.027932960893854747
+model_alpha = 0.5
+model_cons = 59.94393380781876
+model_x_mid = -0.050224147503313124
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_sd_mass = 1.2395565287567358 solMass
+model_vsys = 60.16600044882333
+model_offset0 = -0.05398330020586529
+model_sd_amplitude = 0.4441177298188892
+model_sd_x_0 = 0.0
+model_sd_alpha = 0.0
+model_sd_vsys = 0.0
+model_sd_offset0 = 0.0
+model_info = 1
+
+[IRAS_18182-1433_alma3_unrestricted_fit]
+loc = 0 0
+function = piecewise_powerlaw
+xrange = -0.4900000000000392 0.4900000000000392 arcsec
+yunit = km/s
+sampling = 500
+linestyle = -
+color = #adacac
+model_amplitude = -17.164808842139003
+model_x_0 = 0.027932960893854747
+model_alpha = 0.7093529553250641
+model_cons = 59.94393380781876
+model_x_mid = -0.050224147503313124
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_vsys = 60.16600044882333
+model_offset0 = -0.05398330020586529
+model_sd_amplitude = 1.7328587405640883
+model_sd_x_0 = 0.0
+model_sd_alpha = 0.05803700154932522
+model_sd_vsys = 0.19196252926004218
+model_sd_offset0 = 0.006450104777827863
+model_info = 1
+
+[I18182_alma3_pvmap_out]
 loc = 0 1
-source = NGC_6334_I_N
-paval = 40
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc2_pvmaps
-pvmap = ${results}/${source}_hmc2_rotation.CH3OH_spw0.ra260.22996_dec-35.75110.PA${paval}.fits
-label = NGC 6334I(N) ALMA1 PA=${paval}${deg}
-#compute_ticks = false
-# Vlsr
-hlines = -1.77 km/s
-# Contours
-vmax = 22 mJy/beam
+source = IRAS_18182-1433
+alma = 3
+paval = 100
+label = IRAS 18182-1433 ALMA${alma} PA=${paval}${deg}
+pvmap = ${results}/${source}_alma3_rotation.CH3CN_K3.ra275.28802_dec-14.53017.PA${paval}.fits
+hlines = 61.12 km/s
+rms = 1.4 mJy/beam
+vmax = 40 mJy/beam
 
-[NGC6334IN_hmc1_pvmap_rot]
+[I18182_alma5_pvmap_rot]
 loc = 1 0
-source = NGC_6334_I_N
-paval = 125
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc1_pvmaps
-pvmap = ${results}/${source}_hmc1_rotation.CH3OH_spw0.ra260.22747_dec-35.75482.PA${paval}.fits
-label = NGC 6334I(N) ALMA2 PA=${paval}${deg}
-#compute_ticks = false
-# Vlsr
-hlines = 0.74 km/s
-# Contours
-vmax = 16 mJy/beam
+source = IRAS_18182-1433
+alma = 5
+paval = 40
+label = IRAS 18182-1433 ALMA${alma} PA=${paval}${deg}
+pvmap = ${results}/${source}_alma5_rotation.CH3CN_K3.ra275.28757_dec-14.52998.PA${paval}.fits
+xlim = -0.1 0.12 arcsec
+hlines = 61.12 km/s
+rms = 1.4 mJy/beam
+vmax = 15 mJy/beam
+markers = 0.036 arcsec 65.0 km/s, 0.0 arcsec 59.1 km/s
+markers_physframe = data
+markers_marker = v, ^
+markers_mec = #46eff2
+markers_mfc = #46eff2
+markers_ms = 10
 
-[NGC6334IN_hmc1_pvmap_out]
+[I18182_alma5_pvmap_out]
 loc = 1 1
-source = NGC_6334_I_N
-paval = 35
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc1_pvmaps
-pvmap = ${results}/${source}_hmc1_rotation.CH3OH_spw0.ra260.22747_dec-35.75482.PA${paval}.fits
-label = NGC 6334I(N) ALMA2 PA=${paval}${deg}
-#compute_ticks = false
-# Vlsr
-hlines = 0.74 km/s
-# Contours
-vmax = 16 mJy/beam
+source = IRAS_18182-1433
+alma = 5
+paval = 130
+label = IRAS 18182-1433 ALMA${alma} PA=${paval}${deg}
+pvmap = ${results}/${source}_alma5_rotation.CH3CN_K3.ra275.28757_dec-14.52998.PA${paval}.fits
+xlim = -0.13 0.13 arcsec
+hlines = 61.12 km/s
+rms = 1.4 mJy/beam
+vmax = 15 mJy/beam
 
-[NGC6334IN_hmc4_pvmap_rot]
+[NGC6334IN_alma1_pvmap_rot]
 loc = 2 0
 source = NGC_6334_I_N
-paval = 130
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc4_pvmaps
-pvmap = ${results}/${source}_hmc4_rotation.CH3OH_spw0.ra260.22863_dec-35.75179.PA${paval}.fits
-label = NGC 6334I(N) ALMA4 PA=${paval}${deg}
-#compute_ticks = false
-# Vlsr
-hlines = -6.7 km/s
-# Contours
+alma = 1
+paval = 310
+label = NGC 6334I(N) ALMA${alma} PA=${paval}${deg}
+pvmap = ${results}/${source}_alma1_rotation.CH3OH_spw0.ra260.22996_dec-35.75110.PA${paval}.fits
+hlines = -1.77 km/s
+rms = 1.7 mJy/beam
 vmax = 22 mJy/beam
 
-[NGC6334IN_hmc4_pvmap_out]
+[NGC_6334_I_N_alma1_pvedge]
+loc = 2 0
+structured_array = ../results/NGC_6334_I_N/c5c8/per_hot_core/alma1_pvmaps/NGC_6334_I_N_alma1_rotation.CH3OH_spw0.ra260.22996_dec-35.75110.PA310.edge.dat
+marker = o
+color = #46eff2
+linestyle = none
+plot_keys = OFFSET, VRAD
+
+[NGC_6334_I_N_alma1_keplerian_fit]
+loc = 2 0
+function = piecewise_powerlaw
+xrange = -0.9945 0.9945 arcsec
+yunit = km/s
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 13.314763027706906 solMass
+model_amplitude = -10.868255301361478
+model_x_0 = 0.07407407407407407
+model_alpha = 0.5
+model_cons = -3.3092519025572855
+model_x_mid = 0.09076994448023944
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_cons} ${model_x_mid}
+model_sd_mass = 0.8787479308008161 solMass
+model_vsys = -2.6297957890669053
+model_offset0 = -0.007751286765646641
+model_sd_amplitude = 0.45490627902766256
+model_sd_x_0 = 0.0
+model_sd_alpha = 0.0
+model_sd_vsys = 0.0
+model_sd_offset0 = 0.0
+model_info = 1
+
+[NGC_6334_I_N_alma1_unrestricted_fit]
+loc = 2 0
+function = piecewise_powerlaw
+xrange = -0.9945 0.9945 arcsec
+yunit = km/s
+sampling = 500
+linestyle = -
+color = #adacac
+model_amplitude = -11.74036673400669
+model_x_0 = 0.07407407407407407
+model_alpha = 0.5618892355447928
+model_cons = -3.3092519025572855
+model_x_mid = 0.09076994448023944
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_cons} ${model_x_mid}
+model_vsys = -2.6297957890669053
+model_offset0 = -0.007751286765646641
+model_sd_amplitude = 0.39917798810806226
+model_sd_x_0 = 0.0
+model_sd_alpha = 0.04305387568009426
+model_sd_vsys = 0.3070006005222056
+model_sd_offset0 = 0.006932888523648618
+model_info = 1
+
+[NGC6334IN_alma1_pvmap_out]
 loc = 2 1
 source = NGC_6334_I_N
+alma = 1
 paval = 40
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc4_pvmaps
-pvmap = ${results}/${source}_hmc4_rotation.CH3OH_spw0.ra260.22863_dec-35.75179.PA${paval}.fits
-label = NGC 6334I(N) ALMA4 PA=${paval}${deg}
-#compute_ticks = false
-# Vlsr
-hlines = -6.7 km/s
-# Contours
+label = NGC 6334I(N) ALMA${alma} PA=${paval}${deg}
+pvmap = ${results}/${source}_alma1_rotation.CH3OH_spw0.ra260.22996_dec-35.75110.PA${paval}.fits
+hlines = -1.77 km/s
+rms = 1.7 mJy/beam
 vmax = 22 mJy/beam
 
-[NGC6334IN_hmc3_pvmap_rot]
+[NGC6334IN_alma2_pvmap_rot]
 loc = 3 0
 source = NGC_6334_I_N
-paval = 130
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc3_pvmaps
-pvmap = ${results}/${source}_hmc3_rotation.CH3OH_spw0.ra260.22758_dec-35.75241.PA${paval}.fits
-label = NGC 6334I(N) ALMA6 PA=${paval}${deg}
-#compute_ticks = false
-# Vlsr
-hlines = -7.2 km/s
-# Contours
-vmax = 40 mJy/beam
+alma = 2
+paval = -55
+label = NGC 6334I(N) ALMA${alma} PA=${paval}${deg}
+pvmap = ${results}/${source}_alma2_rotation.CH3OH_spw0.ra260.22747_dec-35.75482.PA${paval}.fits
+xlim = -0.3 0.3 arcsec
+hlines = -3.9 km/s
+rms = 1.5 mJy/beam
+vmax = 16 mJy/beam
+markers = -0.15 arcsec -8.65 km/s, 0.11 arcsec -0.514 km/s
+markers_physframe = data
+markers_marker = ^, v
+markers_mec = #46eff2
+markers_mfc = #46eff2
+markers_ms = 10
 
-[NGC6334IN_hmc3_pvmap_out]
+[NGC6334IN_alma2_pvmap_out]
 loc = 3 1
 source = NGC_6334_I_N
-paval = 40
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc3_pvmaps
-pvmap = ${results}/${source}_hmc3_rotation.CH3OH_spw0.ra260.22758_dec-35.75241.PA${paval}.fits
-label = NGC 6334I(N) ALMA6 PA=${paval}${deg}
-#compute_ticks = false
-# Vlsr
-hlines = -7.2 km/s
-# Contours
-vmax = 40 mJy/beam
+alma = 2
+paval = 35
+label = NGC 6334I(N) ALMA${alma} PA=${paval}${deg}
+pvmap = ${results}/${source}_alma2_rotation.CH3OH_spw0.ra260.22747_dec-35.75482.PA${paval}.fits
+xlim = -0.3 0.3 arcsec
+ylim = -15 10 km/s
+hlines = -3.9 km/s
+rms = 1.5 mJy/beam
+vmax = 16 mJy/beam
+
+[NGC_6334_I_N_alma2_pvedge]
+loc = 3 0
+structured_array = ../results/NGC_6334_I_N/c5c8/per_hot_core/alma2_pvmaps/NGC_6334_I_N_alma2_rotation.CH3OH_spw0.ra260.22747_dec-35.75482.PA-55.edge.dat
+marker = o
+color = #46eff2
+linestyle = none
+plot_keys = OFFSET, VRAD
+
+[NGC_6334_I_N_alma2_keplerian_fit]
+loc = 3 0
+function = piecewise_powerlaw
+xrange = -0.49500000000000005 0.49500000000000005 arcsec
+yunit = km/s
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 1.7369217645337192 solMass
+model_amplitude = -3.9253938665973775
+model_x_0 = 0.07407407407407407
+model_alpha = 0.5
+model_cons = -5.535415394689714
+model_x_mid = -0.04322151296390041
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_cons} ${model_x_mid}
+
+[NGC_6334_I_N_alma2_unrestricted_fit]
+loc = 3 0
+function = piecewise_powerlaw
+xrange = -0.49500000000000005 0.49500000000000005 arcsec
+yunit = km/s
+sampling = 500
+linestyle = -
+color = #adacac
+model_amplitude = -5.053612623149221
+model_x_0 = 0.07407407407407407
+model_alpha = 0.9629739489632971
+model_cons = -5.535415394689714
+model_x_mid = -0.04322151296390041
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_cons} ${model_x_mid}
 
