--- a/configs/NGC6334I.cfg
+++ b/configs/NGC6334I.cfg
@@ -3,10 +3,9 @@ name = NGC6334I
 ra = 17h20m53.4187s
 dec = -35d46m57.8977s
 frame = icrs
-basedir = /data/share/binary_project/NGC_6334/NGC6334I
-sourcedata = /Volumes/Pegasus32 R8/dihca/source_data
-cubesdir = /Volumes/Pegasus32 R8/dihca/source_data/clean_cubes/
-distance = 1.7 kpc
+sourcedata = ../source_data
+cubesdir = ../source_data/clean_cubes/
+distance = 1.35 kpc
 vlsr = -8.0 km/s
 
 [ALMA1]
@@ -211,3 +210,8 @@ file = ${cubesdir}/c5c8_CH3OH/NGC6334I_spw0_0-1000.image.fits
 rms = 1.8 mJy/beam
 molecules = CH3OH
 
+[b6_c5c8_spw3_nocontsub]
+type = spectral_cube
+file = ${cubesdir}/c5c8_spw3/no_contsub/NGC6334I_spw3.image.fits
+#rms = 1.5 mJy/beam
+molecules = CH3CN
