--- a/configs/NGC_6334_I_N.cfg
+++ b/configs/NGC_6334_I_N.cfg
@@ -3,9 +3,8 @@ name = NGC_6334_I_N
 ra = 17h20m54.5923s
 dec = -35d45m17.3688s
 frame = icrs
-basedir = /data/share/binary_project/NGC_6334/NGC_6334_I_N
-sourcedata = /Volumes/Pegasus32 R8/dihca/source_data
-cubesdir = /Volumes/Pegasus32 R8/dihca/source_data/clean_cubes/
+sourcedata = ../source_data
+cubesdir = ../source_data/clean_cubes/
 distance = 1.35 kpc
 vlsr = -5.0 km/s
 
@@ -301,9 +300,20 @@ frame = icrs
 type = fits_file
 file = ${sourcedata}/continuum/NGC_6334_I_N.config8.cont_avg.selfcal_0.5_hogbom.image.fits
 
-[b6_c5c8_spw0_1000]
+#[b6_c5c8_spw0_1000]
+#type = spectral_cube
+#file = ${cubesdir}/c5c8_CH3OH/NGC_6334_I_N_spw0_0-1000.image.fits
+#rms = 1.6 mJy/beam
+#molecules = CH3OH
+
+[b6_c5c8_spw0_1000_nosontsub]
 type = spectral_cube
-file = ${cubesdir}/c5c8_CH3OH/NGC_6334_I_N_spw0_0-1000.image.fits
+file = ${cubesdir}/c5c8_CH3OH/no_contsub/NGC_6334_I_N_spw0_0-1000.image.fits
 rms = 1.6 mJy/beam
 molecules = CH3OH
 
+#[b6_c5c8_spw3_nocontsub]
+#type = spectral_cube
+#file = ${cubesdir}/c5c8_spw3/no_contsub/NGC_6334_I_N_spw3.image.fits
+#rms = 1.5 mJy/beam
+#molecules = CH3CN
