--- a/configs/W33A.cfg
+++ b/configs/W33A.cfg
@@ -3,9 +3,9 @@ name = W33A
 ra = 18h14m39.5097s
 dec = -17d52m00.139s
 frame = icrs
-basedir = /data/share/binary_project/source_data/W33A
-sourcedata = /Volumes/Pegasus32 R8/dihca/source_data
-cubesdir = /Volumes/Pegasus32 R8/dihca/source_data/clean_cubes/
+basedir = ../source_data/W33A
+sourcedata = ../source_data
+cubesdir = ../source_data/clean_cubes/
 distance = 2.53 kpc
 vlsr = 37.9 km/s
 
@@ -221,3 +221,8 @@ file = ${cubesdir}/c5c8_CH3OH/W33A_spw0_0-1000.image.fits
 rms = 1.2 mJy/beam
 molecules = CH3OH
 
+[b6_c5c8_spw3_nocontsub]
+type = spectral_cube
+file = ${cubesdir}/c5c8_spw3/no_contsub/W33A_spw3.image.fits
+#rms = 1.2 mJy/beam
+molecules = CH3CN
