--- a/configs/extracted/G11.92-0.61_alma3.cfg
+++ b/configs/extracted/G11.92-0.61_alma3.cfg
@@ -8,8 +8,8 @@ distance = 3.37 kpc
 # From mom 1 CH3CN 12-11 K2
 vlsr = 35.7 km/s
 radius = 0.0287 arcsec
-sourcedata = /Volumes/Pegasus32 R8/dihca/source_data
-subcubes = /Volumes/Pegasus32 R8/dihca/results/${name}/c5c8/per_hot_core/
+sourcedata = ../source_data
+subcubes = ../results/${name}/c5c8/per_hot_core/
 
 [b6_c8_continuum]
 type = fits_file
@@ -31,35 +31,35 @@ chan_width = 488 kHz
 
 [b6_c5c8_spw0_1000_CH3OH_18_3_15_-17_4_14_A_vt_0]
 type = spectral_cube
-file = ../results/G11.92-0.61/c5c8/per_hot_core/line_cubes/hmc3_CH3OH_18_3_15_-17_4_14_A_vt_0_nchans40.fits
+file = ../results/G11.92-0.61/c5c8/per_hot_core/line_cubes/alma3_CH3OH_18_3_15_-17_4_14_A_vt_0_nchans40.fits
 rms = 1.2 mJy/beam
 molecules = CH3OH
 chan_width = 976 kHz
 
 [b6_c5c8_spw3_CH3CN_12_2_-11_2_]
 type = spectral_cube
-file = ../results/G11.92-0.61/c5c8/per_hot_core/line_cubes/hmc3_CH3CN_12_2_-11_2__nchans40.fits
+file = ../results/G11.92-0.61/c5c8/per_hot_core/line_cubes/alma3_CH3CN_12_2_-11_2__nchans40.fits
 rms = 1.2 mJy/beam
 molecules = CH3CN
 chan_width = 488 kHz
 
 [b6_c5c8_spw3_CH3CN_12_3_-11_3_]
 type = spectral_cube
-file = ../results/G11.92-0.61/c5c8/per_hot_core/line_cubes/hmc3_CH3CN_12_3_-11_3__nchans40.fits
+file = ../results/G11.92-0.61/c5c8/per_hot_core/line_cubes/alma3_CH3CN_12_3_-11_3__nchans40.fits
 rms = 1.2 mJy/beam
 molecules = CH3CN
 chan_width = 488 kHz
 
 [b6_c5c8_spw3_CH3CN_12_4_-11_4_]
 type = spectral_cube
-file = ../results/G11.92-0.61/c5c8/per_hot_core/line_cubes/hmc3_CH3CN_12_4_-11_4__nchans40.fits
+file = ../results/G11.92-0.61/c5c8/per_hot_core/line_cubes/alma3_CH3CN_12_4_-11_4__nchans40.fits
 rms = 1.2 mJy/beam
 molecules = CH3CN
 chan_width = 488 kHz
 
 [b6_c5c8_spw3_CH3CN_12_8_-11_8_]
 type = spectral_cube
-file = ../results/G11.92-0.61/c5c8/per_hot_core/line_cubes/hmc3_CH3CN_12_8_-11_8__nchans40.fits
+file = ../results/G11.92-0.61/c5c8/per_hot_core/line_cubes/alma3_CH3CN_12_8_-11_8__nchans40.fits
 rms = 1.2 mJy/beam
 molecules = CH3CN
 chan_width = 488 kHz
