--- a/configs/extracted/G335.78+0.17_alma1.cfg
+++ b/configs/extracted/G335.78+0.17_alma1.cfg
@@ -6,8 +6,8 @@ frame = icrs
 distance = 3.2 kpc
 vlsr = -48.94 km/s
 radius = 0.049 arcsec
-sourcedata = /Volumes/Pegasus32 R8/dihca/source_data
-subcubes = /Volumes/Pegasus32 R8/dihca/results/${name}/c5c8/per_hot_core/
+sourcedata = ../source_data
+subcubes = ../results/${name}/c5c8/per_hot_core/
 
 [b6_c8_continuum]
 type = fits_file
@@ -22,7 +22,7 @@ chan_width = 488 kHz
 
 [b6_c5c8_spw0_1000_CH3OH_18_3_15_-17_4_14_A_vt_0]
 type = spectral_cube
-file = ../results/G335.78+0.17/c5c8/per_hot_core/line_cubes/hmc1_CH3OH_18_3_15_-17_4_14_A_vt_0_nchans60.fits
+file = ../results/G335.78+0.17/c5c8/per_hot_core/line_cubes/alma1_CH3OH_18_3_15_-17_4_14_A_vt_0_nchans60.fits
 rms = 2.0 mJy/beam
 molecules = CH3OH
 chan_width = 488 kHz
