--- a/configs/extracted/G351.77-0.54_alma2.cfg
+++ b/configs/extracted/G351.77-0.54_alma2.cfg
@@ -8,8 +8,8 @@ frame = icrs
 distance = 2.0 kpc
 vlsr = -3.83 km/s
 radius = 0.035 arcsec
-sourcedata = /Volumes/Pegasus32 R8/dihca/source_data
-subcubes = /Volumes/Pegasus32 R8/dihca/results/${name}/c5c8/per_hot_core/
+sourcedata = ../source_data
+subcubes = ../results/${name}/c5c8/per_hot_core/
 
 [b6_c8_continuum]
 type = fits_file
@@ -24,7 +24,7 @@ chan_width = 488 kHz
 
 [b6_c5c8_spw0_1000_CH3OH_18_3_15_-17_4_14_A_vt_0]
 type = spectral_cube
-file = ../results/G351.77-0.54/c5c8/per_hot_core/line_cubes/hmc1_CH3OH_18_3_15_-17_4_14_A_vt_0_nchans40.fits
+file = ../results/G351.77-0.54/c5c8/per_hot_core/line_cubes/alma2_CH3OH_18_3_15_-17_4_14_A_vt_0_nchans40.fits
 rms = 2.1 mJy/beam
 molecules = CH3OH
 chan_width = 488 kHz
