--- a/configs/extracted/IRAS_165623959_alma1.cfg
+++ b/configs/extracted/IRAS_165623959_alma1.cfg
@@ -6,8 +6,8 @@ frame = icrs
 distance = 2.38 kpc
 vlsr = -16.86 km/s
 radius = 0.03 arcsec
-sourcedata = /Volumes/Pegasus32 R8/dihca/source_data
-subcubes = /Volumes/Pegasus32 R8/dihca/results/${name}/c5c8/per_hot_core/
+sourcedata = ../source_data
+subcubes = ../results/${name}/c5c8/per_hot_core/
 
 [b6_c8_continuum]
 type = fits_file
@@ -22,28 +22,28 @@ chan_width = 488 kHz
 
 [b6_c5c8_spw3_CH3CN_12_2_-11_2_]
 type = spectral_cube
-file = ../results/IRAS_165623959/c5c8/per_hot_core/line_cubes/hmc1_CH3CN_12_2_-11_2__nchans40.fits
+file = ../results/IRAS_165623959/c5c8/per_hot_core/line_cubes/alma1_CH3CN_12_2_-11_2__nchans40.fits
 rms = 1.5 mJy/beam
 molecules = CH3CN
 chan_width = 488 kHz
 
 [b6_c5c8_spw3_CH3CN_12_3_-11_3_]
 type = spectral_cube
-file = ../results/IRAS_165623959/c5c8/per_hot_core/line_cubes/hmc1_CH3CN_12_3_-11_3__nchans40.fits
+file = ../results/IRAS_165623959/c5c8/per_hot_core/line_cubes/alma1_CH3CN_12_3_-11_3__nchans40.fits
 rms = 1.5 mJy/beam
 molecules = CH3CN
 chan_width = 488 kHz
 
 [b6_c5c8_spw3_CH3CN_12_4_-11_4_]
 type = spectral_cube
-file = ../results/IRAS_165623959/c5c8/per_hot_core/line_cubes/hmc1_CH3CN_12_4_-11_4__nchans40.fits
+file = ../results/IRAS_165623959/c5c8/per_hot_core/line_cubes/alma1_CH3CN_12_4_-11_4__nchans40.fits
 rms = 1.5 mJy/beam
 molecules = CH3CN
 chan_width = 488 kHz
 
 [b6_c5c8_spw3_CH3CN_12_8_-11_8_]
 type = spectral_cube
-file = ../results/IRAS_165623959/c5c8/per_hot_core/line_cubes/hmc1_CH3CN_12_8_-11_8__nchans40.fits
+file = ../results/IRAS_165623959/c5c8/per_hot_core/line_cubes/alma1_CH3CN_12_8_-11_8__nchans40.fits
 rms = 1.5 mJy/beam
 molecules = CH3CN
 chan_width = 488 kHz
