--- a/configs/extracted/IRDC_182231243_alma1.cfg
+++ b/configs/extracted/IRDC_182231243_alma1.cfg
@@ -20,10 +20,40 @@ rms = 1.3 mJy/beam
 molecules = CH3OH
 chan_width = 976 kHz
 
+[b6_c5c8_spw3]
+type = spectral_cube
+file = ${subcubes}/spw3_from_CH3CN.structure23.subcube.fits
+molecules = CH3CN
+chan_width = 488 kHz
+
 [b6_c5c8_spw0_1000_CH3OH_18_3_15_-17_4_14_A_vt_0]
 type = spectral_cube
 file = ../results/IRDC_182231243/c5c8/per_hot_core/line_cubes/hmc1_CH3OH_18_3_15_-17_4_14_A_vt_0_nchans40.fits
 rms = 1.3 mJy/beam
 molecules = CH3OH
 chan_width = 976 kHz
+
+[b6_c5c8_spw3_CH3CN_12_2_-11_2_]
+type = spectral_cube
+file = ../results/IRDC_182231243/c5c8/per_hot_core/line_cubes/alma1_CH3CN_12_2_-11_2__nchans40.fits
+molecules = CH3CN
+chan_width = 488 kHz
+
+[b6_c5c8_spw3_CH3CN_12_3_-11_3_]
+type = spectral_cube
+file = ../results/IRDC_182231243/c5c8/per_hot_core/line_cubes/alma1_CH3CN_12_3_-11_3__nchans40.fits
+molecules = CH3CN
+chan_width = 488 kHz
+
+[b6_c5c8_spw3_CH3CN_12_4_-11_4_]
+type = spectral_cube
+file = ../results/IRDC_182231243/c5c8/per_hot_core/line_cubes/alma1_CH3CN_12_4_-11_4__nchans40.fits
+molecules = CH3CN
+chan_width = 488 kHz
+
+[b6_c5c8_spw3_CH3CN_12_8_-11_8_]
+type = spectral_cube
+file = ../results/IRDC_182231243/c5c8/per_hot_core/line_cubes/alma1_CH3CN_12_8_-11_8__nchans40.fits
+molecules = CH3CN
+chan_width = 488 kHz
 
