--- a/configs/extracted/NGC_6334_I_N_alma1.cfg
+++ b/configs/extracted/NGC_6334_I_N_alma1.cfg
@@ -7,8 +7,8 @@ frame = icrs
 distance = 1.35 kpc
 vlsr = -1.77 km/s
 radius = 0.049 arcsec
-sourcedata = /Volumes/Pegasus32 R8/dihca/source_data
-subcubes = /Volumes/Pegasus32 R8/dihca/results/${name}/c5c8/per_hot_core/
+sourcedata = ../source_data
+subcubes = ../results/${name}/c5c8/per_hot_core/
 
 [b6_c8_continuum]
 type = fits_file
@@ -16,8 +16,8 @@ file = ${sourcedata}/continuum/NGC_6334_I_N.config8.cont_avg.selfcal_0.5_hogbom.
 
 [b6_c5c8_spw0_1000]
 type = spectral_cube
-file = ${subcubes}/spw0_from_CH3OH.structure10.subcube.fits
-rms = 1.6 mJy/beam
+file = ${subcubes}/spw0_from_CH3OH.structure27.subcube.contsub.fits
+rms = 1.8 mJy/beam
 molecules = CH3OH
 chan_width = 488 kHz
 
@@ -26,13 +26,6 @@ type = spectral_cube
 file = ${subcubes}/spw3_from_CH3CN.structure286.subcube.contsub.fits
 rms = 1.8 mJy/beam
 molecules = CH3CN
-chan_width = 488 kHz
-
-[b6_c5c8_spw0_1000_CH3OH_18_3_15_-17_4_14_A_vt_0]
-type = spectral_cube
-file = ../results/NGC_6334_I_N/c5c8/per_hot_core/line_cubes/hmc2_CH3OH_18_3_15_-17_4_14_A_vt_0_nchans40.fits
-rms = 1.6 mJy/beam
-molecules = CH3OH
 chan_width = 488 kHz
 
 [b6_c5c8_spw3_CH3CN_12_2_-11_2_]
@@ -61,5 +54,12 @@ type = spectral_cube
 file = ../results/NGC_6334_I_N/c5c8/per_hot_core/line_cubes/alma1_CH3CN_12_8_-11_8__nchans40.fits
 rms = 1.8 mJy/beam
 molecules = CH3CN
+chan_width = 488 kHz
+
+[b6_c5c8_spw0_1000_CH3OH_18_3_15_-17_4_14_A_vt_0]
+type = spectral_cube
+file = ../results/NGC_6334_I_N/c5c8/per_hot_core/line_cubes/alma1_CH3OH_18_3_15_-17_4_14_A_vt_0_nchans40.fits
+rms = 1.8 mJy/beam
+molecules = CH3OH
 chan_width = 488 kHz
 
