--- a/configs/extracted/pvmaps/G11.1-0.12_alma1_rotation.cfg
+++ b/configs/extracted/pvmaps/G11.1-0.12_alma1_rotation.cfg
@@ -1,6 +1,6 @@
 [DEFAULT]
-moldir = /Volumes/Pegasus32 R8/dihca/scripts/molecules
-pas = 25 115 deg
+moldir = ./molecules
+pas = 25 -65 deg
 
 [CH3CN_K2]
 molecule = CH3CN
