--- a/configs/extracted/pvmaps/G11.92-0.61_alma1a_rotation.cfg
+++ b/configs/extracted/pvmaps/G11.92-0.61_alma1a_rotation.cfg
@@ -1,6 +1,6 @@
 [DEFAULT]
-moldir = /Volumes/Pegasus32 R8/dihca/scripts/molecules
-pas = 39 45 129 135 deg
+moldir = ./molecules
+pas = 129 135 219 225 deg
 
 [CH3OH_spw0]
 molecule = CH3OH
@@ -8,7 +8,7 @@ qns = 18(3,15)-17(4,14)A,vt=0
 line_lists = CDMS
 restore_molecule = ${moldir}/ch3oh.json
 source_section = b6_c5c8_spw0_1000
-length = 1 arcsec
+length = 2 arcsec
 width = 0.05 arcsec
 freq_slab = 28 MHz
 
@@ -18,7 +18,7 @@ qns = 12(2)-11(2)
 line_lists = CDMS
 restore_molecule = ${moldir}/ch3cn.json
 source_section = b6_c5c8_spw3
-length = 1 arcsec
+length = 2 arcsec
 width = 0.05 arcsec
 freq_slab = 28 MHz
 
@@ -28,6 +28,6 @@ qns = 12(3)-11(3)
 line_lists = CDMS
 restore_molecule = ${moldir}/ch3cn.json
 source_section = b6_c5c8_spw3
-length = 1 arcsec
+length = 2 arcsec
 width = 0.05 arcsec
 freq_slab = 28 MHz
