--- a/configs/extracted/pvmaps/G11.92-0.61_alma1b_rotation.cfg
+++ b/configs/extracted/pvmaps/G11.92-0.61_alma1b_rotation.cfg
@@ -1,6 +1,6 @@
 [DEFAULT]
-moldir = /Volumes/Pegasus32 R8/dihca/scripts/molecules
-pas = 75 165 deg
+moldir = ./molecules
+pas = -15 75 deg
 
 [CH3CN_K2]
 molecule = CH3CN
