--- a/configs/extracted/pvmaps/G11.92-0.61_alma3_rotation.cfg
+++ b/configs/extracted/pvmaps/G11.92-0.61_alma3_rotation.cfg
@@ -1,6 +1,6 @@
 [DEFAULT]
-moldir = /Volumes/Pegasus32 R8/dihca/scripts/molecules
-pas = 45 65 135 155 deg
+moldir = ./molecules
+pas = 225 245 315 335 deg
 
 [CH3CN_K2]
 molecule = CH3CN
