--- a/configs/extracted/pvmaps/G333.12-0.56_alma2_rotation.cfg
+++ b/configs/extracted/pvmaps/G333.12-0.56_alma2_rotation.cfg
@@ -1,6 +1,6 @@
 [DEFAULT]
-moldir = /Volumes/Pegasus32 R8/dihca/scripts/molecules
-pas = 0 50 90 140 deg
+moldir = ./molecules
+pas = 50 90 140 180 deg
 
 #[CH3OH_spw0]
 #molecule = CH3OH
