--- a/configs/extracted/pvmaps/G335.78+0.17_alma1_rotation.cfg
+++ b/configs/extracted/pvmaps/G335.78+0.17_alma1_rotation.cfg
@@ -1,6 +1,6 @@
 [DEFAULT]
-moldir = /Volumes/Pegasus32 R8/dihca/scripts/molecules
-pas = 34 55 125 145 deg
+moldir = ./molecules
+pas = 215 235 305 325 deg
 
 [CH3OH_spw0]
 molecule = CH3OH
