--- a/configs/extracted/pvmaps/IRAS_165623959_alma1_rotation.cfg
+++ b/configs/extracted/pvmaps/IRAS_165623959_alma1_rotation.cfg
@@ -1,6 +1,6 @@
 [DEFAULT]
-moldir = /Volumes/Pegasus32 R8/dihca/scripts/molecules
-pas = 30 80 120 170 deg
+moldir = ./molecules
+pas = -80 -30 -20 10 30 60 70 80 100 120 170 190 210 300 deg
 
 [CH3CN_K2]
 molecule = CH3CN
