--- a/configs/extracted/pvmaps/IRAS_165623959_alma2_rotation.cfg
+++ b/configs/extracted/pvmaps/IRAS_165623959_alma2_rotation.cfg
@@ -1,6 +1,6 @@
 [DEFAULT]
-moldir = /Volumes/Pegasus32 R8/dihca/scripts/molecules
-pas = 0 45 90 135 deg
+moldir = ./molecules
+pas = 225 270 315 0 deg
 
 [CH3CN_K2]
 molecule = CH3CN
