--- a/configs/extracted/pvmaps/IRAS_180891732_alma3_rotation.cfg
+++ b/configs/extracted/pvmaps/IRAS_180891732_alma3_rotation.cfg
@@ -1,6 +1,6 @@
 [DEFAULT]
-moldir = /Volumes/Pegasus32 R8/dihca/scripts/molecules
-pas = 40 45 130 135 deg
+moldir = ./molecules
+pas = 310 315 40 45 deg
 
 [CH3OH_spw0]
 molecule = CH3OH
