--- a/configs/extracted/pvmaps/NGC_6334_I_N_alma11_rotation.cfg
+++ b/configs/extracted/pvmaps/NGC_6334_I_N_alma11_rotation.cfg
@@ -1,6 +1,6 @@
 [DEFAULT]
 moldir = ./molecules
-pas = -20 -10 0 70 80 90 deg
+pas = 160 170 180 250 260 270 deg
 
 [CH3OH_spw0]
 molecule = CH3OH
@@ -12,22 +12,22 @@ length = 1 arcsec
 width = 0.05 arcsec
 freq_slab = 28 MHz
 
-[CH3CN_K2]
-molecule = CH3CN
-qns = 12(2)-11(2)
-line_lists = CDMS
-restore_molecule = ${moldir}/ch3cn.json
-source_section = b6_c5c8_spw3
-length = 1 arcsec
-width = 0.05 arcsec
-freq_slab = 28 MHz
-
-[CH3CN_K3]
-molecule = CH3CN
-qns = 12(3)-11(3)
-line_lists = CDMS
-restore_molecule = ${moldir}/ch3cn.json
-source_section = b6_c5c8_spw3
-length = 1 arcsec
-width = 0.05 arcsec
-freq_slab = 28 MHz
+#[CH3CN_K2]
+#molecule = CH3CN
+#qns = 12(2)-11(2)
+#line_lists = CDMS
+#restore_molecule = ${moldir}/ch3cn.json
+#source_section = b6_c5c8_spw3
+#length = 1 arcsec
+#width = 0.05 arcsec
+#freq_slab = 28 MHz
+#
+#[CH3CN_K3]
+#molecule = CH3CN
+#qns = 12(3)-11(3)
+#line_lists = CDMS
+#restore_molecule = ${moldir}/ch3cn.json
+#source_section = b6_c5c8_spw3
+#length = 1 arcsec
+#width = 0.05 arcsec
+#freq_slab = 28 MHz
