--- a/configs/extracted/pvmaps/W33A_alma1b_rotation.cfg
+++ b/configs/extracted/pvmaps/W33A_alma1b_rotation.cfg
@@ -1,16 +1,6 @@
 [DEFAULT]
 moldir = ./molecules
-pas = 130 150 220 240 deg
-
-[CH3OH_spw0]
-molecule = CH3OH
-qns = 18(3,15)-17(4,14)A,vt=0
-line_lists = CDMS
-restore_molecule = ${moldir}/ch3oh.json
-source_section = b6_c5c8_spw0_1000
-length = 2 arcsec
-width = 0.05 arcsec
-freq_slab = 28 MHz
+pas = 90 100 110 120 180 190 200 210 deg
 
 [CH3CN_K2]
 molecule = CH3CN
