--- a/configs/plots/papers/group_moments.1.cfg
+++ b/configs/plots/papers/group_moments.1.cfg
@@ -3,558 +3,322 @@ ncols = 3
 nrows = 4
 sharex = false 
 sharey = false
-styles = maps inferno
+styles = maps vik
+name = Velocity
+unit = km/s
+stretch = linear
 vertical_cbar = false
 horizontal_cbar = true
 left = 1.3
 right = 0.15
 top = 0.6
 bottom = 0.5
-hspace = 0.25
+hspace = 0.1
+vspace = -0.2
 cbar_spacing = 0.1
+override_xlabel = true
+override_ylabel = true
+set_xlabel = false
+set_ylabel = false
 label_xpad = 0.45
 label_ypad = -0.7
 xticks_fmt = hh:mm:ss.ss
 yticks_fmt = dd:mm:ss.s
-contour_linewidth = 0.5
+compute_ticks = false
+ticks_color = k
+scale_color = k
+self_contours = false
+contour_linewidth = 2.0
+contour_colors = #7f7f7f
+contour_stretch = log
+negative_nsigma = 3
 # Units
 ignore_units = false
 labelpad = 5
 labelpad_cbar2 = 5
+# Recenter
+radius = 0.5 arcsec
 # Beam
 plot_beam = true
-beam_color = k
+beam_zorder = 4
+beam_color = #3bb802
+#Artists
+markers = ${center}
+markers_marker = ^
+markers_mec = #3bb802
+markers_fillstyle = none
+markers_ms = 10
+markers_mew = 4.0
+scale_size = 500 au
+arrows = ${center}
+arrows_color = #f93dff
+arrows_linewidth = 3
 # Non-standard
-basedir = /Volumes/Pegasus32 R8/dihca
+basedir = ../
 contdir = ${basedir}/source_data/continuum
 
-[G10_moment1]
+[G10_alma1a_moment1]
 loc = 0 0
 source = G10.62-0.38
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc1_moments
-image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width20.subcube.moment1.fits
-name = Velocity
-unit = km/s
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1a_moments
+image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
 shift_data = -0.851 km/s
-label = ${source} ALMA1 CH$$_3$$OH
-stretch = linear
-with_style = vik
-compute_ticks = false
-ticks_color = k
-scale_color = k
-# Contours
-self_contours = false
+label = ${source} ALMA1a CH$$_3$$CN
+# Range
 vmin = -5 km/s
 vmax = 5 km/s
 # Recenter
 center = 18h10m28.60755s -19d55m49.4614s icrs
-radius = 0.5 arcsec
 # Artists
-markers = ${center}
-markers_marker = x
-markers_mec = #1cef40
-markers_fillstyle = none
-markers_ms = 7
-scale = 18h10m28.58s -19d55m49.8s icrs
+scale = 18h10m28.58s -19d55m49.9s icrs
 scale_distance = 4.95 kpc
-scale_size = 500 au
-arrows = ${center}
-arrows_pa = 40 deg
-arrows_color = #667298
-arrows_linewidth = 3
+arrows_pa = 0 deg
+
+[G10_alma1b_moment1]
+loc = 0 1
+source = G10.62-0.38
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1b_moments
+image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
+shift_data = 1.51 km/s
+label = ${source} ALMA1b CH$$_3$$CN
+# Range
+vmin = -5 km/s
+vmax = 5 km/s
+# Recenter
+center = 18h10m28.69080s -19d55m49.8281s icrs
+radius = 0.3 arcsec
+# Artists
+scale = 18h10m28.675s -19d55m50.1s icrs
+scale_distance = 4.95 kpc
+arrows_pa = -30 deg
+
+[G10_alma1c_moment1]
+loc = 0 2
+source = G10.62-0.38
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1c_moments
+image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
+shift_data = 1.35 km/s
+label = ${source} ALMA1c CH$$_3$$OH
+# Range
+vmin = -5 km/s
+vmax = 5 km/s
+# Recenter
+center = 18h10m28.73003s -19d55m49.4837s icrs
+radius = 0.3 arcsec
+# Artists
+scale = 18h10m28.712s -19d55m49.7s icrs
+scale_distance = 4.95 kpc
+arrows_pa = 180 deg
 
 [G10_continuum]
-loc = 0 0
+loc = 0 0, 0 1, 0 2
 contour = ${contdir}/G10.62-0.38.config8.cont_avg.selfcal_0.5_hogbom.image.fits
-contour_colors = #7f7f7f
-contour_stretch = log
-contour_linewidth = 1
-negative_nsigma = 3
 ignore_units = true
+beam_color = ${contour_colors}
+beam_zorder = 5
 
 [G11.1_moment1]
-loc = 0 1
+loc = 1 0
 source = G11.1-0.12
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc1_moments
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
 image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
-name = Velocity
-unit = km/s
 shift_data = -31.85 km/s
 label = ${source} ALMA1 CH$$_3$$CN
-stretch = linear
-with_style = vik
-compute_ticks = false
-ticks_color = k
-scale_color = k
-# Contours
-self_contours = false
+# Range
 vmin = -7 km/s
 vmax = 7 km/s
 # Recenter
 center = 18h10m28.24854s -19d22m30.3222s icrs
-radius = 0.4 arcsec
+radius = 0.3 arcsec
 # Artists
-markers = ${center}
-markers_marker = x
-markers_mec = #1cef40
-markers_fillstyle = none
-markers_ms = 7
-scale = 18h10m28.226s -19d22m30.6s icrs
+scale = 18h10m28.23s -19d22m30.59s icrs
 scale_distance = 3.0 kpc
-scale_size = 500 au
-arrows = ${center}
-arrows_pa = 115 deg
-arrows_color = #667298
-arrows_linewidth = 3
+arrows_pa = -65 deg
 
 [G11.1_continuum]
-loc = 0 1
+loc = 1 0
 contour = ${contdir}/G11.1-0.12.config8.cont_avg.selfcal_0.5_hogbom.image.fits
-contour_colors = #7f7f7f
-contour_stretch = log
-contour_linewidth = 1
-negative_nsigma = 3
 ignore_units = true
+beam_color = ${contour_colors}
+beam_zorder = 5
 
-[G11.92_hmc1_moment1]
-loc = 0 2
+[G11.92_alma1a_moment1]
+loc = 1 1
 source = G11.92-0.61
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc1_moments
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1a_moments
 image = ${results}/CH3CN_12_3_-11_3__width50.subcube.moment1.fits
-name = Velocity
-unit = km/s
 shift_data = -35.1 km/s
 label = ${source} ALMA1a CH$$_3$$CN
-stretch = linear
-with_style = vik
-compute_ticks = false
-ticks_color = k
-scale_color = k
-# Contours
-self_contours = false
+# Range
 vmin = -6 km/s
 vmax = 6 km/s
 # Recenter
 center = 18h13m58.11097s -18d54m20.2010s icrs
-radius = 0.5 arcsec
 # Artists
-markers = ${center}
-markers_marker = x
-markers_mec = #1cef40
-markers_fillstyle = none
-markers_ms = 7
 scale = 18h13m58.08s -18d54m20.6s icrs
 scale_distance = 3.37 kpc
-scale_size = 500 au
-arrows = ${center}
 arrows_pa = 129 deg
-arrows_color = #667298
-arrows_linewidth = 3
 
-[G11.92_hmc1_continuum]
-loc = 0 2
-contour = ${contdir}/G11.92-0.61.config8.cont_avg.selfcal_0.5_hogbom.image.fits
-contour_colors = #7f7f7f
-contour_stretch = log
-contour_linewidth = 1
-negative_nsigma = 3
-ignore_units = true
-
-[G11.92_hmc2_moment1]
-loc = 1 0
+[G11.92_alma1b_moment1]
+loc = 1 2
 source = G11.92-0.61
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc2_moments
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1b_moments
 image = ${results}/CH3CN_12_3_-11_3__width24.subcube.moment1.fits
-name = Velocity
-unit = km/s
 shift_data = -37 km/s
 label = ${source} ALMA1b CH$$_3$$CN
-stretch = linear
-with_style = vik
-compute_ticks = false
-ticks_color = k
-scale_color = k
-# Contours
-self_contours = false
+# Range
 vmin = -4 km/s
 vmax = 4 km/s
 # Recenter
 center = 18h13m58.12719s -18d54m20.7199s icrs
-radius = 0.35 arcsec
+radius = 0.3 arcsec
 # Artists
-markers = ${center}
-markers_marker = x
-markers_mec = #1cef40
-markers_fillstyle = none
-markers_ms = 7
-scale = 18h13m58.106s -18d54m21.0s icrs
+scale = 18h13m58.11s -18d54m21.0s icrs
 scale_distance = 3.37 kpc
-scale_size = 500 au
-arrows = ${center}
-arrows_pa = 165 deg
-arrows_color = #667298
-arrows_linewidth = 3
+arrows_pa = -15 deg
 
-[G11.92_hmc2_continuum]
-loc = 1 0
-contour = ${contdir}/G11.92-0.61.config8.cont_avg.selfcal_0.5_hogbom.image.fits
-contour_colors = #7f7f7f
-contour_stretch = log
-contour_linewidth = 1
-negative_nsigma = 3
-ignore_units = true
-
-[G11.92_hmc3_moment1]
-loc = 1 1
+[G11.92_alma3_moment1]
+loc = 2 0
 source = G11.92-0.61
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc3_moments
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma3_moments
 image = ${results}/CH3CN_12_3_-11_3__width24.subcube.moment1.fits
-name = Velocity
-unit = km/s
 shift_data = -35.7 km/s
 label = ${source} ALMA3 CH$$_3$$CN
-stretch = linear
-with_style = vik
-compute_ticks = false
-ticks_color = k
-scale_color = k
-# Contours
-self_contours = false
+# Range
 vmin = -6 km/s
 vmax = 6 km/s
 # Recenter
 center = 18h13m58.13491s -18d54m16.2731s icrs
 radius = 0.4 arcsec
 # Artists
-markers = ${center}
-markers_marker = x
-markers_mec = #1cef40
-markers_fillstyle = none
-markers_ms = 7
 scale = 18h13m58.11s -18d54m16.6s icrs
 scale_distance = 3.37 kpc
-scale_size = 500 au
-arrows = ${center}
-arrows_pa = 45 deg
-arrows_color = #667298
-arrows_linewidth = 3
+arrows_pa = 225 deg
 
-[G11.92_hmc3_continuum]
-loc = 1 1
+[G11.92_continuum]
+loc = 1 1, 1 2, 2 0
 contour = ${contdir}/G11.92-0.61.config8.cont_avg.selfcal_0.5_hogbom.image.fits
-contour_colors = #7f7f7f
-contour_stretch = log
-contour_linewidth = 1
-negative_nsigma = 3
 ignore_units = true
+beam_color = ${contour_colors}
+beam_zorder = 5
 
-[G29_hmc1_moment1]
-loc = 1 2
+[G29_alma1_moment1]
+loc = 2 1
 source = G29.96-0.02
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc1_moments
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
 image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width40.subcube.moment1.fits
-name = Velocity
-unit = km/s
 shift_data = -97.25 km/s
 label = ${source} ALMA1 CH$$_3$$OH
-stretch = linear
-with_style = vik
-compute_ticks = false
-ticks_color = k
-scale_color = k
-# Contours
-self_contours = false
+# Range
 vmin = -6 km/s
 vmax = 6 km/s
 # Recenter
 center = 18h46m03.77860s -02d39m22.3746s icrs
 radius = 0.6 arcsec
 # Artists
-markers = ${center}
-markers_marker = x
-markers_mec = #1cef40
-markers_fillstyle = none
-markers_ms = 7
 scale = 18h46m03.742s -02d39m22.8s icrs
 scale_distance = 5.26 kpc
-scale_size = 500 au
-arrows = ${center}
 arrows_pa = 155 deg
-arrows_color = #667298
-arrows_linewidth = 3
+#arrows_pa = 110 deg
 
-[G29_hmc1_continuum]
-loc = 1 2
-contour = ${contdir}/G29.96-0.02.config8.cont_avg.selfcal_0.5_hogbom.image.fits
-contour_colors = #7f7f7f
-contour_stretch = log
-contour_linewidth = 1
-negative_nsigma = 3
-ignore_units = true
-
-#[G29_hmc2_moment1]
-#loc = 2 0
-#source = G29.96-0.02
-#results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc2_moments
-#image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width26.subcube.moment1.fits
-#name = Velocity
-#unit = km/s
-#shift_data = -97.9 km/s
-#label = ${source} HMC1b
-#stretch = linear
-#with_style = vik
-#compute_ticks = false
-#ticks_color = k
-#scale_color = k
-## Contours
-#self_contours = false
-#vmin = -6 km/s
-#vmax = 6 km/s
-## Recenter
-#center = 18h46m03.74155s -02d39m22.4352s icrs
-#radius = 0.4 arcsec
-## Artists
-#markers = ${center}
-#markers_marker = x
-#markers_mec = #1cef40
-#markers_fillstyle = none
-#markers_ms = 7
-#scale = 18h46m03.718s -02d39m22.8s icrs
-#scale_distance = 5.26 kpc
-#scale_size = 500 au
-#arrows = ${center}
-#arrows_pa = 130 deg
-#arrows_color = #667298
-#arrows_linewidth = 3
-#
-#[G29_hmc2_continuum]
-#loc = 2 0
-#contour = ${contdir}/G29.96-0.02.config8.cont_avg.selfcal_0.5_hogbom.image.fits
-#contour_colors = #7f7f7f
-#contour_stretch = log
-#contour_linewidth = 1
-#negative_nsigma = 3
-#ignore_units = true
-
-[G333.12_hmc1_moment1]
+[G29_alma1_continuum]
 loc = 2 1
+contour = ${contdir}/G29.96-0.02.config8.cont_avg.selfcal_0.5_hogbom.image.fits
+ignore_units = true
+beam_color = ${contour_colors}
+beam_zorder = 5
+
+[G333.12_alma1_moment1]
+loc = 2 2
 source = G333.12-0.56
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc1_moments
-#image = ${results}/CH3CN_12_2_-11_2__width34.subcube.moment1.fits
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
 image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width34.subcube.moment1.fits
-name = Velocity
-unit = km/s
 shift_data = 58.47 km/s
 label = ${source} ALMA1 CH$$_3$$OH
-stretch = linear
-with_style = vik
-compute_ticks = false
-ticks_color = k
-scale_color = k
-# Contours
-self_contours = false
+# Range
 vmin = -6 km/s
 vmax = 6 km/s
 # Recenter
 center = 16h21m35.37589s -50d40m56.6044s icrs
-radius = 0.5 arcsec
 # Artists
-markers = ${center}
-markers_marker = x
-markers_mec = #1cef40
-markers_fillstyle = none
-markers_ms = 7
 scale = 16h21m35.334s -50d40m57.00s icrs
 scale_distance = 3.3 kpc
-scale_size = 500 au
-arrows = ${center}
 arrows_pa = 135 deg
-arrows_color = #667298
-arrows_linewidth = 3
 
-[G333.12_hmc1_continuum]
-loc = 2 1
-contour = ${contdir}/G333.12-0.56.config8.selfcal.cont_avg.robust0.5.image.fits
-contour_colors = #7f7f7f
-contour_stretch = log
-contour_linewidth = 1
-negative_nsigma = 3
-ignore_units = true
-
-[G333.12_hmc2_moment1]
-loc = 2 2
+[G333.12_alma2_moment1]
+loc = 3 0
+override_xlabel = true
+override_ylabel = true
+set_xlabel = true
+set_ylabel = true
 source = G333.12-0.56
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc2_moments
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma2_moments
 image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
-name = Velocity
-unit = km/s
 shift_data = 54.1 km/s
 label = ${source} ALMA2 CH$$_3$$CN
-stretch = linear
-with_style = vik
-compute_ticks = false
-ticks_color = k
-scale_color = k
-# Contours
-self_contours = false
+# Range
 vmin = -6 km/s
 vmax = 6 km/s
 # Recenter
 center = 16h21m36.25475s -50d40m47.2340s icrs
 radius = 0.35 arcsec
 # Artists
-markers = ${center}
-markers_marker = x
-markers_mec = #1cef40
-markers_fillstyle = none
-markers_ms = 7
 scale = 16h21m36.221s -50d40m47.55s icrs
 scale_distance = 3.3 kpc
-scale_size = 500 au
-arrows = ${center}
-arrows_pa = 50 deg
-arrows_color = #667298
-arrows_linewidth = 3
+arrows_pa = 90 deg
 
-[G333.12_hmc2_continuum]
-loc = 2 2
+[G333.12_continuum]
+loc = 2 2, 3 0
 contour = ${contdir}/G333.12-0.56.config8.selfcal.cont_avg.robust0.5.image.fits
-contour_colors = #7f7f7f
-contour_stretch = log
-contour_linewidth = 1
-negative_nsigma = 3
 ignore_units = true
+beam_color = ${contour_colors}
+beam_zorder = 5
 
-[G333.23_hmc2_moment1]
-loc = 3 0
+[G333.23_alma3_moment1]
+loc = 3 1
 source = G333.23-0.06
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc2_moments
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma3_moments
 image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
-name = Velocity
-unit = km/s
 shift_data = 87.04 km/s
 label = ${source} ALMA3 CH$$_3$$CN
-stretch = linear
-with_style = vik
-compute_ticks = false
-ticks_color = k
-scale_color = k
-# Contours
-self_contours = false
+# Range
 vmin = -4 km/s
 vmax = 4 km/s
 # Recenter
 center = 16h19m50.88363s -50d15m10.5272s icrs
-radius = 0.5 arcsec
 # Artists
-markers = ${center}
-markers_marker = x
-markers_mec = #1cef40
-markers_fillstyle = none
-markers_ms = 7
 scale = 16h19m50.84s -50d15m10.88s icrs
 scale_distance = 5.2 kpc
-scale_size = 500 au
-arrows = ${center}
-arrows_pa = 40 deg
-arrows_color = #667298
-arrows_linewidth = 3
+arrows_pa = 220 deg
 
-[G333.23_hmc2_continuum]
-loc = 3 0
-contour = ${contdir}/G333.23-0.06.config8.cont_avg.selfcal_0.5_hogbom.image.fits
-contour_colors = #7f7f7f
-contour_stretch = log
-contour_linewidth = 1
-negative_nsigma = 3
-ignore_units = true
-
-[G333.46_hmc1_moment1]
+[G333.23_alma3_continuum]
 loc = 3 1
+contour = ${contdir}/G333.23-0.06.config8.cont_avg.selfcal_0.5_hogbom.image.fits
+ignore_units = true
+beam_color = ${contour_colors}
+beam_zorder = 5
+
+[G333.46_alma1_moment1]
+loc = 3 2
 source = G333.46-0.16
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc1_moments
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
 image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width30.subcube.moment1.fits
-name = Velocity
-unit = km/s
 shift_data = 43.55 km/s
 label = ${source} ALMA1 CH$$_3$$OH
-stretch = linear
-with_style = vik
-compute_ticks = false
-ticks_color = k
-scale_color = k
-# Contours
-self_contours = false
+# Range
 vmin = -3 km/s
 vmax = 3 km/s
 # Recenter
 center = 16h21m20.17674s -50d09m46.3768s icrs
-radius = 0.5 arcsec
 # Artists
-markers = ${center}
-markers_marker = x
-markers_mec = #1cef40
-markers_fillstyle = none
-markers_ms = 7
 scale = 16h21m20.138s -50d09m46.8s icrs
 scale_distance = 2.9 kpc
-scale_size = 500 au
-arrows = ${center}
 arrows_pa = 130 deg
-arrows_color = #667298
-arrows_linewidth = 3
 
-[G333.46_hmc1_continuum]
-loc = 3 1
-contour = ${contdir}/G333.46-0.16.config8.cont_avg.selfcal_0.5_hogbom.image.fits
-contour_colors = #7f7f7f
-contour_stretch = log
-contour_linewidth = 1
-negative_nsigma = 3
-ignore_units = true
-
-[G333.46_hmc2_moment1]
-loc = 3 2
-source = G333.46-0.16
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc2_moments
-image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
-name = Velocity
-unit = km/s
-#shift_data = 39.23 km/s
-shift_data = 43.2 km/s
-label = ${source} ALMA7 CH$$_3$$CN
-stretch = linear
-with_style = vik
-compute_ticks = false
-ticks_color = k
-scale_color = k
-# Contours
-self_contours = false
-vmin = -9 km/s
-vmax = 9 km/s
-# Recenter
-center = 16h21m20.17290s -50d09m48.8762s icrs
-radius = 0.5 arcsec
-# Artists
-markers = ${center}
-markers_marker = x
-markers_mec = #1cef40
-markers_fillstyle = none
-markers_ms = 7
-scale = 16h21m20.132s -50d09m49.3s icrs
-scale_distance = 2.9 kpc
-scale_size = 500 au
-arrows = ${center}
-arrows_pa = 130 deg
-arrows_color = #667298
-arrows_linewidth = 3
-
-[G333.46_hmc2_continuum]
+[G333.46_continuum]
 loc = 3 2
 contour = ${contdir}/G333.46-0.16.config8.cont_avg.selfcal_0.5_hogbom.image.fits
-contour_colors = #7f7f7f
-contour_stretch = log
-contour_linewidth = 1
-negative_nsigma = 3
 ignore_units = true
+beam_color = ${contour_colors}
+beam_zorder = 5
 
