--- a/configs/plots/papers/group_moments.2.cfg
+++ b/configs/plots/papers/group_moments.2.cfg
@@ -3,557 +3,322 @@ ncols = 3
 nrows = 4
 sharex = false 
 sharey = false
-styles = maps inferno
+styles = maps vik
+name = Velocity
+unit = km/s
+stretch = linear
 vertical_cbar = false
 horizontal_cbar = true
 left = 1.3
 right = 0.15
 top = 0.6
 bottom = 0.5
-hspace = 0.25
+hspace = 0.1
+vspace = -0.2
 cbar_spacing = 0.1
+override_xlabel = true
+override_ylabel = true
+set_xlabel = false
+set_ylabel = false
 label_xpad = 0.45
 label_ypad = -0.7
 xticks_fmt = hh:mm:ss.ss
 yticks_fmt = dd:mm:ss.s
-contour_linewidth = 0.5
+compute_ticks = false
+ticks_color = k
+scale_color = k
+self_contours = false
+contour_linewidth = 2.0
+contour_colors = #7f7f7f
+contour_stretch = log
+negative_nsigma = 3
 # Units
 ignore_units = false
 labelpad = 5
 labelpad_cbar2 = 5
+# Recenter
+radius = 0.5 arcsec
 # Beam
 plot_beam = true
-beam_color = k
+beam_zorder = 4
+beam_color = #3bb802
+#Artists
+markers = ${center}
+markers_marker = ^
+markers_mec = #3bb802
+markers_fillstyle = none
+markers_ms = 10
+markers_mew = 4.0
+scale_size = 500 au
+arrows = ${center}
+arrows_color = #f93dff
+arrows_linewidth = 3
 # Non-standard
-basedir = /Volumes/Pegasus32 R8/dihca
+basedir = ../
 contdir = ${basedir}/source_data/continuum
 
-[G335.579_hmc1_moment1]
+[G333.46_alma7_moment1]
 loc = 0 0
+source = G333.46-0.16
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma7_moments
+image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
+shift_data = 43.2 km/s
+label = ${source} ALMA7 CH$$_3$$CN
+# Range
+vmin = -9 km/s
+vmax = 9 km/s
+# Recenter
+center = 16h21m20.17290s -50d09m48.8762s icrs
+# Artists
+scale = 16h21m20.132s -50d09m49.3s icrs
+scale_distance = 2.9 kpc
+arrows_pa = 130 deg
+
+[G333.46_alma7_continuum]
+loc = 0 0
+contour = ${contdir}/G333.46-0.16.config8.cont_avg.selfcal_0.5_hogbom.image.fits
+ignore_units = true
+beam_color = ${contour_colors}
+beam_zorder = 5
+
+[G335.579_alma1_moment1]
+loc = 0 1
 source = G335.579-0.272
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc1_moments
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
 image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width40.subcube.moment1.fits
-name = Velocity
-unit = km/s
 shift_data = 46.9 km/s
 label = ${source} ALMA1 CH$$_3$$OH
-stretch = linear
-with_style = vik
-compute_ticks = false
-ticks_color = k
-scale_color = k
-# Contours
-self_contours = false
+# Range
 vmin = -7 km/s
 vmax = 7 km/s
 # Recenter
 center = 16h30m58.76705s -48d43m53.8816s icrs
-radius = 0.5 arcsec
 # Artists
-markers = ${center}
-markers_marker = x
-markers_mec = #1cef40
-markers_fillstyle = none
-markers_ms = 7
 scale = 16h30m58.72s -48d43m54.3s icrs
 scale_distance = 3.25 kpc
-scale_size = 500 au
-arrows = ${center}
-arrows_pa = 90 deg
-arrows_color = #667298
-arrows_linewidth = 3
+arrows_pa = 150 deg
 
-[G335.579_hmc1_continuum]
-loc = 0 0
-contour = ${contdir}/G335.579-0.272.config8.cont_avg.selfcal_0.5_hogbom.image.fits
-contour_colors = #7f7f7f
-contour_stretch = log
-contour_linewidth = 1
-negative_nsigma = 3
-ignore_units = true
-
-[G335.579_hmc2_moment1]
-loc = 0 1
+[G335.579_alma3_moment1]
+loc = 0 2
 source = G335.579-0.272
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc2_moments
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma3_moments
 image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width40.subcube.moment1.fits
-name = Velocity
-unit = km/s
 shift_data = 53.1 km/s
 label = ${source} ALMA3 CH$$_3$$OH
-stretch = linear
-with_style = vik
-compute_ticks = false
-ticks_color = k
-scale_color = k
-# Contours
-self_contours = false
+# Range
 vmin = -12 km/s
 vmax = 12 km/s
-vcenter = 0 km/s
 # Recenter
 center = 16h30m58.63085s -48d43m51.2159s icrs
-radius = 0.5 arcsec
 # Artists
-markers = ${center}
-markers_marker = x
-markers_mec = #1cef40
-markers_fillstyle = none
-markers_ms = 7
 scale = 16h30m58.59s -48d43m51.6s icrs
 scale_distance = 3.25 kpc
-scale_size = 500 au
-arrows = ${center}
 arrows_pa = 202 deg
-arrows_color = #667298
-arrows_linewidth = 3
 
-[G335.579_hmc2_continuum]
-loc = 0 1
+[G335.579_continuum]
+loc = 0 1, 0 2
 contour = ${contdir}/G335.579-0.272.config8.cont_avg.selfcal_0.5_hogbom.image.fits
-contour_colors = #7f7f7f
-contour_stretch = log
-contour_linewidth = 1
-negative_nsigma = 3
 ignore_units = true
+beam_color = ${contour_colors}
+beam_zorder = 5
 
-[G335.78_hmc1_moment1]
-loc = 0 2
+[G335.78_alma1_moment1]
+loc = 1 0
 source = G335.78+0.17
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc1_moments
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
 image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width44.subcube.moment1.fits
-name = Velocity
-unit = km/s
 shift_data = 48.94 km/s
 label = ${source} ALMA1 CH$$_3$$OH
-stretch = linear
-with_style = vik
-compute_ticks = false
-ticks_color = k
-scale_color = k
-# Contours
-self_contours = false
+# Range
 vmin = -7 km/s
 vmax = 7 km/s
 # Recenter
 center = 16h29m47.33461s -48d15m52.2666s icrs
-radius = 0.5 arcsec
 # Artists
-markers = ${center}
-markers_marker = x
-markers_mec = #1cef40
-markers_fillstyle = none
-markers_ms = 7
 scale = 16h29m47.29s -48d15m52.7s icrs
 scale_distance = 3.2 kpc
-scale_size = 500 au
-arrows = ${center}
-arrows_pa = 35 deg
-arrows_color = #667298
-arrows_linewidth = 3
+arrows_pa = 215 deg
 
-[G335.78_hmc1_continuum]
-loc = 0 2
-contour = ${contdir}/G335.78+0.17.config8.selfcal.cont_avg.robust0.5.image.fits
-contour_colors = #7f7f7f
-contour_stretch = log
-contour_linewidth = 1
-negative_nsigma = 3
-ignore_units = true
-
-[G335.78_hmc2_moment1]
-loc = 1 0
+[G335.78_alma2_moment1]
+loc = 1 1
 source = G335.78+0.17
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc2_moments
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma2_moments
 image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width40.subcube.moment1.fits
-name = Velocity
-unit = km/s
 shift_data = 50.51 km/s
 label = ${source} ALMA2 CH$$_3$$OH
-stretch = linear
-with_style = vik
-compute_ticks = false
-ticks_color = k
-scale_color = k
-# Contours
-self_contours = false
+# Range
 vmin = -6 km/s
 vmax = 6 km/s
 # Recenter
 center = 16h29m46.12974s -48d15m49.9512s icrs
 radius = 0.3 arcsec
 # Artists
-markers = ${center}
-markers_marker = x
-markers_mec = #1cef40
-markers_fillstyle = none
-markers_ms = 7
 scale = 16h29m46.102s -48d15m50.2s icrs
 scale_distance = 3.2 kpc
-scale_size = 500 au
-arrows = ${center}
 arrows_pa = 65 deg
-arrows_color = #667298
-arrows_linewidth = 3
 
-[G335.78_hmc2_continuum]
-loc = 1 0
+[G335.78_continuum]
+loc = 1 0, 1 1
 contour = ${contdir}/G335.78+0.17.config8.selfcal.cont_avg.robust0.5.image.fits
-contour_colors = #7f7f7f
-contour_stretch = log
-contour_linewidth = 1
-negative_nsigma = 3
 ignore_units = true
+beam_color = ${contour_colors}
+beam_zorder = 5
 
-[G336_hmc1_moment1]
-loc = 1 1
+[G336_alma1_moment1]
+loc = 1 2
 source = G336.01-0.82
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc1_moments
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
 image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width30.subcube.moment1.fits
-name = Velocity
-unit = km/s
 shift_data = 47.2 km/s
 label = ${source} ALMA1 CH$$_3$$OH
-stretch = linear
-with_style = vik
-compute_ticks = false
-ticks_color = k
-scale_color = k
-# Contours
-self_contours = false
+# Range
 vmin = -6 km/s
 vmax = 6 km/s
 # Recenter
 center = 16h35m09.25854s -48d46m47.6623s icrs
-radius = 0.5 arcsec
 # Artists
-markers = ${center}
-markers_marker = x
-markers_mec = #1cef40
-markers_fillstyle = none
-markers_ms = 7
 scale = 16h35m09.218s -48d46m48.1s icrs
 scale_distance = 3.1 kpc
-scale_size = 500 au
-arrows = ${center}
 arrows_pa = 125 deg
-arrows_color = #667298
-arrows_linewidth = 3
 
-[G336_hmc1_continuum]
-loc = 1 1
-contour = ${contdir}/G336.01-0.82.config8.cont_avg.selfcal_0.5_hogbom.image.fits
-contour_colors = #7f7f7f
-contour_stretch = log
-contour_linewidth = 1
-negative_nsigma = 3
-ignore_units = true
-
-[G34_hmc1_moment1]
+[G336_continuum]
 loc = 1 2
+contour = ${contdir}/G336.01-0.82.config8.cont_avg.selfcal_0.5_hogbom.image.fits
+ignore_units = true
+beam_color = ${contour_colors}
+beam_zorder = 5
+
+[G34_alma1_moment1]
+loc = 2 0
 source = G34.43+0.24
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc1_moments
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
 image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width30.subcube.moment1.fits
-name = Velocity
-unit = km/s
 shift_data = -58.44 km/s
 label = ${source} ALMA1 CH$$_3$$OH
-stretch = linear
-with_style = vik
-compute_ticks = false
-ticks_color = k
-scale_color = k
-# Contours
-self_contours = false
+# Range
 vmin = -5 km/s
 vmax = 5 km/s
 # Recenter
 center = 18h53m18.00684s +01d25m25.4228s icrs
-radius = 0.5 arcsec
 # Artists
-markers = ${center}
-markers_marker = x
-markers_mec = #1cef40
-markers_fillstyle = none
-markers_ms = 7
 scale = 18h53m17.98s +01d25m25.0s icrs
 scale_distance = 3.03 kpc
-scale_size = 500 au
-arrows = ${center}
-arrows_pa = 100 deg
-arrows_color = #667298
-arrows_linewidth = 3
+arrows_pa = 280 deg
 
-[G34_hmc1_continuum]
-loc = 1 2
-contour = ${contdir}/G34.43+0.24.config8.cont_avg.selfcal_0.5_hogbom.image.fits
-contour_colors = #7f7f7f
-contour_stretch = log
-contour_linewidth = 1
-negative_nsigma = 3
-ignore_units = true
-
-[G343_hmc1_moment1]
+[G34_continuum]
 loc = 2 0
+contour = ${contdir}/G34.43+0.24.config8.cont_avg.selfcal_0.5_hogbom.image.fits
+ignore_units = true
+beam_color = ${contour_colors}
+beam_zorder = 5
+
+[G343_alma1_moment1]
+loc = 2 1
 source = G343.12-0.06
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc1_moments
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
 image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width20.subcube.moment1.fits
-name = Velocity
-unit = km/s
 shift_data = 33.71 km/s
 label = ${source} ALMA1 CH$$_3$$OH
-stretch = linear
-with_style = vik
-compute_ticks = false
-ticks_color = k
-scale_color = k
-# Contours
-self_contours = false
+# Range
 vmin = -5 km/s
 vmax = 5 km/s
 # Recenter
 center = 16h58m17.20735s -42d52m07.4161s icrs
-radius = 0.5 arcsec
 # Artists
-markers = ${center}
-markers_marker = x
-markers_mec = #1cef40
-markers_fillstyle = none
-markers_ms = 7
 scale = 16h58m17.17s -42d52m07.85s icrs
 scale_distance = 2.9 kpc
-scale_size = 500 au
-arrows = ${center}
-arrows_pa = 50 deg
-arrows_color = #667298
-arrows_linewidth = 3
+arrows_pa = 230 deg
 
-[G343_hmc1_continuum]
-loc = 2 0
-contour = ${contdir}/IRAS165474247_G343.12-0.06.config8.cont_avg.selfcal_0.5_hogbom.image.fits
-contour_colors = #7f7f7f
-contour_stretch = log
-contour_linewidth = 1
-negative_nsigma = 3
-ignore_units = true
-
-[G35.03_hmc1_moment1]
+[G343_continuum]
 loc = 2 1
+contour = ${contdir}/IRAS165474247_G343.12-0.06.config8.cont_avg.selfcal_0.5_hogbom.image.fits
+ignore_units = true
+beam_color = ${contour_colors}
+beam_zorder = 5
+
+[G35.03_alma1_moment1]
+loc = 2 2
 source = G35.03+0.35_A
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc1_moments
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
 image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
-name = Velocity
-unit = km/s
 shift_data = -45.94 km/s
 label = G35.03+0.35 A ALMA1 CH$$_3$$CN
-stretch = linear
-with_style = vik
-compute_ticks = false
-ticks_color = k
-scale_color = k
-# Contours
-self_contours = false
+# Range
 vmin = -8 km/s
 vmax = 8 km/s
 # Recenter
 center = 18h54m00.65099s +02d01m19.3410s icrs
-radius = 0.5 arcsec
 # Artists
-markers = ${center}
-markers_marker = x
-markers_mec = #1cef40
-markers_fillstyle = none
-markers_ms = 7
 scale = 18h54m00.62s +02d01m18.9s icrs
 scale_distance = 2.32 kpc
-scale_size = 500 au
-arrows = ${center}
-arrows_pa = 130 deg
-arrows_color = #667298
-arrows_linewidth = 3
+arrows_pa = 310 deg
 
-[G35.03_hmc1_continuum]
-loc = 2 1
-contour = ${contdir}/G35.03+0.35_A.config8.cont_avg.selfcal_0.5_hogbom.image.fits
-contour_colors = #7f7f7f
-contour_stretch = log
-contour_linewidth = 1
-negative_nsigma = 3
-ignore_units = true
-
-[G35.13_hmc1_moment1]
+[G35.03_continuum]
 loc = 2 2
+contour = ${contdir}/G35.03+0.35_A.config8.cont_avg.selfcal_0.5_hogbom.image.fits
+ignore_units = true
+beam_color = ${contour_colors}
+beam_zorder = 5
+
+[G35.13_alma1_moment1]
+loc = 3 0
 source = G35.13-0.74
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc1_moments
-image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width20.subcube.moment1.fits
-name = Velocity
-unit = km/s
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
+image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
 shift_data = -35.93 km/s
-label = ${source} ALMA1 CH$$_3$$OH
-stretch = linear
-with_style = vik
-compute_ticks = false
-ticks_color = k
-scale_color = k
-# Contours
-self_contours = false
+label = ${source} ALMA1 CH$$_3$$CN
+set_xlabel = true
+set_ylabel = true
+# Range
 vmin = -8 km/s
 vmax = 8 km/s
 # Recenter
 center = 18h58m06.13626s +01d37m07.4306s icrs
-radius = 0.5 arcsec
 # Artists
-markers = ${center}
-markers_marker = x
-markers_mec = #1cef40
-markers_fillstyle = none
-markers_ms = 7
 scale = 18h58m06.11s +01d37m07.0s icrs
 scale_distance = 2.2 kpc
-scale_size = 500 au
-arrows = ${center}
 arrows_pa = 45 deg
-arrows_color = #667298
-arrows_linewidth = 3
 
-[G35.13_hmc1_continuum]
-loc = 2 2
-contour = ${contdir}/G35.13-0.74.config8.selfcal.cont_avg.robust0.5.image.fits
-contour_colors = #7f7f7f
-contour_stretch = log
-contour_linewidth = 1
-negative_nsigma = 3
-ignore_units = true
-
-[G35.13_hmc2_moment1]
-loc = 3 0
+[G35.13_alma2_moment1]
+loc = 3 1
 source = G35.13-0.74
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc2_moments
-image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width20.subcube.moment1.fits
-name = Velocity
-unit = km/s
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma2_moments
+image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
 shift_data = -34.39 km/s
-label = ${source} ALMA2 CH$$_3$$OH
-stretch = linear
-with_style = vik
-compute_ticks = false
-ticks_color = k
-scale_color = k
-# Contours
-self_contours = false
+label = ${source} ALMA2 CH$$_3$$CN
+# Range
 vmin = -5 km/s
 vmax = 5 km/s
 # Recenter
 center = 18h58m06.16874s +01d37m08.1602s icrs
 radius = 0.3 arcsec
 # Artists
-markers = ${center}
-markers_marker = x
-markers_mec = #1cef40
-markers_fillstyle = none
-markers_ms = 7
 scale = 18h58m06.15s +01d37m07.9s icrs
 scale_distance = 2.2 kpc
-scale_size = 500 au
-arrows = ${center}
 arrows_pa = 75 deg
-arrows_color = #667298
-arrows_linewidth = 3
 
-[G35.13_hmc2_continuum]
-loc = 3 0
-contour = ${contdir}/G35.13-0.74.config8.selfcal.cont_avg.robust0.5.image.fits
-contour_colors = #7f7f7f
-contour_stretch = log
-contour_linewidth = 1
-negative_nsigma = 3
-ignore_units = true
-
-[G35.13_hmc3_moment1]
-loc = 3 1
+[G35.13_alma6_moment1]
+loc = 3 2
 source = G35.13-0.74
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc3_moments
-image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width20.subcube.moment1.fits
-name = Velocity
-unit = km/s
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma6_moments
+image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
 shift_data = -35.53 km/s
-label = ${source} ALMA6 CH$$_3$$OH
-stretch = linear
-with_style = vik
-compute_ticks = false
-ticks_color = k
-scale_color = k
-# Contours
-self_contours = false
+label = ${source} ALMA6 CH$$_3$$CN
+# Range
 vmin = -4 km/s
 vmax = 4 km/s
 # Recenter
 center = 18h58m06.27972s +01d37m07.2029s icrs
 radius = 0.3 arcsec
 # Artists
-markers = ${center}
-markers_marker = x
-markers_mec = #1cef40
-markers_fillstyle = none
-markers_ms = 7
 scale = 18h58m06.262s +01d37m06.95s icrs
 scale_distance = 2.2 kpc
-scale_size = 500 au
-arrows = ${center}
 arrows_pa = 95 deg
-arrows_color = #667298
-arrows_linewidth = 3
 
-[G35.13_hmc3_continuum]
-loc = 3 1
+[G35.13_continuum]
+loc = 3 0, 3 1, 3 2
 contour = ${contdir}/G35.13-0.74.config8.selfcal.cont_avg.robust0.5.image.fits
-contour_colors = #7f7f7f
-contour_stretch = log
-contour_linewidth = 1
-negative_nsigma = 3
 ignore_units = true
-
-[G35.20_hmc1_moment1]
-loc = 3 2
-source = G35.20-0.74_N
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc1_moments
-image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width30.subcube.moment1.fits
-name = Velocity
-unit = km/s
-shift_data = -32.11 km/s
-label = G35.20-0.74 N ALMA1 CH$$_3$$OH
-stretch = linear
-with_style = vik
-compute_ticks = false
-ticks_color = k
-scale_color = k
-# Contours
-self_contours = false
-vmin = -3 km/s
-vmax = 3 km/s
-# Recenter
-center = 18h58m12.95261s +01d40m37.3652s icrs
-radius = 0.5 arcsec
-# Artists
-markers = ${center}
-markers_marker = x
-markers_mec = #1cef40
-markers_fillstyle = none
-markers_ms = 7
-scale = 18h58m12.922s +01d40m37.0s icrs
-scale_distance = 2.19 kpc
-scale_size = 500 au
-arrows = ${center}
-arrows_pa = 170 deg
-arrows_color = #667298
-arrows_linewidth = 3
-
-[G35.20_hmc1_continuum]
-loc = 3 2
-contour = ${contdir}/G35.20-0.74_N.config8.cont_avg.selfcal_0.5_hogbom.image.fits
-contour_colors = #7f7f7f
-contour_stretch = log
-contour_linewidth = 1
-negative_nsigma = 3
-ignore_units = true
+beam_color = ${contour_colors}
+beam_zorder = 5
 
