--- a/configs/plots/papers/group_moments.3.cfg
+++ b/configs/plots/papers/group_moments.3.cfg
@@ -3,558 +3,312 @@ ncols = 3
 nrows = 4
 sharex = false 
 sharey = false
-styles = maps inferno
+styles = maps vik
+name = Velocity
+unit = km/s
+stretch = linear
 vertical_cbar = false
 horizontal_cbar = true
 left = 1.3
 right = 0.15
 top = 0.6
 bottom = 0.5
-hspace = 0.25
+hspace = 0.1
+vspace = -0.2
 cbar_spacing = 0.1
+override_xlabel = true
+override_ylabel = true
+set_xlabel = false
+set_ylabel = false
 label_xpad = 0.45
 label_ypad = -0.7
 xticks_fmt = hh:mm:ss.ss
 yticks_fmt = dd:mm:ss.s
-contour_linewidth = 0.5
+compute_ticks = false
+ticks_color = k
+scale_color = k
+self_contours = false
+contour_linewidth = 2.0
+contour_colors = #7f7f7f
+contour_stretch = log
+negative_nsigma = 3
 # Units
 ignore_units = false
 labelpad = 5
 labelpad_cbar2 = 5
+# Recenter
+radius = 0.5 arcsec
 # Beam
 plot_beam = true
-beam_color = k
+beam_zorder = 4
+beam_color = #3bb802
+#Artists
+markers = ${center}
+markers_marker = ^
+markers_mec = #3bb802
+markers_fillstyle = none
+markers_ms = 10
+markers_mew = 4.0
+scale_size = 500 au
+arrows = ${center}
+arrows_color = #f93dff
+arrows_linewidth = 3
 # Non-standard
-basedir = /Volumes/Pegasus32 R8/dihca
+basedir = ../
 contdir = ${basedir}/source_data/continuum
 
-[G351_hmc1_moment1]
+[G35.20_alma1_moment1]
 loc = 0 0
-source = G351.77-0.54
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc1_moments
+source = G35.20-0.74_N
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
 image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width30.subcube.moment1.fits
-name = Velocity
-unit = km/s
+shift_data = -32.11 km/s
+#shift_data = -30.3 km/s
+label = G35.20-0.74 N ALMA1 CH$$_3$$OH
+# Range
+vmin = -3 km/s
+vmax = 3 km/s
+# Recenter
+center = 18h58m12.95261s +01d40m37.3652s icrs
+# Artists
+scale = 18h58m12.922s +01d40m37.0s icrs
+scale_distance = 2.19 kpc
+arrows_pa = -10 deg
+
+[G35.20_continuum]
+loc = 0 0
+contour = ${contdir}/G35.20-0.74_N.config8.cont_avg.selfcal_0.5_hogbom.image.fits
+ignore_units = true
+beam_color = ${contour_colors}
+beam_zorder = 5
+
+[G351_alma2_moment1]
+loc = 0 1
+source = G351.77-0.54
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma2_moments
+image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width30.subcube.moment1.fits
 shift_data = 3.83 km/s
 label = ${source} ALMA2 CH$$_3$$OH
-stretch = linear
-with_style = vik
-compute_ticks = false
-ticks_color = k
-scale_color = k
-# Contours
-self_contours = false
+# Range
 vmin = -7 km/s
 vmax = 7 km/s
 # Recenter
 center = 17h26m42.53329s -36d09m17.3878s icrs
-radius = 0.5 arcsec
 # Artists
-markers = ${center}
-markers_marker = x
-markers_mec = #1cef40
-markers_fillstyle = none
-markers_ms = 7
 scale = 17h26m42.495s -36d09m17.8s icrs
 scale_distance = 2.0 kpc
-scale_size = 500 au
-arrows = ${center}
 arrows_pa = 130 deg
-arrows_color = #667298
-arrows_linewidth = 3
 
-[G351_hmc1_continuum]
-loc = 0 0
-contour = ${contdir}/G351.77-0.54.config8.cont_avg.selfcal_0.5_hogbom.image.fits
-contour_colors = #7f7f7f
-contour_stretch = log
-contour_linewidth = 1
-negative_nsigma = 3
-ignore_units = true
-
-[I16562_hmc1_moment1]
+[G351_continuum]
 loc = 0 1
+contour = ${contdir}/G351.77-0.54.config8.cont_avg.selfcal_0.5_hogbom.image.fits
+ignore_units = true
+beam_color = ${contour_colors}
+beam_zorder = 5
+
+[I16562_alma1_moment1]
+loc = 0 2
 source = IRAS_165623959
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc1_moments
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
 image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
-name = Velocity
-unit = km/s
 shift_data = 16.86 km/s
 label = IRAS 16562-3959 ALMA1 CH$$_3$$CN
-stretch = linear
-with_style = vik
-compute_ticks = false
-ticks_color = k
-scale_color = k
-# Contours
-self_contours = false
+# Range
 vmin = -6 km/s
 vmax = 6 km/s
-vcenter = 0 km/s
 # Recenter
 center = 16h59m41.62564s -40d03m43.6385s icrs
-radius = 0.5 arcsec
 # Artists
-markers = ${center}
-markers_marker = x
-markers_mec = #1cef40
-markers_fillstyle = none
-markers_ms = 7
 scale = 16h59m41.59s -40d03m44.1s icrs
 scale_distance = 2.38 kpc
-scale_size = 500 au
-arrows = ${center}
-arrows_pa = 30 deg
-arrows_color = #667298
-arrows_linewidth = 3
+arrows_pa = 10 deg
 
-[I16562_hmc1_continuum]
-loc = 0 1
-contour = ${contdir}/IRAS_165623959.config8.cont_avg.selfcal_0.5_hogbom.image.fits
-contour_colors = #7f7f7f
-contour_stretch = log
-contour_linewidth = 1
-negative_nsigma = 3
-ignore_units = true
-
-[I16562_hmc2_moment1]
-loc = 0 2
+[I16562_alma2_moment1]
+loc = 1 0
 source = IRAS_165623959
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc2_moments
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma2_moments
 image = ${results}/CH3CN_12_3_-11_3__width24.subcube.moment1.fits
-name = Velocity
-unit = km/s
 shift_data = 11.65 km/s
 label = IRAS 16562-3959 ALMA2 CH$$_3$$CN
-stretch = linear
-with_style = vik
-compute_ticks = false
-ticks_color = k
-scale_color = k
-# Contours
-self_contours = false
+# Range
 vmin = -6 km/s
 vmax = 6 km/s
-vcenter = 0 km/s
 # Recenter
 center = 16h59m41.08769s -40d03m39.0848s icrs
-radius = 0.5 arcsec
 # Artists
-markers = ${center}
-markers_marker = x
-markers_mec = #1cef40
-markers_fillstyle = none
-markers_ms = 7
 scale = 16h59m41.08769s -40d03m39.0848s icrs
 scale_distance = 2.38 kpc
-scale_size = 500 au
-arrows = ${center}
-arrows_pa = 45 deg
-arrows_color = #667298
-arrows_linewidth = 3
+arrows_pa = 225 deg
 
-[I16562_hmc2_continuum]
-loc = 0 2
+[I16562_continuum]
+loc = 0 2, 1 0
 contour = ${contdir}/IRAS_165623959.config8.cont_avg.selfcal_0.5_hogbom.image.fits
-contour_colors = #7f7f7f
-contour_stretch = log
-contour_linewidth = 1
-negative_nsigma = 3
 ignore_units = true
+beam_color = ${contour_colors}
+beam_zorder = 5
 
-[I18089_hmc1_moment1]
-loc = 1 0
+[I18089_alma1_moment1]
+loc = 1 1
 source = IRAS_180891732
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc1_moments
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
 image = ${results}/CH3CN_12_3_-11_3__width40.subcube.moment1.fits
-name = Velocity
-unit = km/s
 shift_data = -32.88 km/s
 label = IRAS 18089-1732 ALMA1 CH$$_3$$CN
-stretch = linear
-with_style = vik
-compute_ticks = false
-ticks_color = k
-scale_color = k
-# Contours
-self_contours = false
+# Range
 vmin = -7 km/s
 vmax = 7 km/s
 # Recenter
 center = 18h11m51.45454s -17d31m28.8163s icrs
 radius = 0.6 arcsec
 # Artists
-markers = ${center}
-markers_marker = x
-markers_mec = #1cef40
-markers_fillstyle = none
-markers_ms = 7
 scale = 18h11m51.42s -17d31m29.35s icrs
 scale_distance = 2.34 kpc
-scale_size = 500 au
-arrows = ${center}
-arrows_pa = 65 deg
-arrows_color = #667298
-arrows_linewidth = 3
+arrows_pa = 245 deg
 
-[I18089_hmc1_continuum]
-loc = 1 0
-contour = ${contdir}/IRAS_180891732.config8.cont_avg.selfcal_0.5_hogbom.image.fits
-contour_colors = #7f7f7f
-contour_stretch = log
-contour_linewidth = 1
-negative_nsigma = 3
-ignore_units = true
-
-[I18089_hmc2_moment1]
-loc = 1 1
+[I18089_alma3_moment1]
+loc = 1 2
 source = IRAS_180891732
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc2_moments
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma3_moments
 image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
-name = Velocity
-unit = km/s
 shift_data = -33.02 km/s
 label = IRAS 18089-1732 ALMA3 CH$$_3$$CN
-stretch = linear
-with_style = vik
-compute_ticks = false
-ticks_color = k
-scale_color = k
-# Contours
-self_contours = false
+# Range
 vmin = -5 km/s
 vmax = 5 km/s
 # Recenter
 center = 18h11m51.39962s -17d31m29.9457s icrs
 radius = 0.3 arcsec
 # Artists
-markers = ${center}
-markers_marker = x
-markers_mec = #1cef40
-markers_fillstyle = none
-markers_ms = 7
 scale = 18h11m51.38s -17d31m30.2s icrs
 scale_distance = 2.34 kpc
-scale_size = 500 au
-arrows = ${center}
-arrows_pa = 135 deg
-arrows_color = #667298
-arrows_linewidth = 3
+arrows_pa = 315 deg
 
-[I18089_hmc2_continuum]
-loc = 1 1
+[I18089_continuum]
+loc = 1 1, 1 2
 contour = ${contdir}/IRAS_180891732.config8.cont_avg.selfcal_0.5_hogbom.image.fits
-contour_colors = #7f7f7f
-contour_stretch = log
-contour_linewidth = 1
-negative_nsigma = 3
 ignore_units = true
+beam_color = ${contour_colors}
+beam_zorder = 5
 
-[I18182_hmc2_moment1]
-loc = 1 2
+[I18182_alma1_moment1]
+loc = 2 0
 source = IRAS_18182-1433
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc2_moments
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
 image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
-name = Velocity
-unit = km/s
 shift_data = -62.78 km/s
 label = IRAS 18182-1433 ALMA1 CH$$_3$$CN
-stretch = linear
-with_style = vik
-compute_ticks = false
-ticks_color = k
-scale_color = k
-# Contours
-self_contours = false
+# Range
 vmin = -5 km/s
 vmax = 5 km/s
 # Recenter
 center = 18h21m09.04928s -14d31m47.7925s icrs
 radius = 0.4 arcsec
 # Artists
-markers = ${center}
-markers_marker = x
-markers_mec = #1cef40
-markers_fillstyle = none
-markers_ms = 7
 scale = 18h21m09.028s -14d31m48.1s icrs
 scale_distance = 3.58 kpc
-scale_size = 500 au
-arrows = ${center}
 arrows_pa = 40 deg
-arrows_color = #667298
-arrows_linewidth = 3
 
-[I18182_hmc2_continuum]
-loc = 1 2
-contour = ${contdir}/IRAS_18182-1433.config8.cont_avg.selfcal_0.5_hogbom.image.fits
-contour_colors = #7f7f7f
-contour_stretch = log
-contour_linewidth = 1
-negative_nsigma = 3
-ignore_units = true
-
-[I18182_hmc1_moment1]
-loc = 2 0
+[I18182_alma2_moment1]
+loc = 2 1
 source = IRAS_18182-1433
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc1_moments
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma2_moments
 image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
-name = Velocity
-unit = km/s
 shift_data = -60.64 km/s
 label = IRAS 18182-1433 ALMA2 CH$$_3$$CN
-stretch = linear
-with_style = vik
-compute_ticks = false
-ticks_color = k
-scale_color = k
-# Contours
-self_contours = false
+# Range
 vmin = -3 km/s
 vmax = 3 km/s
 # Recenter
 center = 18h21m08.97822s -14d31m47.5970s icrs
 radius = 0.3 arcsec
 # Artists
-markers = ${center}
-markers_marker = x
-markers_mec = #1cef40
-markers_fillstyle = none
-markers_ms = 7
 scale = 18h21m08.96s -14d31m47.805s icrs
 scale_distance = 3.58 kpc
-scale_size = 500 au
-arrows = ${center}
-arrows_pa = 180 deg
-arrows_color = #667298
-arrows_linewidth = 3
+arrows_pa = 0 deg
 
-[I18182_hmc1_continuum]
-loc = 2 0
-contour = ${contdir}/IRAS_18182-1433.config8.cont_avg.selfcal_0.5_hogbom.image.fits
-contour_colors = #7f7f7f
-contour_stretch = log
-contour_linewidth = 1
-negative_nsigma = 3
-ignore_units = true
-
-[I18182_hmc3_moment1]
-loc = 2 1
+[I18182_alma3_moment1]
+loc = 2 2
 source = IRAS_18182-1433
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc3_moments
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma3_moments
 image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
-name = Velocity
-unit = km/s
 shift_data = -61.12 km/s
 label = IRAS 18182-1433 ALMA3 CH$$_3$$CN
-stretch = linear
-with_style = vik
-compute_ticks = false
-ticks_color = k
-scale_color = k
-# Contours
-self_contours = false
+# Range
 vmin = -7 km/s
 vmax = 7 km/s
 # Recenter
 center = 18h21m09.12462s -14d31m48.5998s icrs
-radius = 0.5 arcsec
 # Artists
-markers = ${center}
-markers_marker = x
-markers_mec = #1cef40
-markers_fillstyle = none
-markers_ms = 7
 scale = 18h21m09.095s -14d31m49.0s icrs
 scale_distance = 3.58 kpc
-scale_size = 500 au
-arrows = ${center}
 arrows_pa = 10 deg
-arrows_color = #667298
-arrows_linewidth = 3
 
-[I18182_hmc3_continuum]
-loc = 2 1
-contour = ${contdir}/IRAS_18182-1433.config8.cont_avg.selfcal_0.5_hogbom.image.fits
-contour_colors = #7f7f7f
-contour_stretch = log
-contour_linewidth = 1
-negative_nsigma = 3
-ignore_units = true
-
-[I18182_hmc4_moment1]
-loc = 2 2
+[I18182_alma5_moment1]
+loc = 3 0
+set_xlabel = true
+set_ylabel = true
 source = IRAS_18182-1433
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc4_moments
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma5_moments
 image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
-name = Velocity
-unit = km/s
 shift_data = -62.7 km/s
 label = IRAS 18182-1433 ALMA5 CH$$_3$$CN
-stretch = linear
-with_style = vik
-compute_ticks = false
-ticks_color = k
-scale_color = k
-# Contours
-self_contours = false
+# Range
 vmin = -8 km/s
 vmax = 8 km/s
 # Recenter
 center = 18h21m09.01613s -14d31m47.9401s icrs
 radius = 0.3 arcsec
 # Artists
-markers = ${center}
-markers_marker = x
-markers_mec = #1cef40
-markers_fillstyle = none
-markers_ms = 7
 scale = 18h21m08.999s -14d31m48.2s icrs
 scale_distance = 3.58 kpc
-scale_size = 500 au
-arrows = ${center}
 arrows_pa = 40 deg
-arrows_color = #667298
-arrows_linewidth = 3
 
-[I18182_hmc4_continuum]
-loc = 2 2
+[I18182_continuum]
+loc = 2 0, 2 1, 2 2, 3 0
 contour = ${contdir}/IRAS_18182-1433.config8.cont_avg.selfcal_0.5_hogbom.image.fits
-contour_colors = #7f7f7f
-contour_stretch = log
-contour_linewidth = 1
-negative_nsigma = 3
 ignore_units = true
+beam_color = ${contour_colors}
+beam_zorder = 5
 
-[NGC6334IN_hmc2_moment1]
-loc = 3 0
+[NGC6334IN_alma1_moment1]
+loc = 3 1
 source = NGC_6334_I_N
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc2_moments
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
 image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width30.subcube.moment1.fits
-name = Velocity
-unit = km/s
 shift_data = 1.77 km/s
 label = NGC 6334I(N) ALMA1 CH$$_3$$OH
-stretch = linear
-with_style = vik
-compute_ticks = false
-ticks_color = k
-scale_color = k
-# Contours
-self_contours = false
+# Range
 vmin = -8 km/s
 vmax = 8 km/s
 # Recenter
 center = 17h20m55.19138s -35d45m03.9525s icrs
-radius = 0.5 arcsec
 # Artists
-markers = ${center}
-markers_marker = x
-markers_mec = #1cef40
-markers_fillstyle = none
-markers_ms = 7
 scale = 17h20m55.158s -35d45m04.4s icrs
 scale_distance = 1.35 kpc
-scale_size = 500 au
-arrows = ${center}
-arrows_pa = 130 deg
-arrows_color = #667298
-arrows_linewidth = 3
+arrows_pa = 310 deg
 
-[NGC6334IN_hmc2_continuum]
-loc = 3 0
-contour = ${contdir}/NGC_6334_I_N.config8.cont_avg.selfcal_0.5_hogbom.image.fits
-contour_colors = #7f7f7f
-contour_stretch = log
-contour_linewidth = 1
-negative_nsigma = 3
-ignore_units = true
-
-[NGC6334IN_hmc1_moment1]
-loc = 3 1
+[NGC6334IN_alma2_moment1]
+loc = 3 2
 source = NGC_6334_I_N
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc1_moments
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma2_moments
 image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width30.subcube.moment1.fits
-name = Velocity
-unit = km/s
-shift_data = -0.74 km/s
+shift_data = 3.9 km/s
+#shift_data = -0.74 km/s
 label = NGC 6334I(N) ALMA2 CH$$_3$$OH
-stretch = linear
-with_style = vik
-compute_ticks = false
-ticks_color = k
-scale_color = k
-# Contours
-self_contours = false
+# Range
 vmin = -5 km/s
 vmax = 5 km/s
 # Recenter
 center = 17h20m54.59280s -35d45m17.3686s icrs
-radius = 0.5 arcsec
 # Artists
-markers = ${center}
-markers_marker = x
-markers_mec = #1cef40
-markers_fillstyle = none
-markers_ms = 7
 scale = 17h20m54.559s -35d45m17.8s icrs
 scale_distance = 1.35 kpc
-scale_size = 500 au
-arrows = ${center}
-arrows_pa = 125 deg
-arrows_color = #667298
-arrows_linewidth = 3
+arrows_pa = -55 deg
 
-[NGC6334IN_hmc1_continuum]
-loc = 3 1
+[NGC6334IN_continuum]
+loc = 3 1, 3 2
 contour = ${contdir}/NGC_6334_I_N.config8.cont_avg.selfcal_0.5_hogbom.image.fits
-contour_colors = #7f7f7f
-contour_stretch = log
-contour_linewidth = 1
-negative_nsigma = 3
 ignore_units = true
-
-[NGC6334IN_hmc4_moment1]
-loc = 3 2
-source = NGC_6334_I_N
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc4_moments
-image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width30.subcube.moment1.fits
-name = Velocity
-unit = km/s
-shift_data = 6.7 km/s
-label = NGC 6334I(N) ALMA4 CH$$_3$$OH
-stretch = linear
-with_style = vik
-compute_ticks = false
-ticks_color = k
-scale_color = k
-# Contours
-self_contours = false
-vmin = -6 km/s
-vmax = 6 km/s
-# Recenter
-center = 17h20m54.87122s -35d45m06.4309s icrs
-radius = 0.4 arcsec
-# Artists
-markers = ${center}
-markers_marker = x
-markers_mec = #1cef40
-markers_fillstyle = none
-markers_ms = 7
-scale = 17h20m54.842s -35d45m06.8s icrs
-scale_distance = 1.35 kpc
-scale_size = 500 au
-arrows = ${center}
-arrows_pa = 130 deg
-arrows_color = #667298
-arrows_linewidth = 3
-
-[NGC6334IN_hmc4_continuum]
-loc = 3 2
-contour = ${contdir}/NGC_6334_I_N.config8.cont_avg.selfcal_0.5_hogbom.image.fits
-contour_colors = #7f7f7f
-contour_stretch = log
-contour_linewidth = 1
-negative_nsigma = 3
-ignore_units = true
+beam_color = ${contour_colors}
+beam_zorder = 5
 
