--- a/configs/plots/papers/group_pv_maps.1.cfg
+++ b/configs/plots/papers/group_pv_maps.1.cfg
@@ -1,7 +1,7 @@
 [DEFAULT]
 ncols = 2
 nrows = 4
-sharex = false 
+sharex = false
 sharey = false
 styles = maps inferno aspect_auto
 vertical_cbar = false
@@ -19,6 +19,9 @@ xunit = arcsec
 yunit = km/s
 xname = Offset
 yname = Velocity
+name = Intensity
+unit = mJy/beam
+stretch = linear
 nsigma = 3
 contour_linewidth = 0.5
 contour_stretch = log
@@ -26,147 +29,257 @@ xticks_fmt = {x:.1f}
 yticks_fmt = {x:.0f}
 inverty = true
 ticks_color = w
-# Artists
+label = ${source} ALMA${alma} PA=${paval}${deg}
 vlines = 0 arcsec
 vlines_linestyle = :
 vlines_color = #35ff2c
-# Vlsr
 hlines_linestyle = --
 hlines_color = #35ff2c
-# Contours
 self_contours = true
 vmin = 0. mJy/beam
-# Non-standard
-basedir = /Volumes/Pegasus32 R8/dihca
-contdir = ${basedir}/source_data/continuum
+basedir = ..
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma${alma}_pvmaps
 deg = $$^\circ$$
 
-[G10_pvmap_rot]
+[G10_alma1a_pvmap_rot]
 loc = 0 0
 source = G10.62-0.38
-paval = 40
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc1_pvmaps
-pvmap = ${results}/${source}_hmc1_rotation.CH3OH_spw0.ra272.61920_dec-19.93041.PA${paval}.fits
-name = Intensity
-unit = mJy/beam
-label = ${source} ALMA1 PA=${paval}${deg}
-stretch = linear
-#compute_ticks = false
-# Vlsr
+alma = 1a
+paval = 0
+pvmap = ${results}/${source}_alma${alma}_rotation.CH3CN_K3.ra272.61920_dec-19.93041.PA${paval}.fits
 hlines = 0.851 km/s
-# Contours
-vmax = 16 mJy/beam
+rms = 1.6 mJy/beam
+vmax = 32 mJy/beam
 
-[G10_pvmap_out]
+[G10.62-0.38_alma1a_pvedge]
+loc = 0 0
+structured_array = ../results/G10.62-0.38/c5c8/per_hot_core/alma1a_pvmaps/G10.62-0.38_alma1a_rotation.CH3CN_K3.ra272.61920_dec-19.93041.PA0.edge.dat
+marker = o
+color = #46eff2
+linestyle = none
+plot_keys = OFFSET, VRAD
+
+[G10.62-0.38_alma1a_keplerian_fit]
+loc = 0 0
+function = piecewise_powerlaw
+xrange = -0.9950000000000795 0.9950000000000795 arcsec
+yunit = km/s
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 21.554797281928437 solMass
+model_amplitude = -13.828181856164457
+model_x_0 = 0.020202020202020204
+model_alpha = 0.5
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_cons} ${model_x_mid}
+model_sd_mass = 3.085026468706788 solMass
+model_vsys = -2.295489254670895
+model_offset0 = 0.08200997056659148
+model_sd_amplitude = 1.1544028690079122
+model_sd_x_0 = 0.0
+model_sd_alpha = 0.0
+model_sd_vsys = 0.0
+model_sd_offset0 = 0.0
+model_info = 1
+
+[G10.62-0.38_alma1a_unrestricted_fit]
+loc = 0 0
+function = piecewise_powerlaw
+xrange = -0.9950000000000795 0.9950000000000795 arcsec
+yunit = km/s
+sampling = 500
+linestyle = -
+color = #adacac
+model_amplitude = -13.828181856164457
+model_x_0 = 0.020202020202020204
+model_alpha = 0.5000242270912352
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_cons} ${model_x_mid}
+model_vsys = -2.295489254670895
+model_offset0 = 0.08200997056659148
+model_sd_amplitude = 24.664233655308102
+model_sd_x_0 = 0.0
+model_sd_alpha = 0.4557386893073501
+model_sd_vsys = 0.8803259778179174
+model_sd_offset0 = 0.009043636679663854
+model_info = 1
+
+[G10_alma1a_pvmap_out]
 loc = 0 1
 source = G10.62-0.38
-paval = 130
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc1_pvmaps
-pvmap = ${results}/${source}_hmc1_rotation.CH3OH_spw0.ra272.61920_dec-19.93041.PA${paval}.fits
-name = Intensity
-unit = mJy/beam
-label = ${source} ALMA1 PA=${paval}${deg}
-stretch = linear
-#compute_ticks = false
-# Vlsr
+alma = 1a
+paval = 90
+pvmap = ${results}/${source}_alma${alma}_rotation.CH3CN_K3.ra272.61920_dec-19.93041.PA${paval}.fits
 hlines = 0.851 km/s
-# Contours
+rms = 1.6 mJy/beam
+vmax = 32 mJy/beam
+
+[G10_alma1b_pvmap_rot]
+loc = 1 0
+source = G10.62-0.38
+alma = 1b
+paval = -30
+pvmap = ${results}/${source}_alma${alma}_rotation.CH3CN_K3.ra272.61955_dec-19.93051.PA${paval}.fits
+xlim = -0.5 0.5 arcsec
+hlines = 0.851 km/s
+rms = 1.6 mJy/beam
+vmax = 16 mJy/beam
+
+[G10_alma1b_pvmap_out]
+loc = 1 1
+source = G10.62-0.38
+alma = 1b
+paval = 60
+pvmap = ${results}/${source}_alma1b_rotation.CH3CN_K3.ra272.61955_dec-19.93051.PA${paval}.fits
+xlim = -0.5 0.5 arcsec
+hlines = 0.851 km/s
+rms = 1.6 mJy/beam
+vmax = 16 mJy/beam
+
+[G10_alma1c_pvmap_rot]
+loc = 2 0
+source = G10.62-0.38
+alma = 1c
+paval = 180
+pvmap = ${results}/${source}_alma1c_rotation.CH3CN_K3.ra272.61971_dec-19.93040.PA${paval}.fits
+hlines = 0.851 km/s
+rms = 1.6 mJy/beam
+vmax = 25 mJy/beam
+
+[G10.62-0.38_alma1c_pvedge]
+loc = 2 0
+structured_array = ../results/G10.62-0.38/c5c8/per_hot_core/alma1c_pvmaps/G10.62-0.38_alma1c_rotation.CH3CN_K3.ra272.61971_dec-19.93040.PA180.edge.dat
+marker = o
+color = #46eff2
+linestyle = none
+plot_keys = OFFSET, VRAD
+
+[G10.62-0.38_alma1c_keplerian_fit]
+loc = 2 0
+function = piecewise_powerlaw
+xrange = -0.9950000000000795 0.9950000000000795 arcsec
+yunit = km/s
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 5.229163542753293 solMass
+model_amplitude = -6.810974013979289
+model_x_0 = 0.020202020202020204
+model_alpha = 0.5
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_cons} ${model_x_mid}
+model_sd_mass = 0.6582445165341323 solMass
+model_vsys = -1.6140784249251272
+model_offset0 = -0.002761738692654008
+model_sd_amplitude = 0.3299618388504962
+model_sd_x_0 = 0.0
+model_sd_alpha = 0.0
+model_sd_vsys = 0.0
+model_sd_offset0 = 0.0
+model_info = 1
+
+[G10.62-0.38_alma1c_unrestricted_fit]
+loc = 2 0
+function = piecewise_powerlaw
+xrange = -0.9950000000000795 0.9950000000000795 arcsec
+yunit = km/s
+sampling = 500
+linestyle = -
+color = #adacac
+model_amplitude = -8.956302212877516
+model_x_0 = 0.020202020202020204
+model_alpha = 0.698796213877995
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_cons} ${model_x_mid}
+model_vsys = -1.6140784249251272
+model_offset0 = -0.002761738692654008
+model_sd_amplitude = 0.7304920624399526
+model_sd_x_0 = 0.0
+model_sd_alpha = 0.06683042843576836
+model_sd_vsys = 0.24946344010020666
+model_sd_offset0 = 0.007629930727609631
+model_info = 1
+
+[G10_alma1c_pvmap_out]
+loc = 2 1
+source = G10.62-0.38
+alma = 1c
+paval = 270
+pvmap = ${results}/${source}_alma1c_rotation.CH3CN_K3.ra272.61971_dec-19.93040.PA${paval}.fits
+hlines = 0.851 km/s
+rms = 1.6 mJy/beam
 vmax = 16 mJy/beam
 
 [G11.1_pvmap_rot]
-loc = 1 0
+loc = 3 0
 source = G11.1-0.12
-paval = 115
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc1_pvmaps
-pvmap = ${results}/${source}_hmc1_rotation.CH3CN_K3.ra272.61770_dec-19.37509.PA${paval}.fits
-name = Intensity
-unit = mJy/beam
-label = ${source} ALMA1 PA=${paval}${deg}
-stretch = linear
+alma = 1
+paval = -65
+pvmap = ${results}/${source}_alma1_rotation.CH3CN_K3.ra272.61770_dec-19.37509.PA${paval}.fits
+xlim = -0.21 0.28 arcsec
 ylim = 20 40 km/s
-#compute_ticks = false
-# Vlsr
 hlines = 31.85 km/s
-# Contours
+rms = 1.3 mJy/beam
 vmax = 15 mJy/beam
+
+[G11.1-0.12_alma1_pvedge]
+loc = 3 0
+structured_array = ../results/G11.1-0.12/c5c8/per_hot_core/alma1_pvmaps/G11.1-0.12_alma1_rotation.CH3CN_K3.ra272.61770_dec-19.37509.PA-65.edge.dat
+marker = o
+color = #46eff2
+linestyle = none
+plot_keys = OFFSET, VRAD
+
+[G11.1-0.12_alma1_keplerian_fit]
+loc = 3 0
+function = piecewise_powerlaw
+xrange = -0.4900000000000392 0.4900000000000392 arcsec
+yunit = km/s
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 6.930846521069932 solMass
+model_amplitude = -7.84126717657039
+model_x_0 = 0.03333333333333333
+model_alpha = 0.5
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_sd_mass = 1.4501545688387307 solMass
+model_vsys = 27.531078190332376
+model_offset0 = 0.06645727389447786
+model_sd_amplitude = 0.8203218313246783
+model_sd_x_0 = 0.0
+model_sd_alpha = 0.0
+model_sd_vsys = 0.0
+model_sd_offset0 = 0.0
+model_info = 1
+
+[G11.1-0.12_alma1_unrestricted_fit]
+loc = 3 0
+function = piecewise_powerlaw
+xrange = -0.4900000000000392 0.4900000000000392 arcsec
+yunit = km/s
+sampling = 500
+linestyle = -
+color = #adacac
+model_amplitude = -116.11834488021854
+model_x_0 = 0.03333333333333333
+model_alpha = 2.6646266569674615
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_vsys = 27.531078190332376
+model_offset0 = 0.06645727389447786
+model_sd_amplitude = 166.72761491339836
+model_sd_x_0 = 0.0
+model_sd_alpha = 1.09414536006924
+model_sd_vsys = 0.7709930922039759
+model_sd_offset0 = 0.012715429350034061
+model_info = 1
 
 [G11.1_pvmap_out]
-loc = 1 1
+loc = 3 1
 source = G11.1-0.12
+alma = 1
 paval = 25
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc1_pvmaps
-pvmap = ${results}/${source}_hmc1_rotation.CH3CN_K3.ra272.61770_dec-19.37509.PA${paval}.fits
-name = Intensity
-unit = mJy/beam
-label = ${source} ALMA1 PA=${paval}${deg}
-stretch = linear
+pvmap = ${results}/${source}_alma1_rotation.CH3CN_K3.ra272.61770_dec-19.37509.PA${paval}.fits
+xlim = -0.26 0.26 arcsec
 ylim = 20 40 km/s
-#compute_ticks = false
-# Vlsr
 hlines = 31.85 km/s
-# Contours
+rms = 1.3 mJy/beam
 vmax = 15 mJy/beam
 
-[G11.92_hmc1_pvmap_rot]
-loc = 2 0
-source = G11.92-0.61
-paval = 129
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc1_pvmaps
-pvmap = ${results}/${source}_hmc1_rotation.CH3CN_K3.ra273.49213_dec-18.90561.PA${paval}.fits
-name = Intensity
-unit = mJy/beam
-label = ${source} ALMA1a PA=${paval}${deg}
-stretch = linear
-#compute_ticks = false
-# Vlsr
-hlines = 35.1 km/s
-# Contours
-vmax = 45 mJy/beam
-
-[G11.92_hmc1_pvmap_out]
-loc = 2 1
-source = G11.92-0.61
-paval = 39
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc1_pvmaps
-pvmap = ${results}/${source}_hmc1_rotation.CH3CN_K3.ra273.49213_dec-18.90561.PA${paval}.fits
-name = Intensity
-unit = mJy/beam
-label = ${source} ALMA1a PA=${paval}${deg}
-stretch = linear
-#compute_ticks = false
-# Vlsr
-hlines = 35.1 km/s
-# Contours
-vmax = 45 mJy/beam
-
-[G11.92_hmc2_pvmap_rot]
-loc = 3 0
-source = G11.92-0.61
-paval = 165
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc2_pvmaps
-pvmap = ${results}/${source}_hmc2_rotation.CH3CN_K3.ra273.49220_dec-18.90576.PA${paval}.fits
-name = Intensity
-unit = mJy/beam
-label = ${source} ALMA1b PA=${paval}${deg}
-stretch = linear
-#compute_ticks = false
-# Vlsr
-hlines = 37 km/s
-# Contours
-vmax = 40 mJy/beam
-
-[G11.92_hmc2_pvmap_out]
-loc = 3 1
-source = G11.92-0.61
-paval = 75
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc2_pvmaps
-pvmap = ${results}/${source}_hmc2_rotation.CH3CN_K3.ra273.49220_dec-18.90576.PA${paval}.fits
-name = Intensity
-unit = mJy/beam
-label = ${source} ALMA1b PA=${paval}${deg}
-stretch = linear
-#compute_ticks = false
-# Vlsr
-hlines = 37 km/s
-# Contours
-vmax = 40 mJy/beam
