--- a/configs/plots/papers/group_pv_maps.10.cfg
+++ b/configs/plots/papers/group_pv_maps.10.cfg
@@ -1,7 +1,7 @@
 [DEFAULT]
 ncols = 2
-nrows = 1
-sharex = false 
+nrows = 4
+sharex = false
 sharey = false
 styles = maps inferno aspect_auto
 vertical_cbar = false
@@ -19,6 +19,9 @@ xunit = arcsec
 yunit = km/s
 xname = Offset
 yname = Velocity
+name = Intensity
+unit = mJy/beam
+stretch = linear
 nsigma = 3
 contour_linewidth = 0.5
 contour_stretch = log
@@ -26,65 +29,273 @@ xticks_fmt = {x:.1f}
 yticks_fmt = {x:.0f}
 inverty = true
 ticks_color = w
-name = Intensity
-unit = mJy/beam
-stretch = linear
-# Artists
+label = ${source} ALMA${alma} PA=${paval}${deg}
 vlines = 0 arcsec
 vlines_linestyle = :
 vlines_color = #35ff2c
-# Vlsr
 hlines_linestyle = --
 hlines_color = #35ff2c
-# Contours
 self_contours = true
 vmin = 0. mJy/beam
-# Non-standard
-basedir = /Volumes/Pegasus32 R8/dihca
-contdir = ${basedir}/source_data/continuum
+basedir = ..
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma${alma}_pvmaps
 deg = $$^\circ$$
 
-#[NGC6334IN_hmc5_pvmap_rot]
-#loc = 3 0
-#source = NGC_6334_I_N
-#paval = 0
-#results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc5_pvmaps
-#pvmap = ${results}/${source}_.PA${paval}.fits
-#label = NGC 6334I(N) ALMA6 PA=${paval}${deg}
-##compute_ticks = false
-## Vlsr
-#hlines = -7.2 km/s
-## Contours
-#vmax = 40 mJy/beam
-#
-#[NGC6334IN_hmc3_pvmap_out]
-#loc = 3 1
-#source = NGC_6334_I_N
-#paval = 40
-
-[W33A_hmc1_pvmap_rot]
+[NGC6334IN_alma4_pvmap_rot]
 loc = 0 0
-source = W33A
-paval = 30
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc1_pvmaps
-pvmap = ${results}/${source}_hmc1_rotation.CH3OH_spw0.ra273.66463_dec-17.86670.PA${paval}.fits
-label = W33A ALMA1 PA=${paval}${deg}
-#compute_ticks = false
-# Vlsr
-hlines = 37.9 km/s
-# Contours
-vmax = 25 mJy/beam
+source = NGC_6334_I_N
+alma = 4
+paval = 130
+label = NGC 6334I(N) ALMA${alma} PA=${paval}${deg}
+pvmap = ${results}/${source}_alma4_rotation.CH3CN_K3.ra260.22863_dec-35.75179.PA${paval}.fits
+hlines = -6.7 km/s
+rms = 1.7 mJy/beam
+vmax = 20 mJy/beam
 
-[W33A_hmc1_pvmap_out]
+[NGC_6334_I_N_alma4_pvedge]
+loc = 0 0
+structured_array = ../results/NGC_6334_I_N/c5c8/per_hot_core/alma4_pvmaps/NGC_6334_I_N_alma4_rotation.CH3CN_K3.ra260.22863_dec-35.75179.PA130.edge.dat
+marker = o
+color = #46eff2
+linestyle = none
+plot_keys = OFFSET, VRAD
+
+[NGC_6334_I_N_alma4_keplerian_fit]
+loc = 0 0
+function = piecewise_powerlaw
+xrange = -0.49500000000000005 0.49500000000000005 arcsec
+yunit = km/s
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 5.008559892995641 solMass
+model_sd_mass = 0.406582460919903 solMass
+model_amplitude = -6.665758063838215
+model_x_0 = 0.07407407407407407
+model_alpha = 0.5
+model_vsys = -5.1109728228308375
+model_offset0 = 0.0026538640954391506
+model_sd_amplitude = 0.2705548476401526
+model_sd_x_0 = 0.0
+model_sd_alpha = 0.0
+model_sd_vsys = 0.0
+model_sd_offset0 = 0.0
+model_info = 1
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+
+[NGC_6334_I_N_alma4_unrestricted_fit]
+loc = 0 0
+function = piecewise_powerlaw
+xrange = -0.49500000000000005 0.49500000000000005 arcsec
+yunit = km/s
+sampling = 500
+linestyle = -
+color = #adacac
+model_amplitude = -7.542074600407852
+model_x_0 = 0.07407407407407407
+model_alpha = 0.689992836962557
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_vsys = -5.1109728228308375
+model_offset0 = 0.0026538640954391506
+model_sd_amplitude = 0.509191397488919
+model_sd_x_0 = 0.0
+model_sd_alpha = 0.08138008183005685
+model_sd_vsys = 0.24941754130606864
+model_sd_offset0 = 0.009763104615705958
+model_info = 1
+
+[NGC6334IN_alma4_pvmap_out]
 loc = 0 1
+source = NGC_6334_I_N
+alma = 4
+paval = 220
+label = NGC 6334I(N) ALMA${alma} PA=${paval}${deg}
+pvmap = ${results}/${source}_alma4_rotation.CH3CN_K3.ra260.22863_dec-35.75179.PA${paval}.fits
+hlines = -6.7 km/s
+rms = 1.7 mJy/beam
+vmax = 20 mJy/beam
+
+[NGC6334IN_alma6_pvmap_rot]
+loc = 1 0
+source = NGC_6334_I_N
+alma = 6
+paval = 130
+label = NGC 6334I(N) ALMA${alma} PA=${paval}${deg}
+pvmap = ${results}/${source}_alma6_rotation.CH3CN_K3.ra260.22758_dec-35.75241.PA${paval}.fits
+hlines = -7.2 km/s
+rms = 1.7 mJy/beam
+vmax = 38 mJy/beam
+
+[NGC_6334_I_N_alma6_pvedge]
+loc = 1 0
+structured_array = ../results/NGC_6334_I_N/c5c8/per_hot_core/alma6_pvmaps/NGC_6334_I_N_alma6_rotation.CH3CN_K3.ra260.22758_dec-35.75241.PA130.edge.dat
+marker = o
+color = #46eff2
+linestyle = none
+plot_keys = OFFSET, VRAD
+
+[NGC_6334_I_N_alma6_keplerian_fit]
+loc = 1 0
+function = piecewise_powerlaw
+xrange = -0.49500000000000005 0.49500000000000005 arcsec
+yunit = km/s
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 9.996699492902263 solMass
+model_amplitude = -9.417192098531983
+model_x_0 = 0.07407407407407407
+model_alpha = 0.5
+model_cons = -3.7550129036241007
+model_x_mid = -0.03516701662979031
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_sd_mass = 0.4819804276510245 solMass
+model_vsys = -3.714491730229512
+model_offset0 = -0.033134059487579144
+model_sd_amplitude = 0.22702004187206742
+model_sd_x_0 = 0.0
+model_sd_alpha = 0.0
+model_sd_vsys = 0.0
+model_sd_offset0 = 0.0
+model_info = 1
+
+[NGC_6334_I_N_alma6_unrestricted_fit]
+loc = 1 0
+function = piecewise_powerlaw
+xrange = -0.49500000000000005 0.49500000000000005 arcsec
+yunit = km/s
+sampling = 500
+linestyle = -
+color = #adacac
+model_amplitude = -9.089962731920929
+model_x_0 = 0.07407407407407407
+model_alpha = 0.4422619666619437
+model_cons = -3.7550129036241007
+model_x_mid = -0.03516701662979031
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_vsys = -3.714491730229512
+model_offset0 = -0.033134059487579144
+model_sd_amplitude = 0.3875457154252825
+model_sd_x_0 = 0.0
+model_sd_alpha = 0.049526073226520986
+model_sd_vsys = 0.23818582528693916
+model_sd_offset0 = 0.009085026897949643
+model_info = 1
+
+[NGC6334IN_alma6_pvmap_out]
+loc = 1 1
+source = NGC_6334_I_N
+alma = 6
+paval = 220
+label = NGC 6334I(N) ALMA${alma} PA=${paval}${deg}
+pvmap = ${results}/${source}_alma6_rotation.CH3CN_K3.ra260.22758_dec-35.75241.PA${paval}.fits
+hlines = -7.2 km/s
+rms = 1.7 mJy/beam
+vmax = 38 mJy/beam
+
+[NGC6334IN_alma11_pvmap_rot]
+loc = 2 0
+source = NGC_6334_I_N
+alma = 11
+paval = 160
+label = NGC 6334I(N) ALMA${alma} PA=${paval}${deg}
+pvmap = ${results}/${source}_alma11_rotation.CH3CN_K3.ra260.22849_dec-35.75168.PA${paval}.fits
+ylim = -15 5 km/s
+hlines = -5.0 km/s
+rms = 1.7 mJy/beam
+vmax = 20 mJy/beam
+markers = -0.087 arcsec -10.1 km/s
+markers_physframe = data
+markers_marker = ^
+markers_mec = #46eff2
+markers_mfc = #46eff2
+markers_ms = 10
+
+[NGC6334IN_alma11_pvmap_out]
+loc = 2 1
+source = NGC_6334_I_N
+alma = 11
+paval = 250
+label = NGC 6334I(N) ALMA${alma} PA=${paval}${deg}
+pvmap = ${results}/${source}_alma11_rotation.CH3CN_K3.ra260.22849_dec-35.75168.PA${paval}.fits
+ylim = -15 5 km/s
+hlines = -5.0 km/s
+rms = 1.7 mJy/beam
+vmax = 20 mJy/beam
+
+[W33A_alma1a_pvmap_rot]
+loc = 3 0
 source = W33A
-paval = 120
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc1_pvmaps
-pvmap = ${results}/${source}_hmc1_rotation.CH3OH_spw0.ra273.66463_dec-17.86670.PA${paval}.fits
-label = W33A ALMA1 PA=${paval}${deg}
-#compute_ticks = false
-# Vlsr
+alma = 1a
+paval = -30
+pvmap = ${results}/${source}_alma1a_rotation.CH3CN_K3.ra273.66463_dec-17.86670.PA${paval}.fits
 hlines = 37.9 km/s
-# Contours
-vmax = 25 mJy/beam
+rms = 1.3 mJy/beam
+vmax = 40 mJy/beam
+
+[W33A_alma1a_pvedge]
+loc = 3 0
+structured_array = ../results/W33A/c5c8/per_hot_core/alma1a_pvmaps/W33A_alma1a_rotation.CH3CN_K3.ra273.66463_dec-17.86670.PA-30.edge.dat
+marker = o
+color = #46eff2
+linestyle = none
+plot_keys = OFFSET, VRAD
+
+[W33A_alma1a_keplerian_fit]
+loc = 3 0
+function = piecewise_powerlaw
+xrange = -0.9950000000000795 0.9950000000000795 arcsec
+yunit = km/s
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 16.794164217275675 solMass
+model_amplitude = -12.205970295986086
+model_x_0 = 0.039525691699604744
+model_alpha = 0.5
+model_cons = 37.34462684347312
+model_x_mid = 0.010972498082433075
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_cons} ${model_x_mid}
+model_sd_mass = 1.4466281877043492 solMass
+model_vsys = 37.28539294186246
+model_offset0 = 0.01622876626201136
+model_sd_amplitude = 0.5112708420745686
+model_sd_x_0 = 0.0
+model_sd_alpha = 0.0
+model_sd_vsys = 0.0
+model_sd_offset0 = 0.0
+model_info = 1
+
+[W33A_alma1a_unrestricted_fit]
+loc = 3 0
+function = piecewise_powerlaw
+xrange = -0.9950000000000795 0.9950000000000795 arcsec
+yunit = km/s
+sampling = 500
+linestyle = -
+color = #adacac
+model_amplitude = -11.990021171939885
+model_x_0 = 0.039525691699604744
+model_alpha = 0.4673441509801685
+model_cons = 37.34462684347312
+model_x_mid = 0.010972498082433075
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_cons} ${model_x_mid}
+model_vsys = 37.28539294186246
+model_offset0 = 0.01622876626201136
+model_sd_amplitude = 1.0756250852140001
+model_sd_x_0 = 0.0
+model_sd_alpha = 0.06118088081552969
+model_sd_vsys = 0.343779033979197
+model_sd_offset0 = 0.00889964380084104
+model_info = 1
+
+[W33A_alma1a_pvmap_out]
+loc = 3 1
+source = W33A
+alma = 1a
+paval = 60
+pvmap = ${results}/${source}_alma1a_rotation.CH3CN_K3.ra273.66463_dec-17.86670.PA${paval}.fits
+hlines = 37.9 km/s
+rms = 1.3 mJy/beam
+vmax = 40 mJy/beam
 
