--- a/configs/plots/papers/group_pv_maps.2.cfg
+++ b/configs/plots/papers/group_pv_maps.2.cfg
@@ -1,7 +1,7 @@
 [DEFAULT]
 ncols = 2
 nrows = 4
-sharex = false 
+sharex = false
 sharey = false
 styles = maps inferno aspect_auto
 vertical_cbar = false
@@ -19,6 +19,9 @@ xunit = arcsec
 yunit = km/s
 xname = Offset
 yname = Velocity
+name = Intensity
+unit = mJy/beam
+stretch = linear
 nsigma = 3
 contour_linewidth = 0.5
 contour_stretch = log
@@ -26,146 +29,263 @@ xticks_fmt = {x:.1f}
 yticks_fmt = {x:.0f}
 inverty = true
 ticks_color = w
-# Artists
+label = ${source} ALMA${alma} PA=${paval}${deg}
 vlines = 0 arcsec
 vlines_linestyle = :
 vlines_color = #35ff2c
-# Vlsr
 hlines_linestyle = --
 hlines_color = #35ff2c
-# Contours
 self_contours = true
 vmin = 0. mJy/beam
-# Non-standard
-basedir = /Volumes/Pegasus32 R8/dihca
-contdir = ${basedir}/source_data/continuum
+basedir = ..
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma${alma}_pvmaps
 deg = $$^\circ$$
 
-[G11.92_hmc3_pvmap_rot]
+[G11.92_alma1a_pvmap_rot]
 loc = 0 0
 source = G11.92-0.61
-paval = 45
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc3_pvmaps
-pvmap = ${results}/${source}_hmc3_rotation.CH3CN_K3.ra273.49223_dec-18.90452.PA${paval}.fits
-name = Intensity
-unit = mJy/beam
-label = ${source} ALMA3 PA=${paval}${deg}
-stretch = linear
-#compute_ticks = false
-# Vlsr
-hlines = 35.7 km/s
-# Contours
-vmax = 20 mJy/beam
+alma = 1a
+paval = 129
+pvmap = ${results}/${source}_alma1a_rotation.CH3CN_K3.ra273.49213_dec-18.90561.PA${paval}.fits
+hlines = 35.1 km/s
+rms = 1.1 mJy/beam
+vmax = 45 mJy/beam
 
-[G11.92_hmc3_pvmap_out]
+[G11.92-0.61_alma1a_pvedge]
+loc = 0 0
+structured_array = ../results/G11.92-0.61/c5c8/per_hot_core/alma1a_pvmaps/G11.92-0.61_alma1a_rotation.CH3CN_K3.ra273.49213_dec-18.90561.PA129.edge.dat
+marker = o
+color = #46eff2
+linestyle = none
+plot_keys = OFFSET, VRAD
+
+[G11.92-0.61_alma1a_keplerian_fit]
+loc = 0 0
+function = piecewise_powerlaw
+xrange = -0.9900000000000792 0.9900000000000792 arcsec
+yunit = km/s
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 44.46751328093813 solMass
+model_amplitude = -19.86161378765654
+model_x_0 = 0.02967359050445104
+model_alpha = 0.5
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_sd_mass = 3.0050221537082416 solMass
+model_vsys = 35.0718928208667
+model_offset0 = 0.009770749516444886
+model_sd_amplitude = 0.6711032958288893
+model_sd_x_0 = 0.0
+model_sd_alpha = 0.0
+model_sd_vsys = 0.0
+model_sd_offset0 = 0.0
+model_info = 1
+
+[G11.92-0.61_alma1a_unrestricted_fit]
+loc = 0 0
+function = piecewise_powerlaw
+xrange = -0.9900000000000792 0.9900000000000792 arcsec
+yunit = km/s
+sampling = 500
+linestyle = -
+color = #adacac
+model_amplitude = -43.14870301882435
+model_x_0 = 0.02967359050445104
+model_alpha = 0.913509817531812
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_vsys = 35.0718928208667
+model_offset0 = 0.009770749516444886
+model_sd_amplitude = 4.19183432419909
+model_sd_x_0 = 0.0
+model_sd_alpha = 0.05004528940455827
+model_sd_vsys = 0.20156238885738295
+model_sd_offset0 = 0.005728743163311211
+model_info = 1
+
+[G11.92_alma1a_pvmap_out]
 loc = 0 1
 source = G11.92-0.61
-paval = 135
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc3_pvmaps
-pvmap = ${results}/${source}_hmc3_rotation.CH3CN_K3.ra273.49223_dec-18.90452.PA${paval}.fits
-name = Intensity
-unit = mJy/beam
-label = ${source} ALMA3 PA=${paval}${deg}
-stretch = linear
-#compute_ticks = false
-# Vlsr
+alma = 1a
+paval = 219
+pvmap = ${results}/${source}_alma1a_rotation.CH3CN_K3.ra273.49213_dec-18.90561.PA${paval}.fits
+hlines = 35.1 km/s
+rms = 1.1 mJy/beam
+vmax = 45 mJy/beam
+
+[G11.92_alma1b_pvmap_rot]
+loc = 1 0
+source = G11.92-0.61
+alma = 1b
+paval = -15
+pvmap = ${results}/${source}_alma${alma}_rotation.CH3CN_K3.ra273.49220_dec-18.90576.PA${paval}.fits
+xlim = -0.3 0.3 arcsec
+ylim = 27 45 km/s
 hlines = 37 km/s
-# Contours
+rms = 1.1 mJy/beam
+vmax = 20 mJy/beam
+markers = -0.069 arcsec 33.0 km/s
+markers_physframe = data
+markers_marker = ^
+markers_mec = #46eff2
+markers_mfc = #46eff2
+markers_ms = 10
+
+[G11.92_alma1b_pvmap_out]
+loc = 1 1
+source = G11.92-0.61
+alma = 1b
+paval = 75
+pvmap = ${results}/${source}_alma${alma}_rotation.CH3CN_K3.ra273.49220_dec-18.90576.PA${paval}.fits
+xlim = -0.3 0.3 arcsec
+ylim = 27 45 km/s
+hlines = 37 km/s
+rms = 1.1 mJy/beam
+vmax = 20 mJy/beam
+
+[G11.92_alma3_pvmap_rot]
+loc = 2 0
+source = G11.92-0.61
+alma = 3
+paval = 225
+pvmap = ${results}/${source}_alma3_rotation.CH3CN_K3.ra273.49223_dec-18.90452.PA${paval}.fits
+xlim = -0.35 0.42 arcsec
+hlines = 35.7 km/s
+rms = 1.1 mJy/beam
+vmax = 20 mJy/beam
+
+[G11.92-0.61_alma3_pvedge]
+loc = 2 0
+structured_array = ../results/G11.92-0.61/c5c8/per_hot_core/alma3_pvmaps/G11.92-0.61_alma3_rotation.CH3CN_K3.ra273.49223_dec-18.90452.PA225.edge.dat
+marker = o
+color = #46eff2
+linestyle = none
+plot_keys = OFFSET, VRAD
+
+[G11.92-0.61_alma3_keplerian_fit]
+loc = 2 0
+function = piecewise_powerlaw
+xrange = -0.4900000000000392 0.4900000000000392 arcsec
+yunit = km/s
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 11.001263295019477 solMass
+model_amplitude = -9.87903195940451
+model_x_0 = 0.02967359050445104
+model_alpha = 0.5
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_sd_mass = 0.5696947578482806 solMass
+model_vsys = 35.98235303900969
+model_offset0 = -0.006730312863536275
+model_sd_amplitude = 0.2557902928492002
+model_sd_x_0 = 0.0
+model_sd_alpha = 0.0
+model_sd_vsys = 0.0
+model_sd_offset0 = 0.0
+model_info = 1
+
+[G11.92-0.61_alma3_unrestricted_fit]
+loc = 2 0
+function = piecewise_powerlaw
+xrange = -0.4900000000000392 0.4900000000000392 arcsec
+yunit = km/s
+sampling = 500
+linestyle = -
+color = #adacac
+model_amplitude = -10.986120156799391
+model_x_0 = 0.02967359050445104
+model_alpha = 0.5843649913043656
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_vsys = 35.98235303900969
+model_offset0 = -0.006730312863536275
+model_sd_amplitude = 1.1488648059512874
+model_sd_x_0 = 0.0
+model_sd_alpha = 0.0694961825656843
+model_sd_vsys = 0.21141984698446714
+model_sd_offset0 = 0.007587837131194743
+model_info = 1
+
+[G11.92_alma3_pvmap_out]
+loc = 2 1
+source = G11.92-0.61
+alma = 3
+paval = 315
+pvmap = ${results}/${source}_alma3_rotation.CH3CN_K3.ra273.49223_dec-18.90452.PA${paval}.fits
+xlim = -0.35 0.35 arcsec
+hlines = 37 km/s
+rms = 1.1 mJy/beam
 vmax = 20 mJy/beam
 
 [G29_pvmap_rot]
-loc = 1 0
+loc = 3 0
 source = G29.96-0.02
+alma = 1
 paval = 155
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc1_pvmaps
-pvmap = ${results}/${source}_hmc1_rotation.CH3OH_spw0.ra281.51574_dec-2.65622.PA${paval}.fits
-name = Intensity
-unit = mJy/beam
-label = ${source} ALMA1 PA=${paval}${deg}
-stretch = linear
-#compute_ticks = false
-# Vlsr
+pvmap = ${results}/${source}_alma1_rotation.CH3OH_spw0.ra281.51574_dec-2.65622.PA${paval}.fits
 hlines = 97.25 km/s
-# Contours
+rms = 1.4 mJy/beam
 vmax = 45 mJy/beam
+
+[G29.96-0.02_alma1_pvedge]
+loc = 3 0
+structured_array = ../results/G29.96-0.02/c5c8/per_hot_core/alma1_pvmaps/G29.96-0.02_alma1_rotation.CH3OH_spw0.ra281.51574_dec-2.65622.PA155.edge.dat
+marker = o
+color = #46eff2
+linestyle = none
+plot_keys = OFFSET, VRAD
+
+[G29.96-0.02_alma1_keplerian_fit]
+loc = 3 0
+function = piecewise_powerlaw
+xrange = -0.9879999999999696 0.9879999999999696 arcsec
+yunit = km/s
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 44.71755778216386 solMass
+model_amplitude = -19.917377254580362
+model_x_0 = 0.019011406844106463
+model_alpha = 0.5
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_sd_mass = 3.8898571943793154 solMass
+model_vsys = 97.75379862771113
+model_offset0 = 0.015477065210999274
+model_sd_amplitude = 0.8662788963600165
+model_sd_x_0 = 0.0
+model_sd_alpha = 0.0
+model_sd_vsys = 0.0
+model_sd_offset0 = 0.0
+model_info = 1
+
+[G29.96-0.02_alma1_unrestricted_fit]
+loc = 3 0
+function = piecewise_powerlaw
+xrange = -0.9879999999999696 0.9879999999999696 arcsec
+yunit = km/s
+sampling = 500
+linestyle = -
+color = #adacac
+model_amplitude = -36.82099903088366
+model_x_0 = 0.019011406844106463
+model_alpha = 0.771726696889174
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_vsys = 97.75379862771113
+model_offset0 = 0.015477065210999274
+model_sd_amplitude = 6.925648228811628
+model_sd_x_0 = 0.0
+model_sd_alpha = 0.07948667228506973
+model_sd_vsys = 0.29788437131400003
+model_sd_offset0 = 0.010886658973200167
+model_info = 1
 
 [G29_pvmap_out]
-loc = 1 1
-source = G29.96-0.02
-paval = 65
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc1_pvmaps
-pvmap = ${results}/${source}_hmc1_rotation.CH3OH_spw0.ra281.51574_dec-2.65622.PA${paval}.fits
-name = Intensity
-unit = mJy/beam
-label = ${source} ALMA1 PA=${paval}${deg}
-stretch = linear
-#compute_ticks = false
-# Vlsr
-hlines = 97.25 km/s
-# Contours
-vmax = 45 mJy/beam
-
-[G333.12_hmc1_pvmap_rot]
-loc = 2 0
-source = G333.12-0.56
-paval = 135
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc1_pvmaps
-pvmap = ${results}/${source}_hmc1_rotation.CH3OH_spw0.ra245.39740_dec-50.68239.PA${paval}.fits
-name = Intensity
-unit = mJy/beam
-label = ${source} ALMA1 PA=${paval}${deg}
-stretch = linear
-#compute_ticks = false
-# Vlsr
-hlines = -58.47 km/s
-# Contours
-vmax = 27 mJy/beam
-
-[G333.12_hmc1_pvmap_out]
-loc = 2 1
-source = G333.12-0.56
-paval = 45
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc1_pvmaps
-pvmap = ${results}/${source}_hmc1_rotation.CH3OH_spw0.ra245.39740_dec-50.68239.PA${paval}.fits
-name = Intensity
-unit = mJy/beam
-label = ${source} ALMA1 PA=${paval}${deg}
-stretch = linear
-#compute_ticks = false
-# Vlsr
-hlines = -58.47 km/s
-# Contours
-vmax = 27 mJy/beam
-
-[G333.12_hmc2_pvmap_rot]
-loc = 3 0
-source = G333.12-0.56
-paval = 50
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc2_pvmaps
-pvmap = ${results}/${source}_hmc2_rotation.CH3CN_K3.ra245.40106_dec-50.67979.PA${paval}.fits
-name = Intensity
-unit = mJy/beam
-label = ${source} ALMA2 PA=${paval}${deg}
-stretch = linear
-#compute_ticks = false
-# Vlsr
-hlines = -54.1 km/s
-# Contours
-vmax = 35 mJy/beam
-
-[G333.12_hmc2_pvmap_out]
 loc = 3 1
-source = G333.12-0.56
-paval = 140
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc2_pvmaps
-pvmap = ${results}/${source}_hmc2_rotation.CH3CN_K3.ra245.40106_dec-50.67979.PA${paval}.fits
-name = Intensity
-unit = mJy/beam
-label = ${source} ALMA2 PA=${paval}${deg}
-stretch = linear
-#compute_ticks = false
-# Vlsr
-hlines = -54.1 km/s
-# Contours
-vmax = 35 mJy/beam
+source = G29.96-0.02
+alma = 1
+paval = 245
+pvmap = ${results}/${source}_alma1_rotation.CH3OH_spw0.ra281.51574_dec-2.65622.PA${paval}.fits
+hlines = 97.25 km/s
+rms = 1.4 mJy/beam
+vmax = 45 mJy/beam
 
