--- a/configs/plots/papers/group_pv_maps.3.cfg
+++ b/configs/plots/papers/group_pv_maps.3.cfg
@@ -1,7 +1,7 @@
 [DEFAULT]
 ncols = 2
 nrows = 4
-sharex = false 
+sharex = false
 sharey = false
 styles = maps inferno aspect_auto
 vertical_cbar = false
@@ -19,6 +19,9 @@ xunit = arcsec
 yunit = km/s
 xname = Offset
 yname = Velocity
+name = Intensity
+unit = mJy/beam
+stretch = linear
 nsigma = 3
 contour_linewidth = 0.5
 contour_stretch = log
@@ -26,145 +29,219 @@ xticks_fmt = {x:.1f}
 yticks_fmt = {x:.0f}
 inverty = true
 ticks_color = w
-# Artists
+label = ${source} ALMA${alma} PA=${paval}${deg}
 vlines = 0 arcsec
 vlines_linestyle = :
 vlines_color = #35ff2c
-# Vlsr
 hlines_linestyle = --
 hlines_color = #35ff2c
-# Contours
 self_contours = true
 vmin = 0. mJy/beam
-# Non-standard
-basedir = /Volumes/Pegasus32 R8/dihca
-contdir = ${basedir}/source_data/continuum
+basedir = ..
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma${alma}_pvmaps
 deg = $$^\circ$$
 
-[G333.23_hmc2_pvmap_rot]
+[G333.12_alma1_pvmap_rot]
 loc = 0 0
-source = G333.23-0.06
-paval = 40
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc2_pvmaps
-pvmap = ${results}/${source}_hmc2_rotation.CH3CN_K3.ra244.96202_dec-50.25292.PA${paval}.fits
-name = Intensity
-unit = mJy/beam
-label = ${source} ALMA3 PA=${paval}${deg}
-stretch = linear
-#compute_ticks = false
-# Vlsr
-hlines = -87.04 km/s
-# Contours
-vmax = 22 mJy/beam
+source = G333.12-0.56
+alma = 1
+paval = 135
+pvmap = ${results}/${source}_alma1_rotation.CH3OH_spw0.ra245.39740_dec-50.68239.PA${paval}.fits
+xlim = -0.3 0.3 arcsec
+hlines = -58.47 km/s
+rms = 1.8 mJy/beam
+vmax = 27 mJy/beam
 
-[G333.23_hmc2_pvmap_out]
+[G333.12-0.56_alma1_pvedge]
+loc = 0 0
+structured_array = ../results/G333.12-0.56/c5c8/per_hot_core/alma1_pvmaps/G333.12-0.56_alma1_rotation.CH3OH_spw0.ra245.39740_dec-50.68239.PA135.edge.dat
+marker = o
+color = #46eff2
+linestyle = none
+plot_keys = OFFSET, VRAD
+
+[G333.12-0.56_alma1_keplerian_fit]
+loc = 0 0
+function = piecewise_powerlaw
+xrange = -0.4950000000000396 0.4950000000000396 arcsec
+yunit = km/s
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 15.20371956574227 solMass
+model_amplitude = -11.61363135058741
+model_x_0 = 0.030303030303030304
+model_alpha = 0.5
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_sd_mass = 0.553784099116798 solMass
+model_vsys = -58.0738789560714
+model_offset0 = -0.036415671228012564
+model_sd_amplitude = 0.21150891224839746
+model_sd_x_0 = 0.0
+model_sd_alpha = 0.0
+model_sd_vsys = 0.0
+model_sd_offset0 = 0.0
+model_info = 1
+
+[G333.12-0.56_alma1_unrestricted_fit]
+loc = 0 0
+function = piecewise_powerlaw
+xrange = -0.4950000000000396 0.4950000000000396 arcsec
+yunit = km/s
+sampling = 500
+linestyle = -
+color = #adacac
+model_amplitude = -12.454647070207193
+model_x_0 = 0.030303030303030304
+model_alpha = 0.5562764120942513
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_vsys = -58.0738789560714
+model_offset0 = -0.036415671228012564
+model_sd_amplitude = 0.9632040344859385
+model_sd_x_0 = 0.0
+model_sd_alpha = 0.05754433885344073
+model_sd_vsys = 0.2280643693279834
+model_sd_offset0 = 0.006517855044369618
+model_info = 1
+
+[G333.12_alma1_pvmap_out]
 loc = 0 1
+source = G333.12-0.56
+alma = 1
+paval = 225
+pvmap = ${results}/${source}_alma1_rotation.CH3OH_spw0.ra245.39740_dec-50.68239.PA${paval}.fits
+xlim = -0.3 0.3 arcsec
+hlines = -58.47 km/s
+rms = 1.8 mJy/beam
+vmax = 27 mJy/beam
+
+[G333.12_alma2_pvmap_rot]
+loc = 1 0
+source = G333.12-0.56
+alma = 2
+paval = 90
+pvmap = ${results}/${source}_alma2_rotation.CH3CN_K3.ra245.40106_dec-50.67979.PA${paval}.fits
+xlim = -0.38 0.18 arcsec
+hlines = -54.1 km/s
+rms = 1.7 mJy/beam
+vmax = 35 mJy/beam
+markers = 0.018 arcsec -50.0 km/s, -0.17 arcsec -59.4 km/s
+markers_physframe = data
+markers_marker = v, ^
+markers_mec = #46eff2
+markers_mfc = #46eff2
+markers_ms = 10
+
+[G333.12_alma2_pvmap_out]
+loc = 1 1
+source = G333.12-0.56
+alma = 2
+paval = 180
+pvmap = ${results}/${source}_alma2_rotation.CH3CN_K3.ra245.40106_dec-50.67979.PA${paval}.fits
+xlim = -0.3 0.3 arcsec
+hlines = -54.1 km/s
+rms = 1.7 mJy/beam
+vmax = 35 mJy/beam
+
+[G333.23_alma3_pvmap_rot]
+loc = 2 0
 source = G333.23-0.06
-paval = 130
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc2_pvmaps
-pvmap = ${results}/${source}_hmc2_rotation.CH3CN_K3.ra244.96202_dec-50.25292.PA${paval}.fits
-name = Intensity
-unit = mJy/beam
-label = ${source} ALMA3 PA=${paval}${deg}
-stretch = linear
-#compute_ticks = false
-# Vlsr
+alma = 3
+paval = 220
+pvmap = ${results}/${source}_alma3_rotation.CH3CN_K3.ra244.96202_dec-50.25292.PA${paval}.fits
+xlim = -0.4 0.4 arcsec
 hlines = -87.04 km/s
-# Contours
+rms = 1.1 mJy/beam
 vmax = 22 mJy/beam
 
-[G333.46_hmc1_pvmap_rot]
-loc = 1 0
-source = G333.46-0.16
-paval = 130
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc1_pvmaps
-pvmap = ${results}/${source}_hmc1_rotation.CH3OH_spw0.ra245.33407_dec-50.16288.PA${paval}.fits
-name = Intensity
-unit = mJy/beam
-label = ${source} ALMA1 PA=${paval}${deg}
-stretch = linear
-#compute_ticks = false
-# Vlsr
-hlines = -43.55 km/s
-# Contours
-vmax = 45 mJy/beam
-
-[G333.46_hmc1_pvmap_out]
-loc = 1 1
-source = G333.46-0.16
-paval = 40
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc1_pvmaps
-pvmap = ${results}/${source}_hmc1_rotation.CH3OH_spw0.ra245.33407_dec-50.16288.PA${paval}.fits
-name = Intensity
-unit = mJy/beam
-label = ${source} ALMA1 PA=${paval}${deg}
-stretch = linear
-#compute_ticks = false
-# Vlsr
-hlines = -43.55 km/s
-# Contours
-vmax = 45 mJy/beam
-
-[G333.46_hmc2_pvmap_rot]
+[G333.23-0.06_alma3_pvedge]
 loc = 2 0
-source = G333.46-0.16
-paval = 130
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc2_pvmaps
-pvmap = ${results}/${source}_hmc2_rotation.CH3CN_K3.ra245.33405_dec-50.16358.PA${paval}.fits
-name = Intensity
-unit = mJy/beam
-label = ${source} ALMA7 PA=${paval}${deg}
-stretch = linear
-#compute_ticks = false
-# Vlsr
-hlines = -43.2 km/s
-# Contours
-vmax = 31 mJy/beam
+structured_array = ../results/G333.23-0.06/c5c8/per_hot_core/alma3_pvmaps/G333.23-0.06_alma3_rotation.CH3CN_K3.ra244.96202_dec-50.25292.PA220.edge.dat
+marker = o
+color = #46eff2
+linestyle = none
+plot_keys = OFFSET, VRAD
 
-[G333.46_hmc2_pvmap_out]
+[G333.23-0.06_alma3_keplerian_fit]
+loc = 2 0
+function = piecewise_powerlaw
+xrange = -0.4950000000000396 0.4950000000000396 arcsec
+yunit = km/s
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 11.40865048432779 solMass
+model_amplitude = -10.06028417786803
+model_x_0 = 0.019230769230769232
+model_alpha = 0.5
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_sd_mass = 1.01310012340932 solMass
+model_vsys = -87.49187541341088
+model_offset0 = 0.02790983464792463
+model_sd_amplitude = 0.4466818909095302
+model_sd_x_0 = 0.0
+model_sd_alpha = 0.0
+model_sd_vsys = 0.0
+model_sd_offset0 = 0.0
+model_info = 1
+
+[G333.23-0.06_alma3_unrestricted_fit]
+loc = 2 0
+function = piecewise_powerlaw
+xrange = -0.4950000000000396 0.4950000000000396 arcsec
+yunit = km/s
+sampling = 500
+linestyle = -
+color = #adacac
+model_amplitude = -17.777338785559206
+model_x_0 = 0.019230769230769232
+model_alpha = 0.8643038392815027
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_vsys = -87.49187541341088
+model_offset0 = 0.02790983464792463
+model_sd_amplitude = 2.053015482173104
+model_sd_x_0 = 0.0
+model_sd_alpha = 0.06987538714240808
+model_sd_vsys = 0.1708533753375274
+model_sd_offset0 = 0.004107077591354643
+model_info = 1
+
+[G333.23_alma3_pvmap_out]
 loc = 2 1
-source = G333.46-0.16
-paval = 40
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc2_pvmaps
-pvmap = ${results}/${source}_hmc2_rotation.CH3CN_K3.ra245.33405_dec-50.16358.PA${paval}.fits
-name = Intensity
-unit = mJy/beam
-label = ${source} ALMA7 PA=${paval}${deg}
-stretch = linear
-#compute_ticks = false
-# Vlsr
-hlines = -43.2 km/s
-# Contours
-vmax = 31 mJy/beam
+source = G333.23-0.06
+alma = 3
+paval = 310
+pvmap = ${results}/${source}_alma${alma}_rotation.CH3CN_K3.ra244.96202_dec-50.25292.PA${paval}.fits
+xlim = -0.32 0.32 arcsec
+hlines = -87.04 km/s
+rms = 1.1 mJy/beam
+vmax = 22 mJy/beam
 
-[G335.579_hmc1_pvmap_rot]
+[G333.46_alma1_pvmap_rot]
 loc = 3 0
-source = G335.579-0.272
-paval = 90
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc1_pvmaps
-pvmap = ${results}/${source}_hmc1_rotation.CH3OH_spw0.ra247.74486_dec-48.73163.PA${paval}.fits
-name = Intensity
-unit = mJy/beam
-label = ${source} ALMA1 PA=${paval}${deg}
-stretch = linear
-#compute_ticks = false
-# Vlsr
-hlines = -46.9 km/s
-# Contours
-vmax = 25 mJy/beam
+source = G333.46-0.16
+alma = 1
+paval = 130
+pvmap = ${results}/${source}_alma1_rotation.CH3OH_spw0.ra245.33407_dec-50.16288.PA${paval}.fits
+xlim = -0.45 0.52 arcsec
+hlines = -43.55 km/s
+rms = 1.9 mJy/beam
+vmax = 45 mJy/beam
+markers = 0.33 arcsec -39.7 km/s, -0.19 arcsec -48.5 km/s
+markers_physframe = data
+markers_marker = v, ^
+markers_mec = #46eff2
+markers_mfc = #46eff2
+markers_ms = 10
 
-[G335.579_hmc1_pvmap_out]
+[G333.46_alma1_pvmap_out]
 loc = 3 1
-source = G335.579-0.272
-paval = 0
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc1_pvmaps
-pvmap = ${results}/${source}_hmc1_rotation.CH3OH_spw0.ra247.74486_dec-48.73163.PA${paval}.fits
-name = Intensity
-unit = mJy/beam
-label = ${source} ALMA1 PA=${paval}${deg}
-stretch = linear
-#compute_ticks = false
-# Vlsr
-hlines = -46.9 km/s
-# Contours
-vmax = 25 mJy/beam
+source = G333.46-0.16
+alma = 1
+paval = 220
+pvmap = ${results}/${source}_alma1_rotation.CH3OH_spw0.ra245.33407_dec-50.16288.PA${paval}.fits
+xlim = -0.45 0.45 arcsec
+hlines = -43.55 km/s
+rms = 1.9 mJy/beam
+vmax = 45 mJy/beam
+
