--- a/configs/plots/papers/group_pv_maps.8.cfg
+++ b/configs/plots/papers/group_pv_maps.8.cfg
@@ -1,7 +1,7 @@
 [DEFAULT]
 ncols = 2
 nrows = 4
-sharex = false 
+sharex = false
 sharey = false
 styles = maps inferno aspect_auto
 vertical_cbar = false
@@ -19,6 +19,9 @@ xunit = arcsec
 yunit = km/s
 xname = Offset
 yname = Velocity
+name = Intensity
+unit = mJy/beam
+stretch = linear
 nsigma = 3
 contour_linewidth = 0.5
 contour_stretch = log
@@ -26,125 +29,233 @@ xticks_fmt = {x:.1f}
 yticks_fmt = {x:.0f}
 inverty = true
 ticks_color = w
-name = Intensity
-unit = mJy/beam
-stretch = linear
-# Artists
+label = ${source} ALMA${alma} PA=${paval}${deg}
 vlines = 0 arcsec
 vlines_linestyle = :
 vlines_color = #35ff2c
-# Vlsr
 hlines_linestyle = --
 hlines_color = #35ff2c
-# Contours
 self_contours = true
 vmin = 0. mJy/beam
-# Non-standard
-basedir = /Volumes/Pegasus32 R8/dihca
-contdir = ${basedir}/source_data/continuum
+basedir = ..
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma${alma}_pvmaps
 deg = $$^\circ$$
 
-[I18182_hmc2_pvmap_rot]
+[I18089_alma1_pvmap_rot]
 loc = 0 0
-source = IRAS_18182-1433
-paval = 40
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc2_pvmaps
-pvmap = ${results}/${source}_hmc2_rotation.CH3CN_K3.ra275.28771_dec-14.52994.PA${paval}.fits
-label = IRAS 18182-1433 ALMA1 PA=${paval}${deg}
-#compute_ticks = false
-# Vlsr
-hlines = 62.78 km/s
-# Contours
-vmax = 11 mJy/beam
+source = IRAS_180891732
+alma = 1
+paval = 245
+label = IRAS 18089-1732 ALMA${alma} PA=${paval}${deg}
+pvmap = ${results}/${source}_alma1_rotation.CH3CN_K3.ra272.96439_dec-17.52467.PA${paval}.fits
+hlines = 32.88 km/s
+rms = 1.6 mJy/beam
+vmax = 52 mJy/beam
 
-[I18182_hmc2_pvmap_out]
+[IRAS_180891732_alma1_pvedge]
+loc = 0 0
+structured_array = ../results/IRAS_180891732/c5c8/per_hot_core/alma1_pvmaps/IRAS_180891732_alma1_rotation.CH3CN_K3.ra272.96439_dec-17.52467.PA245.edge.dat
+marker = o
+color = #46eff2
+linestyle = none
+plot_keys = OFFSET, VRAD
+
+[IRAS_180891732_alma1_keplerian_fit]
+loc = 0 0
+function = piecewise_powerlaw
+xrange = -0.9950000000000795 0.9950000000000795 arcsec
+yunit = km/s
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 27.57751948015581 solMass
+model_amplitude = -15.641223112117661
+model_x_0 = 0.042735042735042736
+model_alpha = 0.5
+model_cons = 33.44741101246516
+model_x_mid = -0.0030167204600013613
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_sd_mass = 1.1442286837862192 solMass
+model_vsys = 33.506361623774524
+model_offset0 = -0.010368721978890032
+model_sd_amplitude = 0.3244877797523337
+model_sd_x_0 = 0.0
+model_sd_alpha = 0.0
+model_sd_vsys = 0.0
+model_sd_offset0 = 0.0
+model_info = 1
+
+[IRAS_180891732_alma1_unrestricted_fit]
+loc = 0 0
+function = piecewise_powerlaw
+xrange = -0.9950000000000795 0.9950000000000795 arcsec
+yunit = km/s
+sampling = 500
+linestyle = -
+color = #adacac
+model_amplitude = -15.289971516231018
+model_x_0 = 0.042735042735042736
+model_alpha = 0.4842850674151176
+model_cons = 33.44741101246516
+model_x_mid = -0.0030167204600013613
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_vsys = 33.506361623774524
+model_offset0 = -0.010368721978890032
+model_sd_amplitude = 0.8245116559757866
+model_sd_x_0 = 0.0
+model_sd_alpha = 0.03470821050829428
+model_sd_vsys = 0.21414580583624787
+model_sd_offset0 = 0.00813284289450689
+model_info = 1
+
+[I18089_alma1_pvmap_out]
 loc = 0 1
-source = IRAS_18182-1433
-paval = 130
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc2_pvmaps
-pvmap = ${results}/${source}_hmc2_rotation.CH3CN_K3.ra275.28771_dec-14.52994.PA${paval}.fits
-label = IRAS 18182-1433 ALMA1 PA=${paval}${deg}
-#compute_ticks = false
-# Vlsr
-hlines = 62.78 km/s
-# Contours
-vmax = 11 mJy/beam
+source = IRAS_180891732
+alma = 1
+paval = 335
+label = IRAS 18089-1732 ALMA${alma} PA=${paval}${deg}
+pvmap = ${results}/${source}_alma1_rotation.CH3CN_K3.ra272.96439_dec-17.52467.PA${paval}.fits
+hlines = 32.88 km/s
+rms = 1.6 mJy/beam
+vmax = 52 mJy/beam
 
-[I18182_hmc1_pvmap_rot]
+[I18089_alma3_pvmap_rot]
 loc = 1 0
-source = IRAS_18182-1433
-paval = 180
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc1_pvmaps
-pvmap = ${results}/${source}_hmc1_rotation.CH3CN_K3.ra275.28741_dec-14.52989.PA${paval}.fits
-label = IRAS 18182-1433 ALMA2 PA=${paval}${deg}
-#compute_ticks = false
-# Vlsr
-hlines = 60.64 km/s
-# Contours
-vmax = 15 mJy/beam
+source = IRAS_180891732
+alma = 3
+paval = 315
+label = IRAS 18089-1732 ALMA${alma} PA=${paval}${deg}
+pvmap = ${results}/${source}_alma3_rotation.CH3CN_K3.ra272.96417_dec-17.52498.PA${paval}.fits
+hlines = 33.02 km/s
+rms = 1.6 mJy/beam
+vmax = 35 mJy/beam
 
-[I18182_hmc1_pvmap_out]
+[IRAS_180891732_alma3_pvedge]
+loc = 1 0
+structured_array = ../results/IRAS_180891732/c5c8/per_hot_core/alma3_pvmaps/IRAS_180891732_alma3_rotation.CH3CN_K3.ra272.96417_dec-17.52498.PA315.edge.dat
+marker = o
+color = #46eff2
+linestyle = none
+plot_keys = OFFSET, VRAD
+
+[IRAS_180891732_alma3_keplerian_fit]
+loc = 1 0
+function = piecewise_powerlaw
+xrange = -0.4950000000000396 0.4950000000000396 arcsec
+yunit = km/s
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 7.455751756722471 solMass
+model_amplitude = -8.132776374474883
+model_x_0 = 0.042735042735042736
+model_alpha = 0.5
+model_cons = 33.631590076186484
+model_x_mid = -0.004879526196814563
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_sd_mass = 0.6481333999560686 solMass
+model_vsys = 33.2131891121867
+model_offset0 = 0.0008601822180362316
+model_sd_amplitude = 0.3534937974509473
+model_sd_x_0 = 0.0
+model_sd_alpha = 0.0
+model_sd_vsys = 0.0
+model_sd_offset0 = 0.0
+model_info = 1
+
+[IRAS_180891732_alma3_unrestricted_fit]
+loc = 1 0
+function = piecewise_powerlaw
+xrange = -0.4950000000000396 0.4950000000000396 arcsec
+yunit = km/s
+sampling = 500
+linestyle = -
+color = #adacac
+model_amplitude = -10.675471260352825
+model_x_0 = 0.042735042735042736
+model_alpha = 0.7991581577000633
+model_cons = 33.631590076186484
+model_x_mid = -0.004879526196814563
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_vsys = 33.2131891121867
+model_offset0 = 0.0008601822180362316
+model_sd_amplitude = 1.0273836083970318
+model_sd_x_0 = 0.0
+model_sd_alpha = 0.09141316210766491
+model_sd_vsys = 0.2687906933277182
+model_sd_offset0 = 0.006757692612479211
+model_info = 1
+
+[I18089_alma3_pvmap_out]
 loc = 1 1
-source = IRAS_18182-1433
-paval = 90
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc1_pvmaps
-pvmap = ${results}/${source}_hmc1_rotation.CH3CN_K3.ra275.28741_dec-14.52989.PA${paval}.fits
-label = IRAS 18182-1433 ALMA2 PA=${paval}${deg}
-#compute_ticks = false
-# Vlsr
-hlines = 60.64 km/s
-# Contours
-vmax = 15 mJy/beam
+source = IRAS_180891732
+alma = 3
+paval = 45
+label = IRAS 18089-1732 ALMA${alma} PA=${paval}${deg}
+pvmap = ${results}/${source}_alma3_rotation.CH3CN_K3.ra272.96417_dec-17.52498.PA${paval}.fits
+hlines = 33.02 km/s
+rms = 1.6 mJy/beam
+vmax = 35 mJy/beam
 
-[I18182_hmc3_pvmap_rot]
+[I18182_alma1_pvmap_rot]
 loc = 2 0
+xticks_fmt = {x:.2f}
 source = IRAS_18182-1433
-paval = 10
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc3_pvmaps
-pvmap = ${results}/${source}_hmc3_rotation.CH3CN_K3.ra275.28802_dec-14.53017.PA${paval}.fits
-label = IRAS 18182-1433 ALMA3 PA=${paval}${deg}
-#compute_ticks = false
-# Vlsr
-hlines = 61.12 km/s
-# Contours
-vmax = 40 mJy/beam
+alma = 1
+paval = 40
+label = IRAS 18182-1433 ALMA${alma} PA=${paval}${deg}
+pvmap = ${results}/${source}_alma1_rotation.CH3CN_K3.ra275.28771_dec-14.52994.PA${paval}.fits
+xlim = -0.2 0.15 arcsec
+hlines = 62.78 km/s
+rms = 1.4 mJy/beam
+vmax = 11 mJy/beam
+markers = 0.017 arcsec 66.3 km/s, -0.077 arcsec 61.0 km/s
+markers_physframe = data
+markers_marker = v, ^
+markers_mec = #46eff2
+markers_mfc = #46eff2
+markers_ms = 10
 
-[I18182_hmc3_pvmap_out]
+[I18182_alma1_pvmap_out]
 loc = 2 1
 source = IRAS_18182-1433
-paval = 100
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc3_pvmaps
-pvmap = ${results}/${source}_hmc3_rotation.CH3CN_K3.ra275.28802_dec-14.53017.PA${paval}.fits
-label = IRAS 18182-1433 ALMA3 PA=${paval}${deg}
-#compute_ticks = false
-# Vlsr
-hlines = 61.12 km/s
-# Contours
-vmax = 40 mJy/beam
+alma = 1
+paval = 130
+label = IRAS 18182-1433 ALMA${alma} PA=${paval}${deg}
+pvmap = ${results}/${source}_alma1_rotation.CH3CN_K3.ra275.28771_dec-14.52994.PA${paval}.fits
+xlim = -0.18 0.18 arcsec
+hlines = 62.78 km/s
+rms = 1.4 mJy/beam
+vmax = 11 mJy/beam
 
-[I18182_hmc4_pvmap_rot]
+[I18182_alma2_pvmap_rot]
 loc = 3 0
+xticks_fmt = {x:.2f}
 source = IRAS_18182-1433
-paval = 40
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc4_pvmaps
-pvmap = ${results}/${source}_hmc4_rotation.CH3CN_K3.ra275.28757_dec-14.52998.PA${paval}.fits
-label = IRAS 18182-1433 ALMA5 PA=${paval}${deg}
-#compute_ticks = false
-# Vlsr
-hlines = 61.12 km/s
-# Contours
+alma = 2
+paval = 0
+label = IRAS 18182-1433 ALMA${alma} PA=${paval}${deg}
+pvmap = ${results}/${source}_alma2_rotation.CH3CN_K3.ra275.28741_dec-14.52989.PA${paval}.fits
+xlim = -0.15 0.2 arcsec
+hlines = 60.64 km/s
+rms = 1.4 mJy/beam
 vmax = 15 mJy/beam
+markers = 0.077 arcsec 63.7 km/s, -0.035 arcsec 57.1 km/s
+markers_physframe = data
+markers_marker = v, ^
+markers_mec = #46eff2
+markers_mfc = #46eff2
+markers_ms = 10
 
-[I18182_hmc4_pvmap_out]
+[I18182_alma2_pvmap_out]
 loc = 3 1
 source = IRAS_18182-1433
-paval = 130
-results = ${basedir}/results/${source}/c5c8/per_hot_core/hmc4_pvmaps
-pvmap = ${results}/${source}_hmc4_rotation.CH3CN_K3.ra275.28757_dec-14.52998.PA${paval}.fits
-label = IRAS 18182-1433 ALMA5 PA=${paval}${deg}
-#compute_ticks = false
-# Vlsr
-hlines = 61.12 km/s
-# Contours
+alma = 2
+paval = 90
+label = IRAS 18182-1433 ALMA${alma} PA=${paval}${deg}
+pvmap = ${results}/${source}_alma2_rotation.CH3CN_K3.ra275.28741_dec-14.52989.PA${paval}.fits
+xlim = -0.18 0.22 arcsec
+hlines = 60.64 km/s
+rms = 1.4 mJy/beam
 vmax = 15 mJy/beam
 
